Import of FAYLAND/POD2-CN-0.02 from CPAN.
gitpan-cpan-distribution: POD2-CN
gitpan-cpan-version:      0.02
gitpan-cpan-path:         FAYLAND/POD2-CN-0.02.tar.gz
gitpan-cpan-author:       FAYLAND
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for POD2-CN
 
+0.02    2007/9//8
+        fix encoding problem
+
 0.01    2005/11/04
         First version, released on an unsuspecting world.
 
