--- a/lib/POD2/CN/perlcheat.pod
+++ b/lib/POD2/CN/perlcheat.pod
@@ -1,106 +1,108 @@
+=encoding utf8
+
 =head1 NAME
 
-perlcheat - Perl 5 ËÙ²é
+perlcheat - Perl 5 é€ŸæŸ¥
 
 =head1 DESCRIPTION
 
-Õâ¸ö¡°ËÙ²é¡±Êµ¼ÊÉÏÊÇÒ»¸öÕæÕıµÄ¡°ÊÖ²á¡±£­£­°ÍÕÆ´óµÄÒ»¸öĞ¡²á×Ó£¬ÓÃÀ´¼ÇÂ¼
-Ò»Ğ©¿ªÊ¼Ñ§Ï° Perl ±à³ÌÊ±Óöµ½µÄÖªÊ¶µã¡£Ëü²¢²»ÊÇÃæÃæ¾ãµ½µÄ£¬µ«ÊÇ¸²¸ÇÁËÔ¼
-194 ¸ö Perl ÌØĞÔ¡£
+è¿™ä¸ªâ€œé€ŸæŸ¥â€å®é™…ä¸Šæ˜¯ä¸€ä¸ªçœŸæ­£çš„â€œæ‰‹å†Œâ€ï¼ï¼å·´æŒå¤§çš„ä¸€ä¸ªå°å†Œå­ï¼Œç”¨æ¥è®°å½•
+ä¸€äº›å¼€å§‹å­¦ä¹  Perl ç¼–ç¨‹æ—¶é‡åˆ°çš„çŸ¥è¯†ç‚¹ã€‚å®ƒå¹¶ä¸æ˜¯é¢é¢ä¿±åˆ°çš„ï¼Œä½†æ˜¯è¦†ç›–äº†çº¦
+194 ä¸ª Perl ç‰¹æ€§ã€‚
 
-=head2 ËÙ²é
+=head2 é€ŸæŸ¥
 
-½¨ÒéÄã°ÑËü´òÓ¡³öÀ´ ^_^ ÌûÔÚÇ½ÉÏ£¬Èç¹ûÒª¿¼ÊÔµÄ»°£¬»¹¿ÉÒÔ²ØÔÚĞäÍ²Àï ^_^
+å»ºè®®ä½ æŠŠå®ƒæ‰“å°å‡ºæ¥ ^_^ å¸–åœ¨å¢™ä¸Šï¼Œå¦‚æœè¦è€ƒè¯•çš„è¯ï¼Œè¿˜å¯ä»¥è—åœ¨è¢–ç­’é‡Œ ^_^
 
-  ÉÏÏÂÎÄ  ±äÁ¿ÃûÇ°×º           Êı×é          ¹şÏ£±í
-  void      $scalar    Õû¸ö:   @array        %hash
-  scalar    @array     ÇĞÆ¬:   @array[0, 2]  @hash{'a', 'b'}
-  list      %hash      ÔªËØ:   $array[0]     $hash{'a'}
+  ä¸Šä¸‹æ–‡  å˜é‡åå‰ç¼€           æ•°ç»„          å“ˆå¸Œè¡¨
+  void      $scalar    æ•´ä¸ª:   @array        %hash
+  scalar    @array     åˆ‡ç‰‡:   @array[0, 2]  @hash{'a', 'b'}
+  list      %hash      å…ƒç´ :   $array[0]     $hash{'a'}
             &sub
-            *glob    ±êÁ¿ÖµÀàĞÍ
-                     ÊıÖµ, ×Ö·û´®, ÒıÓÃ, glob, undef
-  ÒıÓÃ
-  \     ÒıÓÃ            $$foo[1]       µÈĞ§ÓÚ $foo->[1]
-  $@%&* ½âÒıÓÃ          $$foo{bar}     µÈĞ§ÓÚ $foo->{bar}
-  []    ÄäÃûÊı×é        ${$$foo[1]}[2] µÈĞ§ÓÚ $foo->[1]->[2]
-  {}    ÄäÃû¹şÏ£±í      ${$$foo[1]}[2] µÈĞ§ÓÚ $foo->[1][2]
-  \()   Ò»ÁĞÒıÓÃ
-                          ÊıÖµ VS ×Ö·û´®      ÓĞÓÃµÄÁ´½Ó
-  ²Ù×÷·ûÓÅÏÈ              =          =        perl.plover.com
+            *glob    æ ‡é‡å€¼ç±»å‹
+                     æ•°å€¼, å­—ç¬¦ä¸², å¼•ç”¨, glob, undef
+  å¼•ç”¨
+  \     å¼•ç”¨            $$foo[1]       ç­‰æ•ˆäº $foo->[1]
+  $@%&* è§£å¼•ç”¨          $$foo{bar}     ç­‰æ•ˆäº $foo->{bar}
+  []    åŒ¿åæ•°ç»„        ${$$foo[1]}[2] ç­‰æ•ˆäº $foo->[1]->[2]
+  {}    åŒ¿åå“ˆå¸Œè¡¨      ${$$foo[1]}[2] ç­‰æ•ˆäº $foo->[1][2]
+  \()   ä¸€åˆ—å¼•ç”¨
+                          æ•°å€¼ VS å­—ç¬¦ä¸²      æœ‰ç”¨çš„é“¾æ¥
+  æ“ä½œç¬¦ä¼˜å…ˆ              =          =        perl.plover.com
   ->                      +          .        search.cpan.org
   ++ --                   == !=      eq ne         cpan.org
   **                      < > <= >=  lt gt le ge   pm.org
   ! ~ \ u+ u-             <=>        cmp           tpj.com
   =~ !~                                            perldoc.com
-  * / % x                 Óï·¨
+  * / % x                 è¯­æ³•
   + - .                   for    (LIST) { }, for (a;b;c) { }
   << >>                   while  ( ) { }, until ( ) { }
-  ÃüÃûÒ»Ôª²Ù×÷·û          if     ( ) { } elsif ( ) { } else { }
+  å‘½åä¸€å…ƒæ“ä½œç¬¦          if     ( ) { } elsif ( ) { } else { }
   < > <= >= lt gt le ge   unless ( ) { } elsif ( ) { } else { }
-  == != <=> eq ne cmp     foreach ÈÎºÎÊ±ºò¶¼¿ÉÒÔËõĞ´Îª for
+  == != <=> eq ne cmp     foreach ä»»ä½•æ—¶å€™éƒ½å¯ä»¥ç¼©å†™ä¸º for
   &
-  | ^              ÕıÔò±í´ïÊ½Ôª×Ö·û           ÕıÔò±í´ïÊ½ĞŞÊÎ·û
-  &&               ^     ×Ö·û´®¿ªÊ¼           /i ´óĞ¡Ğ´²»Ãô¸Ğ
-  ||               $     ×Ö·û´®½áÊø(\nÖ®Ç°)   /m ^$ ±íÊ¾ĞĞÊ×ĞĞÄ©
-  .. ...           +     Ò»¸ö»ò¶à¸ö           /s . °üÀ¨ \n
-  ?:               *     Áã¸ö»ò¶à¸ö           /x ºöÂÔËùÓĞ¿Õ°×
-  = += -= *= µÈµÈ  ?     Áã¸ö»òÒ»¸ö           /g È«¾Ö£¨ÖØ¸´£©
-  , =>             {3,7} ÖØ¸´ 3 µ½ 7 ´Î
-  ÁĞ±í²Ù×÷·û       ()    ²¶»ñ             ÕıÔò±í´ïÊ½×Ö·ûÀà
-  not              (?:)  ²»²¶»ñ           .  == [^\n]
-  and              []    ×Ö·ûÀà»ò¼¯ºÏ     \s == [\x20\f\t\r\n]
-  or xor           |     ¶şÑ¡Ò»           \w == [A-Za-z0-9_]
-                   \b    µ¥´Ê±ß½ç         \d == [0-9]
-                   \z    ×Ö·û´®½áÎ²       \S, \W and \D negate
-  Ò»¶¨ÒªÕâÑù×ö£¡
-  use strict;        ²»ÒªÕâÑù×ö£¡     ÓĞÓÃµÄÁ´½Ó
+  | ^              æ­£åˆ™è¡¨è¾¾å¼å…ƒå­—ç¬¦           æ­£åˆ™è¡¨è¾¾å¼ä¿®é¥°ç¬¦
+  &&               ^     å­—ç¬¦ä¸²å¼€å§‹           /i å¤§å°å†™ä¸æ•æ„Ÿ
+  ||               $     å­—ç¬¦ä¸²ç»“æŸ(\nä¹‹å‰)   /m ^$ è¡¨ç¤ºè¡Œé¦–è¡Œæœ«
+  .. ...           +     ä¸€ä¸ªæˆ–å¤šä¸ª           /s . åŒ…æ‹¬ \n
+  ?:               *     é›¶ä¸ªæˆ–å¤šä¸ª           /x å¿½ç•¥æ‰€æœ‰ç©ºç™½
+  = += -= *= ç­‰ç­‰  ?     é›¶ä¸ªæˆ–ä¸€ä¸ª           /g å…¨å±€ï¼ˆé‡å¤ï¼‰
+  , =>             {3,7} é‡å¤ 3 åˆ° 7 æ¬¡
+  åˆ—è¡¨æ“ä½œç¬¦       ()    æ•è·             æ­£åˆ™è¡¨è¾¾å¼å­—ç¬¦ç±»
+  not              (?:)  ä¸æ•è·           .  == [^\n]
+  and              []    å­—ç¬¦ç±»æˆ–é›†åˆ     \s == [\x20\f\t\r\n]
+  or xor           |     äºŒé€‰ä¸€           \w == [A-Za-z0-9_]
+                   \b    å•è¯è¾¹ç•Œ         \d == [0-9]
+                   \z    å­—ç¬¦ä¸²ç»“å°¾       \S, \W and \D negate
+  ä¸€å®šè¦è¿™æ ·åšï¼
+  use strict;        ä¸è¦è¿™æ ·åšï¼     æœ‰ç”¨çš„é“¾æ¥
   use warnings;      "$foo"           perl.com
   my $var;           $$variable_name  perlmonks.org
   open() or die $!;  `$userinput`     use.perl.org
   use Modules;       /$userinput/     perl.apache.org
                                       parrotcode.org
-  º¯Êı·µ»ØÖµ
-  stat      localtime    caller         ÌØÊâ±äÁ¿
-   0 dev    0 Ãë(0-59)   0 °üÃû         $_    Ä¬ÈÏ±äÁ¿
-   1 ino    1 ·Ö(0-59)   1 ÎÄ¼şÃû       $0    ³ÌĞòÃû³Æ
-   2 mode   2 Ê±(0-23)   2 ĞĞºÅ         $/    ÊäÈë·Ö¸ô·û
-   3 nlink  3 ÈÕ(1-30)   3 µ÷ÓÃ×Ó³ÌĞò   $\    Êä³ö·Ö¸ô·û
-   4 uid    4 ÔÂ-1(0-11) 4 ÓĞÃ»ÓĞ²ÎÊı£¿ $|    ¾ä±ú²»»º³å
-   5 gid    5 Äê-1900    5 ÏëÒªÊı×éÂğ£¿ $!    ÏµÍ³´íÎóĞÅÏ¢
-   6 rdev   6 ĞÇÆÚ¼¸     6 eval ÎÄ±¾    $@    eval ´íÎóĞÅÏ¢
-   7 size   7 µ±ÄêµÚ¼¸Ìì 7 is_require   $$    µ±Ç°½ø³ÌºÅ
-   8 atime  8 ÊÇ·ñÏÄÁîÊ± 8 hints        $.    µ±Ç°¾ä±úµ±Ç°ĞĞºÅ
-   9 mtime               9 bitmask      @ARGV ÃüÁîĞĞ²ÎÊı
-  10 ctime  just use                    @INC  Ä£¿éËÑË÷Â·¾¶
-  11 blksz  POSIX::      3..9 Ö»ÓĞ´ø²Î  @_    ×Ó³ÌĞò²ÎÊı
-  12 blcks  strftime!    Êıµ÷ÓÃÊ±ÓĞĞ§   %ENV  »·¾³±äÁ¿
+  å‡½æ•°è¿”å›å€¼
+  stat      localtime    caller         ç‰¹æ®Šå˜é‡
+   0 dev    0 ç§’(0-59)   0 åŒ…å         $_    é»˜è®¤å˜é‡
+   1 ino    1 åˆ†(0-59)   1 æ–‡ä»¶å       $0    ç¨‹åºåç§°
+   2 mode   2 æ—¶(0-23)   2 è¡Œå·         $/    è¾“å…¥åˆ†éš”ç¬¦
+   3 nlink  3 æ—¥(1-30)   3 è°ƒç”¨å­ç¨‹åº   $\    è¾“å‡ºåˆ†éš”ç¬¦
+   4 uid    4 æœˆ-1(0-11) 4 æœ‰æ²¡æœ‰å‚æ•°ï¼Ÿ $|    å¥æŸ„ä¸ç¼“å†²
+   5 gid    5 å¹´-1900    5 æƒ³è¦æ•°ç»„å—ï¼Ÿ $!    ç³»ç»Ÿé”™è¯¯ä¿¡æ¯
+   6 rdev   6 æ˜ŸæœŸå‡      6 eval æ–‡æœ¬    $@    eval é”™è¯¯ä¿¡æ¯
+   7 size   7 å½“å¹´ç¬¬å‡ å¤© 7 is_require   $$    å½“å‰è¿›ç¨‹å·
+   8 atime  8 æ˜¯å¦å¤ä»¤æ—¶ 8 hints        $.    å½“å‰å¥æŸ„å½“å‰è¡Œå·
+   9 mtime               9 bitmask      @ARGV å‘½ä»¤è¡Œå‚æ•°
+  10 ctime  just use                    @INC  æ¨¡å—æœç´¢è·¯å¾„
+  11 blksz  POSIX::      3..9 åªæœ‰å¸¦å‚  @_    å­ç¨‹åºå‚æ•°
+  12 blcks  strftime!    æ•°è°ƒç”¨æ—¶æœ‰æ•ˆ   %ENV  ç¯å¢ƒå˜é‡
 
 =head1 ACKNOWLEDGEMENTS
 
-±¾ÎÄµÄ×î³õ³öÏÖÔÚ Perl Monks ÉÏ£¬ºóÀ´ÓÖÓĞÒ»Ğ©ÈËÌá³ö¹ı½¨Òé¡£¸ĞĞ» Perl Monks£¡
+æœ¬æ–‡çš„æœ€åˆå‡ºç°åœ¨ Perl Monks ä¸Šï¼Œåæ¥åˆæœ‰ä¸€äº›äººæå‡ºè¿‡å»ºè®®ã€‚æ„Ÿè°¢ Perl Monksï¼
 
-ÌØ±ğÒª¸ĞĞ»µÄÊÇ Damian Conway£¬Ëû²»½öÌáÁËºÜ¶àÖØÒªµÄĞŞ¸Ä½¨Òé£¬¶øÇÒ»¹ÄÍĞÄµØ
-ÊıÁËÊıÒ»¹²ÁĞ³öÁË¶àÉÙ¸ö Perl ÌØĞÔ£¬²¢ÇÒ»¹ÖÆ×÷ÁËÒ»¸ö Perl 6 °æ±¾¡£
+ç‰¹åˆ«è¦æ„Ÿè°¢çš„æ˜¯ Damian Conwayï¼Œä»–ä¸ä»…æäº†å¾ˆå¤šé‡è¦çš„ä¿®æ”¹å»ºè®®ï¼Œè€Œä¸”è¿˜è€å¿ƒåœ°
+æ•°äº†æ•°ä¸€å…±åˆ—å‡ºäº†å¤šå°‘ä¸ª Perl ç‰¹æ€§ï¼Œå¹¶ä¸”è¿˜åˆ¶ä½œäº†ä¸€ä¸ª Perl 6 ç‰ˆæœ¬ã€‚
 
-=head1 ×÷Õß
+=head1 ä½œè€…
 
-±¾ÎÄÓÉ Juerd Waalboer <juerd@cpan.org>, ÔÚºÜ¶à Perl Monks ÈËµÄ°ïÖúÏÂÍê³É¡£
+æœ¬æ–‡ç”± Juerd Waalboer <juerd@cpan.org>, åœ¨å¾ˆå¤š Perl Monks äººçš„å¸®åŠ©ä¸‹å®Œæˆã€‚
 
-=head1 ²Î¼û
+=head1 å‚è§
 
- http://perlmonks.org/?node_id=216602      ×î³õµÄÌû×Ó
- http://perlmonks.org/?node_id=238031      Damian Conway µÄ Perl6 °æ±¾
- http://juerd.nl/site.plp/perlcheat        Perl ËÙ²éÖ÷Ò³
+ http://perlmonks.org/?node_id=216602      æœ€åˆçš„å¸–å­
+ http://perlmonks.org/?node_id=238031      Damian Conway çš„ Perl6 ç‰ˆæœ¬
+ http://juerd.nl/site.plp/perlcheat        Perl é€ŸæŸ¥ä¸»é¡µ
 
-=head1 ·­ÒëÕß¼°·­ÒëÉùÃ÷
+=head1 ç¿»è¯‘è€…åŠç¿»è¯‘å£°æ˜
 
-±¾ÎÄÓÉ flw (C<flw@cpan.org>) ·­Òë£¬·­Òë³É¹ûÊ×´Î³öÏÖÔÚ I<ÖĞ¹ú Perl Ğ­»á>
-http://www.perlchina.org) µÄĞ­×÷¿ª·¢Æ½Ì¨ÉÏ¡£
+æœ¬æ–‡ç”± flw (C<flw@cpan.org>) ç¿»è¯‘ï¼Œç¿»è¯‘æˆæœé¦–æ¬¡å‡ºç°åœ¨ I<ä¸­å›½ Perl åä¼š>
+http://www.perlchina.org) çš„åä½œå¼€å‘å¹³å°ä¸Šã€‚
 
-PerlChina.org ±¾×Å¡°ÔÚ¹úÄÚÍÆ¹ã Perl¡± µÄÄ¿µÄ£¬×éÖ¯ÈËÔ±·­Òë±¾ÎÄ¡£¶ÁÕß¿É
-ÒÔÔÚ×ñÊØÔ­×÷ÕßĞí¿ÉĞ­Òé¡¢×ğÖØÔ­×÷Õß¼°Òë×÷ÕßÀÍ¶¯³É¹ûµÄÇ°ÌáÏÂ£¬ÈÎÒâ·¢²¼»ò
-ĞŞ¸Ä±¾ÎÄ¡£
+PerlChina.org æœ¬ç€â€œåœ¨å›½å†…æ¨å¹¿ Perlâ€ çš„ç›®çš„ï¼Œç»„ç»‡äººå‘˜ç¿»è¯‘æœ¬æ–‡ã€‚è¯»è€…å¯
+ä»¥åœ¨éµå®ˆåŸä½œè€…è®¸å¯åè®®ã€å°Šé‡åŸä½œè€…åŠè¯‘ä½œè€…åŠ³åŠ¨æˆæœçš„å‰æä¸‹ï¼Œä»»æ„å‘å¸ƒæˆ–
+ä¿®æ”¹æœ¬æ–‡ã€‚
 
-Èç¹ûÄã¶Ô±¾ÎÄÓĞÈÎºÎÒâ¼û£¬»¶Ó­À´ĞÅÖ¸½Ì¡£±¾ÈË·Ç³£»¶Ó­Óë¸÷Î»½»Á÷¡£
+å¦‚æœä½ å¯¹æœ¬æ–‡æœ‰ä»»ä½•æ„è§ï¼Œæ¬¢è¿æ¥ä¿¡æŒ‡æ•™ã€‚æœ¬äººéå¸¸æ¬¢è¿ä¸å„ä½äº¤æµã€‚
 
 =cut
