--- a/lib/POD2/CN/perl.pod
+++ b/lib/POD2/CN/perl.pod
@@ -1,10 +1,10 @@
-=encoding gb2312
+=encoding utf8
 
-=head1 ±êÌâ
+=head1 æ ‡é¢˜
 
 perl - Practical Extraction and Report Language
 
-=head1 Óï·¨
+=head1 è¯­æ³•
 
 B<perl> S<[ B<-sTuU> ]> S<[ B<-hv> ] [ B<-V>[:I<configvar>] ]>
     S<[ B<-cw> ] [ B<-d>[:I<debugger>] ] [ B<-D>[I<number/list>] ]>
@@ -14,426 +14,426 @@ B<perl> S<[ B<-sTuU> ]> S<[ B<-hv> ] [ B<-V>[:I<configvar>] ]>
     S<[ B<-i>[I<extension>] ]> S<[ B<-e> I<'command'> ] 
     [ B<--> ] [ I<programfile> ] [ I<argument> ]...>
 
-Èç¹ûÄãÊÇÒ»¸ö Perl µÄ³õÑ§Õß£¬ÄÇÃ´Äã×îºÃÏÈÔÄ¶ÁÒ»ÏÂ L<perlintro>,
-ÄÇÊÇÒ»¸öÎª³õÑ§Õß×¨ÃÅ×¼±¸µÄ¼òµ¥½éÉÜ£¬ÎªÄã½²½âÒ»Ğ© Perl µÄ»ù´¡ÖªÊ¶£¬
-²¢ÇÒ°ïÖúÄãåÛÓÎÓÚÊ£ÓàµÄ´óÁ¿ Perl ÎÄµµ¡£
+å¦‚æœä½ æ˜¯ä¸€ä¸ª Perl çš„åˆå­¦è€…ï¼Œé‚£ä¹ˆä½ æœ€å¥½å…ˆé˜…è¯»ä¸€ä¸‹ L<perlintro>,
+é‚£æ˜¯ä¸€ä¸ªä¸ºåˆå­¦è€…ä¸“é—¨å‡†å¤‡çš„ç®€å•ä»‹ç»ï¼Œä¸ºä½ è®²è§£ä¸€äº› Perl çš„åŸºç¡€çŸ¥è¯†ï¼Œ
+å¹¶ä¸”å¸®åŠ©ä½ é¨æ¸¸äºå‰©ä½™çš„å¤§é‡ Perl æ–‡æ¡£ã€‚
 
-ÎªÁË±ãÓÚÔÄ¶Á£¬Perl ÊÖ²á±»·Ö³ÉÁËÒ»ÏÂ¼¸¸ö²¿·Ö£º
+ä¸ºäº†ä¾¿äºé˜…è¯»ï¼ŒPerl æ‰‹å†Œè¢«åˆ†æˆäº†ä¸€ä¸‹å‡ ä¸ªéƒ¨åˆ†ï¼š
 
-=head2 ¸ÅÊö
+=head2 æ¦‚è¿°
 
-    perl                Perl ¸ÅÊö(±¾ÎÄµµ)
-    perlintro           Îª³õÑ§Õß×¼±¸µÄ Perl ¼ò½é
-    perltoc             Perl ÎÄµµÄ¿Â¼
+    perl                Perl æ¦‚è¿°(æœ¬æ–‡æ¡£)
+    perlintro           ä¸ºåˆå­¦è€…å‡†å¤‡çš„ Perl ç®€ä»‹
+    perltoc             Perl æ–‡æ¡£ç›®å½•
 
-    activeperl          ActivePerl ¸ÅÊö
+    activeperl          ActivePerl æ¦‚è¿°
 
-=head2 ½Ì³Ì
+=head2 æ•™ç¨‹
 
-    perlreftut          Perl ÒıÓÃ¼ò½é
-    perldsc             Perl Êı¾İ½á¹¹½éÉÜ
-    perllol             Perl ¸ß¼¶Êı¾İ½á¹¹: Êı×éµÄÊı×é(¶şÎ¬Êı×é)
+    perlreftut          Perl å¼•ç”¨ç®€ä»‹
+    perldsc             Perl æ•°æ®ç»“æ„ä»‹ç»
+    perllol             Perl é«˜çº§æ•°æ®ç»“æ„: æ•°ç»„çš„æ•°ç»„(äºŒç»´æ•°ç»„)
 
-    perlrequick         Perl ÕıÔò±í´ïÊ½¿ìËÙÈëÃÅ
-    perlretut           Perl ÕıÔò±í´ïÊ½½Ì³Ì
+    perlrequick         Perl æ­£åˆ™è¡¨è¾¾å¼å¿«é€Ÿå…¥é—¨
+    perlretut           Perl æ­£åˆ™è¡¨è¾¾å¼æ•™ç¨‹
 
-    perlboot            Perl OO ÈëÃÅ½Ì³Ì
-    perltoot            Perl OO ½Ì³Ì(Ò»)
-    perltooc            Perl OO ½Ì³Ì(¶ş)
-    perlbot             Perl OO ¸ß¼¶¼¼ÇÉÓëÊµÀı
+    perlboot            Perl OO å…¥é—¨æ•™ç¨‹
+    perltoot            Perl OO æ•™ç¨‹(ä¸€)
+    perltooc            Perl OO æ•™ç¨‹(äºŒ)
+    perlbot             Perl OO é«˜çº§æŠ€å·§ä¸å®ä¾‹
 
-    perlstyle           Perl ³ÌĞò·ç¸ñÖ¸ÄÏ
+    perlstyle           Perl ç¨‹åºé£æ ¼æŒ‡å—
 
-    perlcheat           Perl ¼Ğ´ø
-    perltrap            Perl ÏİÚå
-    perldebtut          Perl µ÷ÊÔ½Ì³Ì
+    perlcheat           Perl å¤¹å¸¦
+    perltrap            Perl é™·é˜±
+    perldebtut          Perl è°ƒè¯•æ•™ç¨‹
 
-    perlfaq             Perl ³£¼ûÎÊÌâ(FAQ)
-      perlfaq1          ÆÕÍ¨ÎÊÌâ
-      perlfaq2          ¿ªÊ¼Ê¹ÓÃºÍÑ§Ï° Perl Ê±Åöµ½µÄÎÊÌâ
-      perlfaq3          ±à³Ì¹¤¾ß
-      perlfaq4          Êı¾İ²Ù×÷
-      perlfaq5          ÎÄ¼şºÍ¸ñÊ½
-      perlfaq6          ÕıÔò±í´ïÊ½
-      perlfaq7          Perl ÓïÑÔÎÊÌâ
-      perlfaq8          ÏµÍ³½»»¥
-      perlfaq9          ÍøÂç±à³Ì
+    perlfaq             Perl å¸¸è§é—®é¢˜(FAQ)
+      perlfaq1          æ™®é€šé—®é¢˜
+      perlfaq2          å¼€å§‹ä½¿ç”¨å’Œå­¦ä¹  Perl æ—¶ç¢°åˆ°çš„é—®é¢˜
+      perlfaq3          ç¼–ç¨‹å·¥å…·
+      perlfaq4          æ•°æ®æ“ä½œ
+      perlfaq5          æ–‡ä»¶å’Œæ ¼å¼
+      perlfaq6          æ­£åˆ™è¡¨è¾¾å¼
+      perlfaq7          Perl è¯­è¨€é—®é¢˜
+      perlfaq8          ç³»ç»Ÿäº¤äº’
+      perlfaq9          ç½‘ç»œç¼–ç¨‹
 
-=head2 ²Î¿¼ÊÖ²á
+=head2 å‚è€ƒæ‰‹å†Œ
 
-    perlsyn             Perl Óï·¨
-    perldata            Perl Êı¾İ½á¹¹
-    perlop              Perl ²Ù×÷·ûºÍÓÅÏÈ¼¶
-    perlsub             Perl ×Ó³ÌĞò
-    perlfunc            Perl ÄÚ½¨º¯Êı
-      perlopentut       Perl open() ½Ì³Ì
-      perlpacktut       Perl pack() ºÍ unpack() ½Ì³Ì
-    perlpod             Perl POD ÎÄµµ
-    perlpodspec         Perl POD ÎÄµµ¸ñÊ½ËµÃ÷
-    perlrun             Perl ÔËĞĞºÍÑ¡Ïî
-    perldiag            Perl Õï¶ÏĞÅÏ¢
-    perllexwarn         Perl ¾¯¸æ
-    perldebug           Perl µ÷ÊÔ
-    perlvar             Perl Ô¤¶¨Òå±äÁ¿
-    perlre              Perl ÕıÔò±í´ïÊ½¸ß¼¶½Ì³Ì
-    perlreref           Perl ÕıÔò±í´ïÊ½¿ìËÙ²Î¿¼
-    perlref             Perl ÒıÓÃ¸ß¼¶½Ì³Ì
-    perlform            Perl ¸ñÊ½
-    perlobj             Perl ¶ÔÏó
-    perltie             Perl °ó¶¨(½«¶ÔÏóÒş²ØÔÚÆÕÍ¨±äÁ¿±³ºó)
-      perldbmfilter     Perl DBM ¹ıÂËÆ÷
+    perlsyn             Perl è¯­æ³•
+    perldata            Perl æ•°æ®ç»“æ„
+    perlop              Perl æ“ä½œç¬¦å’Œä¼˜å…ˆçº§
+    perlsub             Perl å­ç¨‹åº
+    perlfunc            Perl å†…å»ºå‡½æ•°
+      perlopentut       Perl open() æ•™ç¨‹
+      perlpacktut       Perl pack() å’Œ unpack() æ•™ç¨‹
+    perlpod             Perl POD æ–‡æ¡£
+    perlpodspec         Perl POD æ–‡æ¡£æ ¼å¼è¯´æ˜
+    perlrun             Perl è¿è¡Œå’Œé€‰é¡¹
+    perldiag            Perl è¯Šæ–­ä¿¡æ¯
+    perllexwarn         Perl è­¦å‘Š
+    perldebug           Perl è°ƒè¯•
+    perlvar             Perl é¢„å®šä¹‰å˜é‡
+    perlre              Perl æ­£åˆ™è¡¨è¾¾å¼é«˜çº§æ•™ç¨‹
+    perlreref           Perl æ­£åˆ™è¡¨è¾¾å¼å¿«é€Ÿå‚è€ƒ
+    perlref             Perl å¼•ç”¨é«˜çº§æ•™ç¨‹
+    perlform            Perl æ ¼å¼
+    perlobj             Perl å¯¹è±¡
+    perltie             Perl ç»‘å®š(å°†å¯¹è±¡éšè—åœ¨æ™®é€šå˜é‡èƒŒå)
+      perldbmfilter     Perl DBM è¿‡æ»¤å™¨
 
-    perlipc             Perl ½ø³Ì¼äÍ¨ĞÅ
-    perlfork            Perl fork() ËµÃ÷
-    perlnumber          Perl Êı×Ö·ûºÅ
+    perlipc             Perl è¿›ç¨‹é—´é€šä¿¡
+    perlfork            Perl fork() è¯´æ˜
+    perlnumber          Perl æ•°å­—ç¬¦å·
 
-    perlthrtut          Perl Ïß³Ì½Ì³Ì
-      perlothrtut       ÒÔÇ°µÄ Perl Ïß³Ì½Ì³Ì
+    perlthrtut          Perl çº¿ç¨‹æ•™ç¨‹
+      perlothrtut       ä»¥å‰çš„ Perl çº¿ç¨‹æ•™ç¨‹
 
-    perlport            Perl ÒÆÖ²ÊÖ²á
-    perllocale          Perl ÇøÓòÖ§³Ö
-    perluniintro        Perl Unicode ½éÉÜ
-    perlunicode         Perl Unicode Ö§³Ö
-    perlebcdic          ¿¼ÂÇ½« Perl ÔËĞĞÔÚ EBCDIC ±àÂëµÄÆ½Ì¨ÉÏ
+    perlport            Perl ç§»æ¤æ‰‹å†Œ
+    perllocale          Perl åŒºåŸŸæ”¯æŒ
+    perluniintro        Perl Unicode ä»‹ç»
+    perlunicode         Perl Unicode æ”¯æŒ
+    perlebcdic          è€ƒè™‘å°† Perl è¿è¡Œåœ¨ EBCDIC ç¼–ç çš„å¹³å°ä¸Š
 
-    perlsec             Perl °²È«
+    perlsec             Perl å®‰å…¨
 
-    perlmod             Perl Ä£¿é±à³Ì: ÈëÃÅ½Ì³Ì
-    perlmodlib          Perl Ä£¿é±à³Ì: ÈçºÎÊéĞ´²¢Ê¹ÓÃÒ»¸öĞÂÄ£¿é
-    perlmodstyle        Perl Ä£¿é±à³Ì: ±àĞ´Ä£¿éµÄ¹æ·¶
-    perlmodinstall      Perl Ä£¿é±à³Ì: ÈçºÎ°²×°Ò»¸ö CPAN ÉÏ·¢²¼µÄÄ£¿é
-    perlnewmod          Perl Ä£¿é±à³Ì: ×¼±¸·¢²¼×Ô¼ºµÄÄ£¿é
+    perlmod             Perl æ¨¡å—ç¼–ç¨‹: å…¥é—¨æ•™ç¨‹
+    perlmodlib          Perl æ¨¡å—ç¼–ç¨‹: å¦‚ä½•ä¹¦å†™å¹¶ä½¿ç”¨ä¸€ä¸ªæ–°æ¨¡å—
+    perlmodstyle        Perl æ¨¡å—ç¼–ç¨‹: ç¼–å†™æ¨¡å—çš„è§„èŒƒ
+    perlmodinstall      Perl æ¨¡å—ç¼–ç¨‹: å¦‚ä½•å®‰è£…ä¸€ä¸ª CPAN ä¸Šå‘å¸ƒçš„æ¨¡å—
+    perlnewmod          Perl æ¨¡å—ç¼–ç¨‹: å‡†å¤‡å‘å¸ƒè‡ªå·±çš„æ¨¡å—
 
-    perlutil            Perl ´ò°ü¡¢·¢²¼¹¤¾ß
+    perlutil            Perl æ‰“åŒ…ã€å‘å¸ƒå·¥å…·
 
-    perlcompile         Perl ±àÒëÆ÷Ì×¼ş½éÉÜ
+    perlcompile         Perl ç¼–è¯‘å™¨å¥—ä»¶ä»‹ç»
 
     perlfilter          Perl source filters
 
-=head2 Perl ÄÚ²¿ÊµÏÖºÍ C ÓïÑÔ½Ó¿Ú
+=head2 Perl å†…éƒ¨å®ç°å’Œ C è¯­è¨€æ¥å£
 
-    perlembed           Ç¶Èë Perl µ½ÄãµÄ C/C++ ³ÌĞòÖĞÈ¥
+    perlembed           åµŒå…¥ Perl åˆ°ä½ çš„ C/C++ ç¨‹åºä¸­å»
     perldebguts         Perl debugging guts and tips
-    perlxstut           Perl XS ½Ì³Ì
-    perlxs              Perl XS ±à³Ì½Ó¿Ú(API)
-    perlclib            C ±ê×¼¿âµÄ Perl Ìæ´ú
-    perlguts            Ê¹ÓÃ Perl ÄÚ²¿º¯ÊıÀ©Õ¹ Perl
-    perlcall            ´Ó C ÖĞµ÷ÓÃ Perl Ê±µÄÔ¼¶¨
+    perlxstut           Perl XS æ•™ç¨‹
+    perlxs              Perl XS ç¼–ç¨‹æ¥å£(API)
+    perlclib            C æ ‡å‡†åº“çš„ Perl æ›¿ä»£
+    perlguts            ä½¿ç”¨ Perl å†…éƒ¨å‡½æ•°æ‰©å±• Perl
+    perlcall            ä» C ä¸­è°ƒç”¨ Perl æ—¶çš„çº¦å®š
 
-    perlapi             Perl API Ò»ÀÀ
-    perlintern          Perl ÄÚ²¿º¯Êı
+    perlapi             Perl API ä¸€è§ˆ
+    perlintern          Perl å†…éƒ¨å‡½æ•°
     perliol             C API for Perl's implementation of IO in Layers
-    perlapio            Perl ÄÚ²¿ IO ³éÏó½Ó¿Ú
+    perlapio            Perl å†…éƒ¨ IO æŠ½è±¡æ¥å£
 
-    perlhack            Perl ºÚ¿ÍÖ¸ÄÏ
+    perlhack            Perl é»‘å®¢æŒ‡å—
 
-=head2 ÔÓÏî
+=head2 æ‚é¡¹
 
-    perlbook            Perl Êé¼®Ñ¶Ï¢
-    perltodo            Perl Î´À´Õ¹Íû
+    perlbook            Perl ä¹¦ç±è®¯æ¯
+    perltodo            Perl æœªæ¥å±•æœ›
 
     perldoc             Look up Perl documentation in Pod format
 
-    perlhist            Perl ĞŞ¸Ä¼ÇÂ¼
-    perldelta           Ïà¶ÔÓÚÇ°Ò»¸ö°æ±¾µÄĞŞ¸Ä
-    perl586delta        5.8.6 °æËù×öµÄĞŞ¸Ä
-    perl585delta        5.8.5 °æËù×öµÄĞŞ¸Ä
-    perl584delta        5.8.5 °æËù×öµÄĞŞ¸Ä
-    perl583delta        5.8.3 °æËù×öµÄĞŞ¸Ä
-    perl582delta        5.8.2 °æËù×öµÄĞŞ¸Ä
-    perl581delta        5.8.1 °æËù×öµÄĞŞ¸Ä
-    perl58delta         5.8.0 °æËù×öµÄĞŞ¸Ä
-    perl573delta        5.7.3 °æËù×öµÄĞŞ¸Ä
-    perl572delta        5.7.2 °æËù×öµÄĞŞ¸Ä
-    perl571delta        5.7.1 °æËù×öµÄĞŞ¸Ä
-    perl570delta        5.7.0 °æËù×öµÄĞŞ¸Ä
-    perl561delta        5.6.1 °æËù×öµÄĞŞ¸Ä
-    perl56delta         5.6 °æËù×öµÄĞŞ¸Ä
-    perl5005delta       5.005 °æËù×öµÄĞŞ¸Ä
-    perl5004delta       5.004 °æËù×öµÄĞŞ¸Ä
+    perlhist            Perl ä¿®æ”¹è®°å½•
+    perldelta           ç›¸å¯¹äºå‰ä¸€ä¸ªç‰ˆæœ¬çš„ä¿®æ”¹
+    perl586delta        5.8.6 ç‰ˆæ‰€åšçš„ä¿®æ”¹
+    perl585delta        5.8.5 ç‰ˆæ‰€åšçš„ä¿®æ”¹
+    perl584delta        5.8.5 ç‰ˆæ‰€åšçš„ä¿®æ”¹
+    perl583delta        5.8.3 ç‰ˆæ‰€åšçš„ä¿®æ”¹
+    perl582delta        5.8.2 ç‰ˆæ‰€åšçš„ä¿®æ”¹
+    perl581delta        5.8.1 ç‰ˆæ‰€åšçš„ä¿®æ”¹
+    perl58delta         5.8.0 ç‰ˆæ‰€åšçš„ä¿®æ”¹
+    perl573delta        5.7.3 ç‰ˆæ‰€åšçš„ä¿®æ”¹
+    perl572delta        5.7.2 ç‰ˆæ‰€åšçš„ä¿®æ”¹
+    perl571delta        5.7.1 ç‰ˆæ‰€åšçš„ä¿®æ”¹
+    perl570delta        5.7.0 ç‰ˆæ‰€åšçš„ä¿®æ”¹
+    perl561delta        5.6.1 ç‰ˆæ‰€åšçš„ä¿®æ”¹
+    perl56delta         5.6 ç‰ˆæ‰€åšçš„ä¿®æ”¹
+    perl5005delta       5.005 ç‰ˆæ‰€åšçš„ä¿®æ”¹
+    perl5004delta       5.004 ç‰ˆæ‰€åšçš„ä¿®æ”¹
 
-    activeperl-release  ActivePerl ·¢²¼ÈÕÖ¾
-    activeperl-changes  ActivePerl ĞŞ¶©ÀúÊ·
+    activeperl-release  ActivePerl å‘å¸ƒæ—¥å¿—
+    activeperl-changes  ActivePerl ä¿®è®¢å†å²
 
     perlartistic        Perl Artistic License
-    perlgpl             GNU GPL Ğí¿ÉĞ­ÒéÄÚÈİ
+    perlgpl             GNU GPL è®¸å¯åè®®å†…å®¹
 
-=head2 ÓïÑÔÏà¹Ø
+=head2 è¯­è¨€ç›¸å…³
 
-    perlcn              Perl ¼òÌåÖĞÎÄ¼ò½é(²ÉÓÃ EUC-CN ±àÂë)
-    perljp              Perl ÈÕÎÄ¼ò½é(²ÉÓÃ EUC-JP ±àÂë)
-    perlko              Perl ³¯ÏÊÎÄ¼ò½é(²ÉÓÃ EUC-KR ±àÂë)
-    perltw              Perl ·±ÌåÖĞÎÄ¼ò½é(²ÉÓÃ Big5 ±àÂë)
+    perlcn              Perl ç®€ä½“ä¸­æ–‡ç®€ä»‹(é‡‡ç”¨ EUC-CN ç¼–ç )
+    perljp              Perl æ—¥æ–‡ç®€ä»‹(é‡‡ç”¨ EUC-JP ç¼–ç )
+    perlko              Perl æœé²œæ–‡ç®€ä»‹(é‡‡ç”¨ EUC-KR ç¼–ç )
+    perltw              Perl ç¹ä½“ä¸­æ–‡ç®€ä»‹(é‡‡ç”¨ Big5 ç¼–ç )
 
-=head2 Æ½Ì¨Ïà¹Ø
+=head2 å¹³å°ç›¸å…³
 
-    perlaix             AIX Æ½Ì¨ËµÃ÷
-    perlamiga           AmigaOS Æ½Ì¨ËµÃ÷
-    perlapollo          Apollo DomainOS Æ½Ì¨ËµÃ÷
-    perlbeos            BeOS Æ½Ì¨ËµÃ÷
-    perlbs2000          POSIX-BC BS2000 Æ½Ì¨ËµÃ÷
-    perlce              WinCE Æ½Ì¨ËµÃ÷
-    perlcygwin          Cygwin Æ½Ì¨ËµÃ÷
-    perldgux            DG/UX Æ½Ì¨ËµÃ÷
-    perldos             DOS Æ½Ì¨ËµÃ÷
-    perlepoc            EPOC Æ½Ì¨ËµÃ÷
-    perlfreebsd         FreeBSD Æ½Ì¨ËµÃ÷
-    perlhpux            HP-UX Æ½Ì¨ËµÃ÷
-    perlhurd            Hurd Æ½Ì¨ËµÃ÷
-    perlirix            Irix Æ½Ì¨ËµÃ÷
-    perlmachten         Power MachTen Æ½Ì¨ËµÃ÷
-    perlmacos           Mac OS (Classic) Æ½Ì¨ËµÃ÷
-    perlmacosx          Mac OS X Æ½Ì¨ËµÃ÷
-    perlmint            MiNT Æ½Ì¨ËµÃ÷
-    perlmpeix           MPE/iX Æ½Ì¨ËµÃ÷
-    perlnetware         NetWare Æ½Ì¨ËµÃ÷
-    perlopenbsd         OpenBSD Æ½Ì¨ËµÃ÷
-    perlos2             OS/2 Æ½Ì¨ËµÃ÷
-    perlos390           OS/390 Æ½Ì¨ËµÃ÷
-    perlos400           OS/400 Æ½Ì¨ËµÃ÷
-    perlplan9           Plan 9 Æ½Ì¨ËµÃ÷
-    perlqnx             QNX Æ½Ì¨ËµÃ÷
-    perlsolaris         Solaris Æ½Ì¨ËµÃ÷
-    perltru64           Tru64 Æ½Ì¨ËµÃ÷
-    perluts             UTS Æ½Ì¨ËµÃ÷
-    perlvmesa           VM/ESA Æ½Ì¨ËµÃ÷
-    perlvms             VMS Æ½Ì¨ËµÃ÷
-    perlvos             Stratus VOS Æ½Ì¨ËµÃ÷
-    perlwin32           Windows Æ½Ì¨ËµÃ÷
+    perlaix             AIX å¹³å°è¯´æ˜
+    perlamiga           AmigaOS å¹³å°è¯´æ˜
+    perlapollo          Apollo DomainOS å¹³å°è¯´æ˜
+    perlbeos            BeOS å¹³å°è¯´æ˜
+    perlbs2000          POSIX-BC BS2000 å¹³å°è¯´æ˜
+    perlce              WinCE å¹³å°è¯´æ˜
+    perlcygwin          Cygwin å¹³å°è¯´æ˜
+    perldgux            DG/UX å¹³å°è¯´æ˜
+    perldos             DOS å¹³å°è¯´æ˜
+    perlepoc            EPOC å¹³å°è¯´æ˜
+    perlfreebsd         FreeBSD å¹³å°è¯´æ˜
+    perlhpux            HP-UX å¹³å°è¯´æ˜
+    perlhurd            Hurd å¹³å°è¯´æ˜
+    perlirix            Irix å¹³å°è¯´æ˜
+    perlmachten         Power MachTen å¹³å°è¯´æ˜
+    perlmacos           Mac OS (Classic) å¹³å°è¯´æ˜
+    perlmacosx          Mac OS X å¹³å°è¯´æ˜
+    perlmint            MiNT å¹³å°è¯´æ˜
+    perlmpeix           MPE/iX å¹³å°è¯´æ˜
+    perlnetware         NetWare å¹³å°è¯´æ˜
+    perlopenbsd         OpenBSD å¹³å°è¯´æ˜
+    perlos2             OS/2 å¹³å°è¯´æ˜
+    perlos390           OS/390 å¹³å°è¯´æ˜
+    perlos400           OS/400 å¹³å°è¯´æ˜
+    perlplan9           Plan 9 å¹³å°è¯´æ˜
+    perlqnx             QNX å¹³å°è¯´æ˜
+    perlsolaris         Solaris å¹³å°è¯´æ˜
+    perltru64           Tru64 å¹³å°è¯´æ˜
+    perluts             UTS å¹³å°è¯´æ˜
+    perlvmesa           VM/ESA å¹³å°è¯´æ˜
+    perlvms             VMS å¹³å°è¯´æ˜
+    perlvos             Stratus VOS å¹³å°è¯´æ˜
+    perlwin32           Windows å¹³å°è¯´æ˜
 
 
-Èç¹ûÄãÊ¹ÓÃµÄÊÇÀà UNIX ÏµÍ³£¬ÄÇÃ´ÉÏÊöÊÖ²áÒ³Ä¬ÈÏÇé¿öÏÂ°²×°ÔÚ
-F</usr/local/man/> Ä¿Â¼¡£
+å¦‚æœä½ ä½¿ç”¨çš„æ˜¯ç±» UNIX ç³»ç»Ÿï¼Œé‚£ä¹ˆä¸Šè¿°æ‰‹å†Œé¡µé»˜è®¤æƒ…å†µä¸‹å®‰è£…åœ¨
+F</usr/local/man/> ç›®å½•ã€‚
 
-³ı´ËÖ®Íâ£¬»¹ÓĞ´óÁ¿µÄ Perl Ä£¿éµÄÎÄµµ¡£ÕâĞ©¸½¼ÓÎÄµµÄ¬ÈÏ±»·ÅÖÃÔÚ
-F</usr/local/lib/perl5/man> Ä¿Â¼»òÕßÊÇ Perl ¿âÄ¿Â¼ÏÂµÄ F<man> ×ÓÄ¿Â¼
-ÕâÀï±ßÓĞÒ»²¿·Ö¸½¼ÓÎÄµµÊÇ Perl µÄ±ê×¼·¢²¼°üÖĞ×Ô´øµÄ£¬ÆäÓàÔòÊÇ×ÔĞĞ°²×°µÄ
-µÚÈı·½Ä£¿éµÄÎÄµµ¡£
+é™¤æ­¤ä¹‹å¤–ï¼Œè¿˜æœ‰å¤§é‡çš„ Perl æ¨¡å—çš„æ–‡æ¡£ã€‚è¿™äº›é™„åŠ æ–‡æ¡£é»˜è®¤è¢«æ”¾ç½®åœ¨
+F</usr/local/lib/perl5/man> ç›®å½•æˆ–è€…æ˜¯ Perl åº“ç›®å½•ä¸‹çš„ F<man> å­ç›®å½•
+è¿™é‡Œè¾¹æœ‰ä¸€éƒ¨åˆ†é™„åŠ æ–‡æ¡£æ˜¯ Perl çš„æ ‡å‡†å‘å¸ƒåŒ…ä¸­è‡ªå¸¦çš„ï¼Œå…¶ä½™åˆ™æ˜¯è‡ªè¡Œå®‰è£…çš„
+ç¬¬ä¸‰æ–¹æ¨¡å—çš„æ–‡æ¡£ã€‚
 
-ÒëÕß×¢£ºÈç¹ûÄãÊ¹ÓÃµÄÊÇ windows Æ½Ì¨ÏÂµÄ ActiveState Perl£¬²¢ÇÒ°²×°ÔÚÁË
-C:\Perl£¬ÄÇÃ´ÉÏÊöÊÖ²áÒ³µÄ html °æ±¾¶¼ÔÚ C:\Perl\html Ä¿Â¼£¬pod °æ±¾ÔòÔÚ
-C:\Perl\lib\pod Ä¿Â¼¡£Èç¹ûÄãÊÇÓÃ .msi °²×°°üĞÎÊ½°²×°µÄ»°£¬°²×°°ü¾Í»áÔÚ
-[¿ªÊ¼] -> [³ÌĞò] -> [ActiveState ActivePerl 5.x] -> [Documentation] Õâ
-Î»ÖÃÉú³ÉÒ»¸ö¿ì½İ·½Ê½£¬Äãµã»÷Ëü¾Í¿ÉÒÔä¯ÀÀËùÓĞµÄ ActivePerl ÎÄµµ¡£
+è¯‘è€…æ³¨ï¼šå¦‚æœä½ ä½¿ç”¨çš„æ˜¯ windows å¹³å°ä¸‹çš„ ActiveState Perlï¼Œå¹¶ä¸”å®‰è£…åœ¨äº†
+C:\Perlï¼Œé‚£ä¹ˆä¸Šè¿°æ‰‹å†Œé¡µçš„ html ç‰ˆæœ¬éƒ½åœ¨ C:\Perl\html ç›®å½•ï¼Œpod ç‰ˆæœ¬åˆ™åœ¨
+C:\Perl\lib\pod ç›®å½•ã€‚å¦‚æœä½ æ˜¯ç”¨ .msi å®‰è£…åŒ…å½¢å¼å®‰è£…çš„è¯ï¼Œå®‰è£…åŒ…å°±ä¼šåœ¨
+[å¼€å§‹] -> [ç¨‹åº] -> [ActiveState ActivePerl 5.x] -> [Documentation] è¿™
+ä½ç½®ç”Ÿæˆä¸€ä¸ªå¿«æ·æ–¹å¼ï¼Œä½ ç‚¹å‡»å®ƒå°±å¯ä»¥æµè§ˆæ‰€æœ‰çš„ ActivePerl æ–‡æ¡£ã€‚
 
-ÔÚÀà UNIX »·¾³ÏÂ£¬Í¨¹ıÕıÈ·ÉèÖÃÏàÓ¦µÄÏµÍ³ÎÄ¼ş£¬»òÕßĞŞ¸Ä MANPATH
-»·¾³±äÁ¿£¬ Äã¿ÉÒÔÊ¹ÓÃ man(1) ³ÌĞòÀ´´ò¿ªÊÖ²áÒ³¡£
+åœ¨ç±» UNIX ç¯å¢ƒä¸‹ï¼Œé€šè¿‡æ­£ç¡®è®¾ç½®ç›¸åº”çš„ç³»ç»Ÿæ–‡ä»¶ï¼Œæˆ–è€…ä¿®æ”¹ MANPATH
+ç¯å¢ƒå˜é‡ï¼Œ ä½ å¯ä»¥ä½¿ç”¨ man(1) ç¨‹åºæ¥æ‰“å¼€æ‰‹å†Œé¡µã€‚
 
-ÓÃÒÔÏÂÃüÁî¿ÉÒÔÖªµÀÄãµÄ Perl ÊÖ²áÒ³±»°²×°µ½ÁËÊ²Ã´µØ·½£º
+ç”¨ä»¥ä¸‹å‘½ä»¤å¯ä»¥çŸ¥é“ä½ çš„ Perl æ‰‹å†Œé¡µè¢«å®‰è£…åˆ°äº†ä»€ä¹ˆåœ°æ–¹ï¼š
 
     perl -V:man.dir
 
-Èç¹û·µ»Ø½á¹ûÖĞ°üº¬ÓĞÒ»¸ö³£ÓÃµÄ²¿·Ö£¬±ÈÈçÊÇ F</usr/local/man/man1> ºÍ
-F</usr/local/man/man3>, ÄÇÃ´ÄãÖ»ĞèÒªÌí¼Ó (F</usr/local/man>) µ½ÄãµÄ man(1)
-µÄÅäÖÃÎÄ¼ş»òÕß MANPATH »·¾³±äÁ¿ÖĞ¡£
+å¦‚æœè¿”å›ç»“æœä¸­åŒ…å«æœ‰ä¸€ä¸ªå¸¸ç”¨çš„éƒ¨åˆ†ï¼Œæ¯”å¦‚æ˜¯ F</usr/local/man/man1> å’Œ
+F</usr/local/man/man3>, é‚£ä¹ˆä½ åªéœ€è¦æ·»åŠ  (F</usr/local/man>) åˆ°ä½ çš„ man(1)
+çš„é…ç½®æ–‡ä»¶æˆ–è€… MANPATH ç¯å¢ƒå˜é‡ä¸­ã€‚
 
-Èç¹û·µ»Ø½á¹û²»°üÀ¨ÕâĞ©³£ÓÃÄ¿Â¼£¬ÄÇÄãÖ»ºÃ½«Ã¿Ò»ĞĞ¶¼Ìí¼Óµ½ man(1) µÄÅäÖÃ
-ÎÄ¼ş»òÕß MANPATH »·¾³±äÁ¿ÁË¡£
+å¦‚æœè¿”å›ç»“æœä¸åŒ…æ‹¬è¿™äº›å¸¸ç”¨ç›®å½•ï¼Œé‚£ä½ åªå¥½å°†æ¯ä¸€è¡Œéƒ½æ·»åŠ åˆ° man(1) çš„é…ç½®
+æ–‡ä»¶æˆ–è€… MANPATH ç¯å¢ƒå˜é‡äº†ã€‚
 
-´ËÍâ£¬Äã»¹¿ÉÒÔÓÃ Perl ×Ô´øµÄ F<perldoc> ½Å±¾À´ä¯ÀÀ Perl ÊÖ²áÒ³»òÕßÄ£¿é
-ÎÄµµ¡£(ÒëÕß×¢£ºÔÚ windows Æ½Ì¨ÏÂ£¬ÒòÎªÃ»ÓĞ man ÃüÁî£¬ËùÒÔÒªÏëÔÚÃüÁîĞĞÏÂ
-ä¯ÀÀ Perl ÎÄµµ£¬ÄÇÃ´ÕâÊÇÎ¨Ò»µÄ·½Ê½¡£)
+æ­¤å¤–ï¼Œä½ è¿˜å¯ä»¥ç”¨ Perl è‡ªå¸¦çš„ F<perldoc> è„šæœ¬æ¥æµè§ˆ Perl æ‰‹å†Œé¡µæˆ–è€…æ¨¡å—
+æ–‡æ¡£ã€‚(è¯‘è€…æ³¨ï¼šåœ¨ windows å¹³å°ä¸‹ï¼Œå› ä¸ºæ²¡æœ‰ man å‘½ä»¤ï¼Œæ‰€ä»¥è¦æƒ³åœ¨å‘½ä»¤è¡Œä¸‹
+æµè§ˆ Perl æ–‡æ¡£ï¼Œé‚£ä¹ˆè¿™æ˜¯å”¯ä¸€çš„æ–¹å¼ã€‚)
 
-Èç¹ûÄãµÄ³ÌĞò²»ÄÜÕıÈ·¹¤×÷¶øÄãÓÖ²»ÖªµÀ¸ÃÈ¥¿´ÄÄ¸öÊÖ²áÒ³£¬ÄÇÃ´ÇëÊÔÒ»ÏÂ B<-w>
-ÃüÁîĞĞÑ¡Ïî£¬ËüÍ¨³£»á¸øÄãÒ»¸öÏà¶Ô×¼È·µÄĞÅÏ¢ÒÔÖ¸³öµ½µ×ÊÇÄÄ¶ù³öÁËÂé·³¡£
+å¦‚æœä½ çš„ç¨‹åºä¸èƒ½æ­£ç¡®å·¥ä½œè€Œä½ åˆä¸çŸ¥é“è¯¥å»çœ‹å“ªä¸ªæ‰‹å†Œé¡µï¼Œé‚£ä¹ˆè¯·è¯•ä¸€ä¸‹ B<-w>
+å‘½ä»¤è¡Œé€‰é¡¹ï¼Œå®ƒé€šå¸¸ä¼šç»™ä½ ä¸€ä¸ªç›¸å¯¹å‡†ç¡®çš„ä¿¡æ¯ä»¥æŒ‡å‡ºåˆ°åº•æ˜¯å“ªå„¿å‡ºäº†éº»çƒ¦ã€‚
 
-=head1 ËµÃ÷
+=head1 è¯´æ˜
 
-Perl ¿ÉÒÔÇáÒ×µÄÊµÏÖÉ¨ÃèÈÎÒâÎÄ±¾ÎÄ¼ş¡¢´ÓÖĞÌáÈ¡ÓĞÓÃµÄĞÅÏ¢¡¢È»ºó°´ÕÕÒªÇóµÄ
-¸ñÊ½´òÓ¡³ö±¨±í¡£Perl Ò²ÊÇÒ»ÖÖÓÅĞãµÄÏµÍ³¹ÜÀí¹¤¾ß¡£
+Perl å¯ä»¥è½»æ˜“çš„å®ç°æ‰«æä»»æ„æ–‡æœ¬æ–‡ä»¶ã€ä»ä¸­æå–æœ‰ç”¨çš„ä¿¡æ¯ã€ç„¶åæŒ‰ç…§è¦æ±‚çš„
+æ ¼å¼æ‰“å°å‡ºæŠ¥è¡¨ã€‚Perl ä¹Ÿæ˜¯ä¸€ç§ä¼˜ç§€çš„ç³»ç»Ÿç®¡ç†å·¥å…·ã€‚
 
-Perl ÓïÑÔ±»Éè¼Æ³ÉÊÇ¡°ÊµÓÃµÄ¡±(Ò×ÓÚÊ¹ÓÃ¡¢¸ßĞ§¡¢¹¦ÄÜ·á¸»)£¬¶ø²»ÊÇ¡°»ªÀöµÄ¡±
-(¼òµ¥¡¢ÓÅÃÀ¡¢¾«ÖÂ)¡£¡ºÒëÕß×¢£ºÒëÎÄÎŞ·¨ÌåÏÖÔ­ÎÄµÄÒâË¼£¬Ô­ÎÄÎª "The
+Perl è¯­è¨€è¢«è®¾è®¡æˆæ˜¯â€œå®ç”¨çš„â€(æ˜“äºä½¿ç”¨ã€é«˜æ•ˆã€åŠŸèƒ½ä¸°å¯Œ)ï¼Œè€Œä¸æ˜¯â€œåä¸½çš„â€
+(ç®€å•ã€ä¼˜ç¾ã€ç²¾è‡´)ã€‚ã€è¯‘è€…æ³¨ï¼šè¯‘æ–‡æ— æ³•ä½“ç°åŸæ–‡çš„æ„æ€ï¼ŒåŸæ–‡ä¸º "The
 language is intended to be practical (easy to use, efficient, complete)
-rather than beautiful (tiny, elegant, minimal)."¡»
+rather than beautiful (tiny, elegant, minimal)."ã€
 
-¾İ×÷ÕßÀ´¿´£¬Perl ½áºÏÁË C¡¢B<sed>¡¢B<awk>¡¢B<sh> µÈÒ»Ğ©¹¤¾ßµÄĞí¶àÓÅĞãÌØĞÔ¡£
-ÕâÑùÊìÏ¤ÒÔÉÏ¹¤¾ßµÄÈË¿ÉÒÔÖ»»¨·Ñ½ÏÉÙµÄ´ú¼Û¾Í¿ÉÒÔÊ¹ÓÃ Perl¡£ (ÓïÑÔÀúÊ·Ñ§¼ÒÃÇ
-¿ÉÄÜ»¹¼ÇµÃ csh, Pascal, ÉõÖÁ»¹ÓĞ BASIC-PLUS.)
+æ®ä½œè€…æ¥çœ‹ï¼ŒPerl ç»“åˆäº† Cã€B<sed>ã€B<awk>ã€B<sh> ç­‰ä¸€äº›å·¥å…·çš„è®¸å¤šä¼˜ç§€ç‰¹æ€§ã€‚
+è¿™æ ·ç†Ÿæ‚‰ä»¥ä¸Šå·¥å…·çš„äººå¯ä»¥åªèŠ±è´¹è¾ƒå°‘çš„ä»£ä»·å°±å¯ä»¥ä½¿ç”¨ Perlã€‚ (è¯­è¨€å†å²å­¦å®¶ä»¬
+å¯èƒ½è¿˜è®°å¾— csh, Pascal, ç”šè‡³è¿˜æœ‰ BASIC-PLUS.)
 
-ÒÔÏÂÊÇ Perl µÄÒ»Ğ©ÌØµã£º
-1, Perl µÄ±í´ïÊ½Óï·¨ºÍ C µÄ±í´ïÊ½Óï·¨·Ç³£ÏàËÆ¡£
-2, ºÍ´ó¶àÊı UNIX ¹¤¾ß²»Í¬£¬Perl ±¾Éí²»»áÏŞÖÆÄãµÄÊı¾İ´óĞ¡£¬Ö»ÒªÄãÓµÓĞ×ã¹»µÄ
-ÄÚ´æ¡£
-3, Perl ¿ÉÒÔÒ»¿ÚÆø¶ÁÈ¡Õû¸öÎÄ¼şµÄÄÚÈİ²¢ÇÒ±£´æµ½Ò»¸öÆÕÍ¨µÄ×Ö·û´®±äÁ¿ÖĞ¡£
-4, µİ¹éÇ¶Ì×²ãÊıÃ»ÓĞÏŞÖÆ¡£
-5, Ê¹ÓÃ¡°¹şÏ£±í(hash)¡±(ÓĞĞ©×ÊÁÏÒ²³Æ×÷¡°¹ØÁªÊı×é(associative arrays)¡±) À´
-±íÊ¾±í¸ñ¡£ÔÚ±ØÒªµÄÊ±ºò¹şÏ£±í»á×Ô¶¯Ôö³¤¶îÍâµÄ¿Õ¼äÒÔÃâ·Á°­µ½ĞÔÄÜ¡£
-6, Ê¹ÓÃ¡°Ä£Ê½Æ¥Åä¡±À´¿ìËÙÉ¨Ãè´óÁ¿Êı¾İ¡£
-7, Perl Ò²¿ÉÒÔºÍ¶ş½øÖÆÊı¾İ´ò½»µÀ£¬Í¨¹ıÄ³Ğ©¼¼Êõ£¬¿ÉÒÔÊ¹Ò»¸ö DBM ÎÄ¼şÏóÒ»¸ö
-¹şÏ£±íÒ»Ñù²Ù×÷¡£
-8, ³öÓÚ setuid ·½Ê½ÔËĞĞµÄ Perl ½Å±¾Òª±ÈÍ¬ÑùµÄ C ³ÌĞò°²È«£¬Perl ÓµÓĞÒ»¸ö¹á´©
-Êı¾İÁ÷µÄÎÛÈ¾¼ì²âÏµÍ³£¬Õâ¿ÉÒÔ·ÀÖ¹´ó¶àÊıÁîÈËÉúÑáµÄ°²È«Â©¶´¡£
+ä»¥ä¸‹æ˜¯ Perl çš„ä¸€äº›ç‰¹ç‚¹ï¼š
+1, Perl çš„è¡¨è¾¾å¼è¯­æ³•å’Œ C çš„è¡¨è¾¾å¼è¯­æ³•éå¸¸ç›¸ä¼¼ã€‚
+2, å’Œå¤§å¤šæ•° UNIX å·¥å…·ä¸åŒï¼ŒPerl æœ¬èº«ä¸ä¼šé™åˆ¶ä½ çš„æ•°æ®å¤§å°ï¼Œåªè¦ä½ æ‹¥æœ‰è¶³å¤Ÿçš„
+å†…å­˜ã€‚
+3, Perl å¯ä»¥ä¸€å£æ°”è¯»å–æ•´ä¸ªæ–‡ä»¶çš„å†…å®¹å¹¶ä¸”ä¿å­˜åˆ°ä¸€ä¸ªæ™®é€šçš„å­—ç¬¦ä¸²å˜é‡ä¸­ã€‚
+4, é€’å½’åµŒå¥—å±‚æ•°æ²¡æœ‰é™åˆ¶ã€‚
+5, ä½¿ç”¨â€œå“ˆå¸Œè¡¨(hash)â€(æœ‰äº›èµ„æ–™ä¹Ÿç§°ä½œâ€œå…³è”æ•°ç»„(associative arrays)â€) æ¥
+è¡¨ç¤ºè¡¨æ ¼ã€‚åœ¨å¿…è¦çš„æ—¶å€™å“ˆå¸Œè¡¨ä¼šè‡ªåŠ¨å¢é•¿é¢å¤–çš„ç©ºé—´ä»¥å…å¦¨ç¢åˆ°æ€§èƒ½ã€‚
+6, ä½¿ç”¨â€œæ¨¡å¼åŒ¹é…â€æ¥å¿«é€Ÿæ‰«æå¤§é‡æ•°æ®ã€‚
+7, Perl ä¹Ÿå¯ä»¥å’ŒäºŒè¿›åˆ¶æ•°æ®æ‰“äº¤é“ï¼Œé€šè¿‡æŸäº›æŠ€æœ¯ï¼Œå¯ä»¥ä½¿ä¸€ä¸ª DBM æ–‡ä»¶è±¡ä¸€ä¸ª
+å“ˆå¸Œè¡¨ä¸€æ ·æ“ä½œã€‚
+8, å‡ºäº setuid æ–¹å¼è¿è¡Œçš„ Perl è„šæœ¬è¦æ¯”åŒæ ·çš„ C ç¨‹åºå®‰å…¨ï¼ŒPerl æ‹¥æœ‰ä¸€ä¸ªè´¯ç©¿
+æ•°æ®æµçš„æ±¡æŸ“æ£€æµ‹ç³»ç»Ÿï¼Œè¿™å¯ä»¥é˜²æ­¢å¤§å¤šæ•°ä»¤äººç”ŸåŒçš„å®‰å…¨æ¼æ´ã€‚
 
-Èç¹ûÄãÅöµ½ÁËÒ»¸öÈÎÎñĞèÒªÓÃ B<sed> ¡¢ B<awk> »òÕß B<sh> À´Íê³É£¬½á¹ûÈ´·¢ÏÖ
-ÎŞ·¨×öµ½»òÕßÊÇÏëÔËĞĞÆğÀ´¸ü¿ìÒ»Ğ©£¬²¢ÇÒÄãÓÖ²»ÏëĞ´ C ³ÌĞòÀ´´¦Àí£¬ÄÇÃ´ Perl
-¾Í ÊÇÄã×îºÃµÄÑ¡Ôñ¡£Perl ÔÊĞíÄã½«ÏÖÓĞµÄ sed ½Å±¾»òÕß awk ½Å±¾×ª»»Îª Perl
-½Å±¾¡£
+å¦‚æœä½ ç¢°åˆ°äº†ä¸€ä¸ªä»»åŠ¡éœ€è¦ç”¨ B<sed> ã€ B<awk> æˆ–è€… B<sh> æ¥å®Œæˆï¼Œç»“æœå´å‘ç°
+æ— æ³•åšåˆ°æˆ–è€…æ˜¯æƒ³è¿è¡Œèµ·æ¥æ›´å¿«ä¸€äº›ï¼Œå¹¶ä¸”ä½ åˆä¸æƒ³å†™ C ç¨‹åºæ¥å¤„ç†ï¼Œé‚£ä¹ˆ Perl
+å°± æ˜¯ä½ æœ€å¥½çš„é€‰æ‹©ã€‚Perl å…è®¸ä½ å°†ç°æœ‰çš„ sed è„šæœ¬æˆ–è€… awk è„šæœ¬è½¬æ¢ä¸º Perl
+è„šæœ¬ã€‚
 
-ÔçÔÚ 1993 Äê(²Î¼û L<perlhist>)µÄÊ±ºò, Perl 5 ¼¸ºõ±»ÍêÈ«ÖØĞ´ÁËÒ»´Î£¬¾­ÀúÁËÕâ
-´Î°æ±¾¸üĞÂÒÔºó£¬Perl Ôö¼ÓÁËÒ»ÏÂ¼¸¸öÖØÒªÌØĞÔ£º
+æ—©åœ¨ 1993 å¹´(å‚è§ L<perlhist>)çš„æ—¶å€™, Perl 5 å‡ ä¹è¢«å®Œå…¨é‡å†™äº†ä¸€æ¬¡ï¼Œç»å†äº†è¿™
+æ¬¡ç‰ˆæœ¬æ›´æ–°ä»¥åï¼ŒPerl å¢åŠ äº†ä¸€ä¸‹å‡ ä¸ªé‡è¦ç‰¹æ€§ï¼š
 
 =over 4
 
 =item *
 
-Ä£¿é»¯ºÍ¿ÉÖØÓÃµÄ±à³ÌË¼Ïë£¬ÒÔ¼°ÎŞÊıµÄÄ£¿é¡£
+æ¨¡å—åŒ–å’Œå¯é‡ç”¨çš„ç¼–ç¨‹æ€æƒ³ï¼Œä»¥åŠæ— æ•°çš„æ¨¡å—ã€‚
 
-ÔÚ L<perlmod>¡¢ L<perlmodlib> ºÍ L<perlmodinstall> ÖĞÓĞ½éÉÜ¡£
-
-=item *
-
-Ç¶ÈëºÍÀ©Õ¹
-
-ÔÚ L<perlembed>, L<perlxstut>, L<perlxs>, L<perlcall>,
-L<perlguts>, ºÍL<xsubpp> ÖĞÓĞ½éÉÜ¡£
+åœ¨ L<perlmod>ã€ L<perlmodlib> å’Œ L<perlmodinstall> ä¸­æœ‰ä»‹ç»ã€‚
 
 =item *
 
-±äÁ¿°ó¶¨(°üº¬Ğí¶à¹ØÁªµÄ DBM ¹¤¾ß)
+åµŒå…¥å’Œæ‰©å±•
 
-ÔÚL<perltie> ºÍ L<AnyDBM_File> ÖĞ½éÉÜ¡£
-
-=item *
-
-×Ó³ÌĞò¿ÉÒÔ±»ÖØÔØ¡¢×Ô¶¯¼ÓÔØ¡¢Ö¸¶¨Ô­ĞÍ
-
-ÔÚ L<perlsub> ÖĞ½éÉÜ¡£
+åœ¨ L<perlembed>, L<perlxstut>, L<perlxs>, L<perlcall>,
+L<perlguts>, å’ŒL<xsubpp> ä¸­æœ‰ä»‹ç»ã€‚
 
 =item *
 
-ÈÎÒâÇ¶Ì×µÄÊı¾İ½á¹¹ºÍÄäÃû×Ó³ÌĞò
+å˜é‡ç»‘å®š(åŒ…å«è®¸å¤šå…³è”çš„ DBM å·¥å…·)
 
-ÔÚ L<perlreftut>, L<perlref>, L<perldsc>, ºÍ L<perllol> ÖĞ½éÉÜ¡£
-
-=item *
-
-ÃæÏò¶ÔÏó±à³Ì
-
-ÔÚ L<perlobj>, L<perlboot>, L<perltoot>, L<perltooc>,
-ºÍ L<perlbot> ÖĞ½éÉÜ¡£
+åœ¨L<perltie> å’Œ L<AnyDBM_File> ä¸­ä»‹ç»ã€‚
 
 =item *
 
-Ö§³Ö¡°ÇáÁ¿¼¶½ø³Ì¡±(Ïß³Ì)
+å­ç¨‹åºå¯ä»¥è¢«é‡è½½ã€è‡ªåŠ¨åŠ è½½ã€æŒ‡å®šåŸå‹
 
-ÔÚ L<perlthrtut> ºÍ L<threads> ÖĞ½éÉÜ¡£
-
-=item *
-
-Ö§³Ö Unicode, ¹ú¼Ê»¯, ÇøÓò»¯
-
-ÔÚ L<perluniintro>, L<perllocale> ºÍ L<Locale::Maketext> ÖĞ½éÉÜ¡£
+åœ¨ L<perlsub> ä¸­ä»‹ç»ã€‚
 
 =item *
 
-´Ê·¨×÷ÓÃÓò
+ä»»æ„åµŒå¥—çš„æ•°æ®ç»“æ„å’ŒåŒ¿åå­ç¨‹åº
 
-ÔÚ L<perlsub> ÖĞ½éÉÜ¡£
-
-=item *
-
-ÔöÇ¿ÁËÕıÔò±í´ïÊ½¹¦ÄÜ
-
-ÔÚ L<perlre> ÖĞ½éÉÜ£¬Ôö¼ÓµÄÊ¾Àı²Î¼û L<perlop>¡£
+åœ¨ L<perlreftut>, L<perlref>, L<perldsc>, å’Œ L<perllol> ä¸­ä»‹ç»ã€‚
 
 =item *
 
-ÔöÇ¿ÁËµ÷ÊÔÆ÷ºÍ½»»¥Ê½»·¾³£¬¿ÉÒÔ¼¯³ÉÍâ²¿±à¼­Æ÷¡£
+é¢å‘å¯¹è±¡ç¼–ç¨‹
 
-ÔÚ L<perldebtut>, L<perldebug> ÖĞ L<perldebguts> ½éÉÜ¡£
+åœ¨ L<perlobj>, L<perlboot>, L<perltoot>, L<perltooc>,
+å’Œ L<perlbot> ä¸­ä»‹ç»ã€‚
 
 =item *
 
-POSIX 1003.1 ¼æÈİ¿â
+æ”¯æŒâ€œè½»é‡çº§è¿›ç¨‹â€(çº¿ç¨‹)
 
-²Î¼û L<POSIX>¡£
+åœ¨ L<perlthrtut> å’Œ L<threads> ä¸­ä»‹ç»ã€‚
+
+=item *
+
+æ”¯æŒ Unicode, å›½é™…åŒ–, åŒºåŸŸåŒ–
+
+åœ¨ L<perluniintro>, L<perllocale> å’Œ L<Locale::Maketext> ä¸­ä»‹ç»ã€‚
+
+=item *
+
+è¯æ³•ä½œç”¨åŸŸ
+
+åœ¨ L<perlsub> ä¸­ä»‹ç»ã€‚
+
+=item *
+
+å¢å¼ºäº†æ­£åˆ™è¡¨è¾¾å¼åŠŸèƒ½
+
+åœ¨ L<perlre> ä¸­ä»‹ç»ï¼Œå¢åŠ çš„ç¤ºä¾‹å‚è§ L<perlop>ã€‚
+
+=item *
+
+å¢å¼ºäº†è°ƒè¯•å™¨å’Œäº¤äº’å¼ç¯å¢ƒï¼Œå¯ä»¥é›†æˆå¤–éƒ¨ç¼–è¾‘å™¨ã€‚
+
+åœ¨ L<perldebtut>, L<perldebug> ä¸­ L<perldebguts> ä»‹ç»ã€‚
+
+=item *
+
+POSIX 1003.1 å…¼å®¹åº“
+
+å‚è§ L<POSIX>ã€‚
 
 =back
 
-ºÃÁË£¬ÓĞÁËÒÔÉÏÕâĞ©Ğû´«£¬ÎÒÏëI<¿Ï¶¨>ÒÑ¾­×ã¹»ÁË¡£
+å¥½äº†ï¼Œæœ‰äº†ä»¥ä¸Šè¿™äº›å®£ä¼ ï¼Œæˆ‘æƒ³I<è‚¯å®š>å·²ç»è¶³å¤Ÿäº†ã€‚
 
-=head1 ¿ÉÓÃĞÔ
+=head1 å¯ç”¨æ€§
 
-ÔÚ´ó¶àÊı²Ù×÷ÏµÍ³ÉÏ Perl ¶¼ÊÇ¿ÉÓÃµÄ¡£Êµ¼ÊÉÏËùÓĞÀà UNIX Æ½Ì¨¶¼ÊÇ¿ÉÓÃµÄ¡£
-ÏêÇé²Î¼û "Supported Platforms" L<perlport/"Supported Platforms">£¬
-ÄÇÀïÓĞÒ»¸öÇåµ¥¡£
+åœ¨å¤§å¤šæ•°æ“ä½œç³»ç»Ÿä¸Š Perl éƒ½æ˜¯å¯ç”¨çš„ã€‚å®é™…ä¸Šæ‰€æœ‰ç±» UNIX å¹³å°éƒ½æ˜¯å¯ç”¨çš„ã€‚
+è¯¦æƒ…å‚è§ "Supported Platforms" L<perlport/"Supported Platforms">ï¼Œ
+é‚£é‡Œæœ‰ä¸€ä¸ªæ¸…å•ã€‚
 
-=head1 ÔËĞĞ»·¾³
+=head1 è¿è¡Œç¯å¢ƒ
 
-²Î¼û L<perlrun>.
+å‚è§ L<perlrun>.
 
-=head1 ×÷Õß
+=head1 ä½œè€…
 
-Larry Wall <larry@wall.org>, ÒÔ¼°ÆäËûĞí¶àÆÕÍ¨ÈË
+Larry Wall <larry@wall.org>, ä»¥åŠå…¶ä»–è®¸å¤šæ™®é€šäºº
 
-Èç¹ûÄãÈÏÎªÄãµÄ Perl ³É¹¦°¸ÀıÄÜ¹»°ïÖúÄÇĞ©ĞèÒªÔÚËûÃÇµÄÏîÄ¿ÖĞÊ¹ÓÃ Perl µÄÈË£¬
-»òÕßÄãÏë¼òµ¥µØ±í´ïÒ»ÏÂÄã¶ÔÓÚ Larry ÒÔ¼°ÆäËû Perl ¿ª·¢ÈËÔ±µÄĞ»Òâ£¬ÄÇÃ´ÇëĞ´ĞÅ
-¸ø perl-thanks@perl.org¡£
+å¦‚æœä½ è®¤ä¸ºä½ çš„ Perl æˆåŠŸæ¡ˆä¾‹èƒ½å¤Ÿå¸®åŠ©é‚£äº›éœ€è¦åœ¨ä»–ä»¬çš„é¡¹ç›®ä¸­ä½¿ç”¨ Perl çš„äººï¼Œ
+æˆ–è€…ä½ æƒ³ç®€å•åœ°è¡¨è¾¾ä¸€ä¸‹ä½ å¯¹äº Larry ä»¥åŠå…¶ä»– Perl å¼€å‘äººå‘˜çš„è°¢æ„ï¼Œé‚£ä¹ˆè¯·å†™ä¿¡
+ç»™ perl-thanks@perl.orgã€‚
 
-=head1 ÎÄ¼ş
+=head1 æ–‡ä»¶
 
- "@INC"                 ¶¨Î» Perl Ä£¿éËÑË÷Â·¾¶
+ "@INC"                 å®šä½ Perl æ¨¡å—æœç´¢è·¯å¾„
 
-=head1 ²Î¼û
+=head1 å‚è§
 
- a2p    awk ½Å±¾µ½ perl ½Å±¾µÄ·­ÒëÆ÷
- s2p    sed ½Å±¾µ½ perl ½Å±¾µÄ·­ÒëÆ÷
+ a2p    awk è„šæœ¬åˆ° perl è„šæœ¬çš„ç¿»è¯‘å™¨
+ s2p    sed è„šæœ¬åˆ° perl è„šæœ¬çš„ç¿»è¯‘å™¨
 
- http://www.perl.org/       Perl Ö÷Ò³
- http://www.perl.com/       Perl ÎÄÕÂ(O'Reilly Î¬»¤)
- http://www.cpan.org/       CPAN: ÍêÕûµÄ Perl µµ°¸ÍøÂç
+ http://www.perl.org/       Perl ä¸»é¡µ
+ http://www.perl.com/       Perl æ–‡ç« (O'Reilly ç»´æŠ¤)
+ http://www.cpan.org/       CPAN: å®Œæ•´çš„ Perl æ¡£æ¡ˆç½‘ç»œ
  http://www.pm.org/         Perl Mongers
 
-=head1 Õï¶Ï
+=head1 è¯Šæ–­
 
-Ê¹ÓÃ C<use warnings> Óï¾ä(»òÕß B<-w> ÃüÁîĞĞÑ¡Ïî)¿ÉÒÔµÃµ½ºÜ¶àÓĞÓÃµÄÕï¶Ï
-ĞÅÏ¢¡£
+ä½¿ç”¨ C<use warnings> è¯­å¥(æˆ–è€… B<-w> å‘½ä»¤è¡Œé€‰é¡¹)å¯ä»¥å¾—åˆ°å¾ˆå¤šæœ‰ç”¨çš„è¯Šæ–­
+ä¿¡æ¯ã€‚
 
-²é¿´ L<perldiag> ¿ÉÒÔµÃµ½ËùÓĞµÄ Perl Õï¶ÏĞÅÏ¢µÄ½âÊÍ¡£Ê¹ÓÃ C<use diagnostics>
-Óï¾ä¿ÉÒÔ×Ô¶¯µØ½«´íÎóĞÅÏ¢×ª»»³É¸ü¼ÓÏêÏ¸µÄĞÎÊ½¡£
+æŸ¥çœ‹ L<perldiag> å¯ä»¥å¾—åˆ°æ‰€æœ‰çš„ Perl è¯Šæ–­ä¿¡æ¯çš„è§£é‡Šã€‚ä½¿ç”¨ C<use diagnostics>
+è¯­å¥å¯ä»¥è‡ªåŠ¨åœ°å°†é”™è¯¯ä¿¡æ¯è½¬æ¢æˆæ›´åŠ è¯¦ç»†çš„å½¢å¼ã€‚
 
-±àÒëÊ±²úÉúµÄ´íÎóĞÅÏ¢¿ÉÒÔ¸æËßÄã´íÎó·¢ÉúµÄĞĞºÅ£¬ÒÔ¼°¾ßÌå³ö´íµÄÎ»ÖÃ¡£
-(ÒëÕß×¢£ºÒòÎª Perl ×ÜÊÇÔÚ´íÎó·¢ÉúÖ®ºó²Å»á·¢ÏÖ´íÎó£¬Òò´ËÊµ¼ÊµÄ´íÎóÎ»ÖÃ
-ÍùÍùÒª±ÈÌáÊ¾µÄ¿¿Ç°Ò»Ğ©)
+ç¼–è¯‘æ—¶äº§ç”Ÿçš„é”™è¯¯ä¿¡æ¯å¯ä»¥å‘Šè¯‰ä½ é”™è¯¯å‘ç”Ÿçš„è¡Œå·ï¼Œä»¥åŠå…·ä½“å‡ºé”™çš„ä½ç½®ã€‚
+(è¯‘è€…æ³¨ï¼šå› ä¸º Perl æ€»æ˜¯åœ¨é”™è¯¯å‘ç”Ÿä¹‹åæ‰ä¼šå‘ç°é”™è¯¯ï¼Œå› æ­¤å®é™…çš„é”™è¯¯ä½ç½®
+å¾€å¾€è¦æ¯”æç¤ºçš„é å‰ä¸€äº›)
 
-Èç¹û Perl ½Å±¾ÊÇÍ¨¹ıÃüÁîĞĞ²ÎÊı B<-e> ´«µİ¹ıÈ¥µÄ£¬ÄÇÃ´Ã¿Ò»¸ö B<-e> ²ÎÊı
-½«±»µ±×÷Ò»ĞĞÀ´¼ÆËãĞĞºÅ¡£
+å¦‚æœ Perl è„šæœ¬æ˜¯é€šè¿‡å‘½ä»¤è¡Œå‚æ•° B<-e> ä¼ é€’è¿‡å»çš„ï¼Œé‚£ä¹ˆæ¯ä¸€ä¸ª B<-e> å‚æ•°
+å°†è¢«å½“ä½œä¸€è¡Œæ¥è®¡ç®—è¡Œå·ã€‚
 
-Setuid ½Å±¾¿ÉÒÔÌí¼ÓÔ¼Êø£¬´Ó¶ø²úÉúÀàËÆÓÚ¡°Insecure dependency¡± (²»°²È«µÄÒÀÀµ)
-Ö®ÀàµÄÏûÏ¢¡£²Î¼û L<perlsec>¡£
+Setuid è„šæœ¬å¯ä»¥æ·»åŠ çº¦æŸï¼Œä»è€Œäº§ç”Ÿç±»ä¼¼äºâ€œInsecure dependencyâ€ (ä¸å®‰å…¨çš„ä¾èµ–)
+ä¹‹ç±»çš„æ¶ˆæ¯ã€‚å‚è§ L<perlsec>ã€‚
 
-ÎÒÃÇÊÇ²»ÊÇÓ¦¸ÃÌá³«ÔÚÃ¿¸ö³ÌĞòÖĞ¶¼Ê¹ÓÃ B<-w> ¿ª¹ØÄØ£¿
+æˆ‘ä»¬æ˜¯ä¸æ˜¯åº”è¯¥æå€¡åœ¨æ¯ä¸ªç¨‹åºä¸­éƒ½ä½¿ç”¨ B<-w> å¼€å…³å‘¢ï¼Ÿ
 
 =head1 BUGS
 
-B<-w> ÃüÁîĞĞÑ¡Ïî²»ÊÇÇ¿ÖÆµÄ¡£
+B<-w> å‘½ä»¤è¡Œé€‰é¡¹ä¸æ˜¯å¼ºåˆ¶çš„ã€‚
 
-Perl µÄÓĞĞ©²Ù×÷ÊÇºÍÄãµÄ»úÆ÷Ïà¹ØµÄ£¬±ÈÈç type casting£¨ÀàĞÍ×ª»»£©¡¢
-atof() ²Ù×÷¡¢»¹ÓĞÊ¹ÓÃ sprintf() ½øĞĞ¸¡µãÊıµÄÊä³ö£¬µÈµÈ¡£
+Perl çš„æœ‰äº›æ“ä½œæ˜¯å’Œä½ çš„æœºå™¨ç›¸å…³çš„ï¼Œæ¯”å¦‚ type castingï¼ˆç±»å‹è½¬æ¢ï¼‰ã€
+atof() æ“ä½œã€è¿˜æœ‰ä½¿ç”¨ sprintf() è¿›è¡Œæµ®ç‚¹æ•°çš„è¾“å‡ºï¼Œç­‰ç­‰ã€‚
 
-Èç¹ûÄãµÄ±ê×¼ÊäÈëÊä³ö¿âĞèÒªÔÚÃ¿´Î¶Á»òÕßĞ´²Ù×÷Ö®ºóÒÆ¶¯ÎÄ¼şÖ¸Õë£¬ÄÇÃ´ Perl ÖĞ»á
-Í¬ÑùÈç´Ë£¬µ«ÊÇ sysread() ºÍ syswrite() º¯ÊıÖĞ²»»áÕâÑù¡£
+å¦‚æœä½ çš„æ ‡å‡†è¾“å…¥è¾“å‡ºåº“éœ€è¦åœ¨æ¯æ¬¡è¯»æˆ–è€…å†™æ“ä½œä¹‹åç§»åŠ¨æ–‡ä»¶æŒ‡é’ˆï¼Œé‚£ä¹ˆ Perl ä¸­ä¼š
+åŒæ ·å¦‚æ­¤ï¼Œä½†æ˜¯ sysread() å’Œ syswrite() å‡½æ•°ä¸­ä¸ä¼šè¿™æ ·ã€‚
 
-¾¡¹ÜÃ»ÓĞÒ»ÖÖÄÚ½¨Êı¾İÀàĞÍµÄ³ß´ç»áÊÜµ½³ıÁËÎïÀíÄÚ´æ´óĞ¡Ö®ÍâµÄÆäËüÈÎºÎÏŞÖÆ£¬µ«
-ÊÇÈÔÈ»ÓĞÒ»Ğ©¶«Î÷ÔÚÖÆÔ¼×ÅÄã£º±äÁ¿ÃûµÄ³¤¶È²»ÄÜ³¬¹ı 251 ¸ö×ÖÄ¸£»ÁíÍâ£¬Õï¶ÏÊ±ÏÔÊ¾
-³öÀ´µÄĞĞºÅÔÚ Perl ÄÚ²¿ÊÇÊ¹ÓÃ¶ÌÕûĞÍ´æ´¢µÄ£¬Òò´Ë×î´ó²»ÄÜ³¬¹ı 65535£¨³¬¹ıÕâ¸öÊı
-Ö®ºó½«·¢Éú»·ÈÆ£©¡£
+å°½ç®¡æ²¡æœ‰ä¸€ç§å†…å»ºæ•°æ®ç±»å‹çš„å°ºå¯¸ä¼šå—åˆ°é™¤äº†ç‰©ç†å†…å­˜å¤§å°ä¹‹å¤–çš„å…¶å®ƒä»»ä½•é™åˆ¶ï¼Œä½†
+æ˜¯ä»ç„¶æœ‰ä¸€äº›ä¸œè¥¿åœ¨åˆ¶çº¦ç€ä½ ï¼šå˜é‡åçš„é•¿åº¦ä¸èƒ½è¶…è¿‡ 251 ä¸ªå­—æ¯ï¼›å¦å¤–ï¼Œè¯Šæ–­æ—¶æ˜¾ç¤º
+å‡ºæ¥çš„è¡Œå·åœ¨ Perl å†…éƒ¨æ˜¯ä½¿ç”¨çŸ­æ•´å‹å­˜å‚¨çš„ï¼Œå› æ­¤æœ€å¤§ä¸èƒ½è¶…è¿‡ 65535ï¼ˆè¶…è¿‡è¿™ä¸ªæ•°
+ä¹‹åå°†å‘ç”Ÿç¯ç»•ï¼‰ã€‚
 
-Äã¿ÉÒÔ½«Äã·¢ÏÖµÄ bug »ã±¨µ½ perlbug@perl.org¡£²»¹ı×îºÃ¸½ÉÏÒ»·İÍêÕûµÄÅäÖÃĞÅ
-Ï¢£¬perl Ô´´úÂëÊ÷ÖĞµÄ myconfig ¿ÉÒÔ°ïÄã×öÕâ¼şÊÂ£¬»òÕßÓÃ C<perl -V> Ò²ĞĞ¡£Èç¹û
-Äã³É¹¦µØ±àÒëÁË Perl£¬ÄÇÃ´Äã¿ÉÒÔÔÚ F<utils/> Ä¿Â¼ÏÂÕÒµ½ B<perlbug> ½Å±¾£¬Ëü¿É
-ÒÔ°ïÖúÄãÓÊ¼ÄÒ»·İ bug ±¨±í¡£
+ä½ å¯ä»¥å°†ä½ å‘ç°çš„ bug æ±‡æŠ¥åˆ° perlbug@perl.orgã€‚ä¸è¿‡æœ€å¥½é™„ä¸Šä¸€ä»½å®Œæ•´çš„é…ç½®ä¿¡
+æ¯ï¼Œperl æºä»£ç æ ‘ä¸­çš„ myconfig å¯ä»¥å¸®ä½ åšè¿™ä»¶äº‹ï¼Œæˆ–è€…ç”¨ C<perl -V> ä¹Ÿè¡Œã€‚å¦‚æœ
+ä½ æˆåŠŸåœ°ç¼–è¯‘äº† Perlï¼Œé‚£ä¹ˆä½ å¯ä»¥åœ¨ F<utils/> ç›®å½•ä¸‹æ‰¾åˆ° B<perlbug> è„šæœ¬ï¼Œå®ƒå¯
+ä»¥å¸®åŠ©ä½ é‚®å¯„ä¸€ä»½ bug æŠ¥è¡¨ã€‚
 
-Perl ÊÂÊµÉÏÊÇÒ»¸ö¡°Ø²ÕÛµÄÀ¬»øÁĞ±íÆ÷¡±£¬µ«ÊÇÇ§Íò²»Òª¸æËßÈÎºÎÈËÎÒÕâÃ´Ëµ¹ı¡£^_^
+Perl äº‹å®ä¸Šæ˜¯ä¸€ä¸ªâ€œå¤­æŠ˜çš„åƒåœ¾åˆ—è¡¨å™¨â€ï¼Œä½†æ˜¯åƒä¸‡ä¸è¦å‘Šè¯‰ä»»ä½•äººæˆ‘è¿™ä¹ˆè¯´è¿‡ã€‚^_^
 
-=head1 ×¢ÒâÊÂÏî
+=head1 æ³¨æ„äº‹é¡¹
 
-Perl µÄ¸ñÑÔÊÇ¡°ÌõÌõ´óÂ·Í¨ÂŞÂí¡±£¨There's more than one way to do it.£©£¬¾ß
-ÌåÓĞ¶àÉÙ×÷ÎªÁ·Ï°Áô¸ø¶ÁÕßÈ¥²Â²âºÃÁË¡£
+Perl çš„æ ¼è¨€æ˜¯â€œæ¡æ¡å¤§è·¯é€šç½—é©¬â€ï¼ˆThere's more than one way to do it.ï¼‰ï¼Œå…·
+ä½“æœ‰å¤šå°‘ä½œä¸ºç»ƒä¹ ç•™ç»™è¯»è€…å»çŒœæµ‹å¥½äº†ã€‚
 
-³ÌĞòÔ±µÄÈıÖÖÖ÷ÒªÃÀµÂÊÇ£ºÀÁ¶è¡¢¼±ÔêºÍ°ÁÂı¡£ÖÁÓÚÎªÊ²Ã´ÕâÃ´ËµÇë²Î¿¼ÂæÍÕÊé¡£
+ç¨‹åºå‘˜çš„ä¸‰ç§ä¸»è¦ç¾å¾·æ˜¯ï¼šæ‡’æƒ°ã€æ€¥èºå’Œå‚²æ…¢ã€‚è‡³äºä¸ºä»€ä¹ˆè¿™ä¹ˆè¯´è¯·å‚è€ƒéª†é©¼ä¹¦ã€‚
 
 =head1 TRANSLATORS
 
-ÍõĞË»ª "flw" <flw@cpan.org>
+ç‹å…´å "flw" <flw@cpan.org>
