--- a/lib/POD2/CN/perlembed.pod
+++ b/lib/POD2/CN/perlembed.pod
@@ -1,168 +1,168 @@
 # -*- mode: outline; outline-regexp: "[=]+" -*-
-=encoding gb2312
+=encoding utf8
  
 =head1 NAME
 
-perlembed - ÔÚ C ³ÌÐòÖÐÇ¶Èë perl
+perlembed - åœ¨ C ç¨‹åºä¸­åµŒå…¥ perl
 
 =head1 DESCRIPTION
 
-=head2 µ¼ÑÔ
+=head2 å¯¼è¨€
 
-ÄãÊÇÏëÒª£º
+ä½ æ˜¯æƒ³è¦ï¼š
 
 =over 5
 
-=item B<ÔÚ Perl ÖÐÊ¹ÓÃ C£¿>
+=item B<åœ¨ Perl ä¸­ä½¿ç”¨ Cï¼Ÿ>
 
-ÔÄ¶Á L<perlxstut>¡¢L<perlxs>¡¢L<h2xs>¡¢L<perlguts> ºÍ L<perlapi>¡£
+é˜…è¯» L<perlxstut>ã€L<perlxs>ã€L<h2xs>ã€L<perlguts> å’Œ L<perlapi>ã€‚
 
-=item B<ÔÚ Perl ÖÐÊ¹ÓÃ Unix ³ÌÐò£¿>
+=item B<åœ¨ Perl ä¸­ä½¿ç”¨ Unix ç¨‹åºï¼Ÿ>
 
-ÔÄ¶Á·´ÒýÓÃ·û£¨back-quote£©ºÍ L <perlfunc> ÖÐµÄ C<system> ÒÔ¼° C<exec>¡£
+é˜…è¯»åå¼•ç”¨ç¬¦ï¼ˆback-quoteï¼‰å’Œ L <perlfunc> ä¸­çš„ C<system> ä»¥åŠ C<exec>ã€‚
 
-=item B<ÔÚ Perl ÖÐÊ¹ÓÃ Perl£¿>
+=item B<åœ¨ Perl ä¸­ä½¿ç”¨ Perlï¼Ÿ>
 
-ÔÄ¶Á L<perlfunc/do>¡¢L<perlfunc/eval>¡¢L<perlfunc/require> ÒÔ¼°
-L<perlfunc/use>¡£
+é˜…è¯» L<perlfunc/do>ã€L<perlfunc/eval>ã€L<perlfunc/require> ä»¥åŠ
+L<perlfunc/use>ã€‚
 
-=item B<ÔÚ C ÖÐÊ¹ÓÃ C£¿>
+=item B<åœ¨ C ä¸­ä½¿ç”¨ Cï¼Ÿ>
 
-ÖØÐÂ¿¼ÂÇÒ»ÏÂÄãµÄÉè¼Æ¡£
+é‡æ–°è€ƒè™‘ä¸€ä¸‹ä½ çš„è®¾è®¡ã€‚
 
-=item B<ÔÚ C ÖÐÊ¹ÓÃ Perl£¿>
+=item B<åœ¨ C ä¸­ä½¿ç”¨ Perlï¼Ÿ>
 
-Çë¼ÌÐø¡­¡­
+è¯·ç»§ç»­â€¦â€¦
 
 =back
 
-=head2 Â·±ê
+=head2 è·¯æ ‡
 
 =over 5
 
 =item *
 
-±àÒëÄãµÄ C ³ÌÐò
+ç¼–è¯‘ä½ çš„ C ç¨‹åº
 
 =item *
 
-ÔÚÄãµÄ C ³ÌÐòÖÐ¼ÓÈëÒ»¸ö Perl ½âÊÍÆ÷
+åœ¨ä½ çš„ C ç¨‹åºä¸­åŠ å…¥ä¸€ä¸ª Perl è§£é‡Šå™¨
 
 =item *
 
-ÔÚ C ³ÌÐòÖÐµ÷ÓÃÒ»¸ö Perl º¯Êý
+åœ¨ C ç¨‹åºä¸­è°ƒç”¨ä¸€ä¸ª Perl å‡½æ•°
 
 =item *
 
-ÔÚ C ³ÌÐòÖÐ¶ÔÒ»¸ö Perl Óï¾äÇóÖµ
+åœ¨ C ç¨‹åºä¸­å¯¹ä¸€ä¸ª Perl è¯­å¥æ±‚å€¼
 
 =item *
 
-ÔÚ C ³ÌÐòÖÐ½øÐÐ Perl Ä£Ê½Æ¥ÅäºÍÌæ»»
+åœ¨ C ç¨‹åºä¸­è¿›è¡Œ Perl æ¨¡å¼åŒ¹é…å’Œæ›¿æ¢
 
 =item *
 
-ÔÚ C ³ÌÐòÖÐÐÞ¸Ä Perl ²ÎÊýÕ»
+åœ¨ C ç¨‹åºä¸­ä¿®æ”¹ Perl å‚æ•°æ ˆ
 
 =item *
 
-±£³ÖÒ»¸ö³Ö¾ÃµÄ½âÊÍÆ÷
+ä¿æŒä¸€ä¸ªæŒä¹…çš„è§£é‡Šå™¨
 
 =item *
 
-±£³Ö¶à¸ö½âÊÍÆ÷ÊµÀý
+ä¿æŒå¤šä¸ªè§£é‡Šå™¨å®žä¾‹
 
 =item *
 
-ÔÚ C ³ÌÐòÖÐÊ¹ÓÃ Perl Ä£¿é£¬Ä£¿é±¾ÉíÊ¹ÓÃ C ¿â
+åœ¨ C ç¨‹åºä¸­ä½¿ç”¨ Perl æ¨¡å—ï¼Œæ¨¡å—æœ¬èº«ä½¿ç”¨ C åº“
 
 =item *
 
-ÔÚ Win32 ÏÂÄÚÇ¶ Perl
+åœ¨ Win32 ä¸‹å†…åµŒ Perl
 
 =back 
 
-=head2 ±àÒëÄãµÄ C ³ÌÐò
+=head2 ç¼–è¯‘ä½ çš„ C ç¨‹åº
 
-Äã²»ÊÇÎ¨Ò»Ò»¸öÔÚ±àÒë±¾ÎÄµµµÄÀý×ÓÊ±Óöµ½À§ÄÑµÄ¡£Ò»¸öÖØÒª¹æÔòÊÇ£ºÓÃ±àÒëÄãµÄ
-Perl ÏàÍ¬¹æÔòÀ´±àÒë³ÌÐò£¨¶Ô²»Æð£¬¶ÔÄã´óÉùº°ÁË£©¡£
+ä½ ä¸æ˜¯å”¯ä¸€ä¸€ä¸ªåœ¨ç¼–è¯‘æœ¬æ–‡æ¡£çš„ä¾‹å­æ—¶é‡åˆ°å›°éš¾çš„ã€‚ä¸€ä¸ªé‡è¦è§„åˆ™æ˜¯ï¼šç”¨ç¼–è¯‘ä½ çš„
+Perl ç›¸åŒè§„åˆ™æ¥ç¼–è¯‘ç¨‹åºï¼ˆå¯¹ä¸èµ·ï¼Œå¯¹ä½ å¤§å£°å–Šäº†ï¼‰ã€‚
 
-Ã¿¸öÊ¹ÓÃ Perl µÄ C ³ÌÐò¶¼±ØÐëÁ´½Óµ½ I<perl ¿â>¡£I<perl ¿â> ÊÇ
-Ê²Ã´£¿Perl ±¾ÉíÊÇÓÃ C À´Ð´µÄ£¬perl library ÊÇÒ»ÏµÁÐ±àÒë¹ýµÄ C ³ÌÐò£¬Õâ
-Ð©½«ÓÃÓÚ´´½¨ÄãµÄ¿ÉÖ´ÐÐ perl ³ÌÐò£¨I</usr/bin/perl> »òÕßµÈ¼ÛµÄ¶«Î÷£©¡£
-£¨ÍÆÂÛ£º³ý·Ç Perl ÊÇÔÚÄãµÄ»úÆ÷ÉÏ±àÒëµÄ£¬»òÕßºÏÊÊ°²×°µÄ£¬·ñÔòÄã½«²»ÄÜÔÚ
-C ³ÌÐòÖÐÊ¹ÓÃ Perl¡ª¡ªÕâÒ²ÊÇÎªÊ²Ã´Äã²»Ó¦¸Ã´ÓÁíÒ»Ì¨»úÆ÷ÖÐ¸´ÖÆ Perl µÄ¿ÉÖ´
-ÐÐ³ÌÐò¶ø²»¸´ÖÆ I<lib> Ä¿Â¼¡££©
+æ¯ä¸ªä½¿ç”¨ Perl çš„ C ç¨‹åºéƒ½å¿…é¡»é“¾æŽ¥åˆ° I<perl åº“>ã€‚I<perl åº“> æ˜¯
+ä»€ä¹ˆï¼ŸPerl æœ¬èº«æ˜¯ç”¨ C æ¥å†™çš„ï¼Œperl library æ˜¯ä¸€ç³»åˆ—ç¼–è¯‘è¿‡çš„ C ç¨‹åºï¼Œè¿™
+äº›å°†ç”¨äºŽåˆ›å»ºä½ çš„å¯æ‰§è¡Œ perl ç¨‹åºï¼ˆI</usr/bin/perl> æˆ–è€…ç­‰ä»·çš„ä¸œè¥¿ï¼‰ã€‚
+ï¼ˆæŽ¨è®ºï¼šé™¤éž Perl æ˜¯åœ¨ä½ çš„æœºå™¨ä¸Šç¼–è¯‘çš„ï¼Œæˆ–è€…åˆé€‚å®‰è£…çš„ï¼Œå¦åˆ™ä½ å°†ä¸èƒ½åœ¨
+C ç¨‹åºä¸­ä½¿ç”¨ Perlâ€”â€”è¿™ä¹Ÿæ˜¯ä¸ºä»€ä¹ˆä½ ä¸åº”è¯¥ä»Žå¦ä¸€å°æœºå™¨ä¸­å¤åˆ¶ Perl çš„å¯æ‰§
+è¡Œç¨‹åºè€Œä¸å¤åˆ¶ I<lib> ç›®å½•ã€‚ï¼‰
 
-µ±ÄãÔÚ C ÖÐÊ¹ÓÃ Perl Ê±£¬ÄãµÄ C ³ÌÐò½«£¨Í¨³£ÊÇÕâÑù£©·ÖÅä¡¢ÔËÐÐÈ»ºóÊÍ·Å
-Ò»¸ö I<PerlInterpreter> ¶ÔÏó£¬Õâ¸ö¶ÔÏóÊÇÔÚ perl ¿âÖÐ¶¨ÒåµÄ¡£
+å½“ä½ åœ¨ C ä¸­ä½¿ç”¨ Perl æ—¶ï¼Œä½ çš„ C ç¨‹åºå°†ï¼ˆé€šå¸¸æ˜¯è¿™æ ·ï¼‰åˆ†é…ã€è¿è¡Œç„¶åŽé‡Šæ”¾
+ä¸€ä¸ª I<PerlInterpreter> å¯¹è±¡ï¼Œè¿™ä¸ªå¯¹è±¡æ˜¯åœ¨ perl åº“ä¸­å®šä¹‰çš„ã€‚
 
-Èç¹ûÄãµÄ Perl ×ã¹»ÐÂ£¬°üº¬ÁË±¾ÎÄµµ£¨°æ±¾ 5.002 »òÕß¸üÐÂµÄ£©£¬ÄÇÃ´ perl
-¿â£¨»¹ÓÐ±ØÐëµÄ I<EXTERN.h> ºÍ I<perl.h>£©½«ÔÚ¿´ÉÏÈ¥ÏñÕâÑùµÄÄ¿Â¼ÖÐ£º
+å¦‚æžœä½ çš„ Perl è¶³å¤Ÿæ–°ï¼ŒåŒ…å«äº†æœ¬æ–‡æ¡£ï¼ˆç‰ˆæœ¬ 5.002 æˆ–è€…æ›´æ–°çš„ï¼‰ï¼Œé‚£ä¹ˆ perl
+åº“ï¼ˆè¿˜æœ‰å¿…é¡»çš„ I<EXTERN.h> å’Œ I<perl.h>ï¼‰å°†åœ¨çœ‹ä¸ŠåŽ»åƒè¿™æ ·çš„ç›®å½•ä¸­ï¼š
 
     /usr/local/lib/perl5/your_architecture_here/CORE
 
-»òÕß¿ÉÄÜ¾ÍÊÇ
+æˆ–è€…å¯èƒ½å°±æ˜¯
 
     /usr/local/lib/perl5/CORE
 
-»òÕß¿ÉÄÜÏñÕâÑù
+æˆ–è€…å¯èƒ½åƒè¿™æ ·
 
     /usr/opt/perl5/CORE
 
-Ö´ÐÐÕâÑùµÄÓï¾ä¿ÉÒÔÕÒµ½ CORE£º
+æ‰§è¡Œè¿™æ ·çš„è¯­å¥å¯ä»¥æ‰¾åˆ° COREï¼š
 
     perl -MConfig -e 'print $Config{archlib}'
 
-ÕâÊÇÔÚÎÒµÄ Linux »úÆ÷ÉÏ±àÒëÏÂÒ»½ÚÖÐÀý×Ó L<Adding a Perl
-interpreter to your C program> µÄ·½·¨£º
+è¿™æ˜¯åœ¨æˆ‘çš„ Linux æœºå™¨ä¸Šç¼–è¯‘ä¸‹ä¸€èŠ‚ä¸­ä¾‹å­ L<Adding a Perl
+interpreter to your C program> çš„æ–¹æ³•ï¼š
 
     % gcc -O2 -Dbool=char -DHAS_BOOL -I/usr/local/include
     -I/usr/local/lib/perl5/i586-linux/5.003/CORE
     -L/usr/local/lib/perl5/i586-linux/5.003/CORE
     -o interp interp.c -lperl -lm
 
-£¨¾ÍÕâÒ»ÐÐ¡££©ÔÚÎÒµÄ DEC Alpha Ê¹ÓÃ¾ÉµÄ 5.003_05£¬Õâ¸ö¡°ÖäÓï¡±ÓÐÒ»µã²»Í¬£º
+ï¼ˆå°±è¿™ä¸€è¡Œã€‚ï¼‰åœ¨æˆ‘çš„ DEC Alpha ä½¿ç”¨æ—§çš„ 5.003_05ï¼Œè¿™ä¸ªâ€œå’’è¯­â€æœ‰ä¸€ç‚¹ä¸åŒï¼š
 
     % cc -O2 -Olimit 2900 -DSTANDARD_C -I/usr/local/include
     -I/usr/local/lib/perl5/alpha-dec_osf/5.00305/CORE
     -L/usr/local/lib/perl5/alpha-dec_osf/5.00305/CORE -L/usr/local/lib
     -D__LANGUAGE_C__ -D_NO_PROTO -o interp interp.c -lperl -lm
 
-ÔõÑùÖªµÀÓ¦¸Ã¼ÓÉÏÊ²Ã´ÄØ£¿¼Ù¶¨ÄãµÄ Perl ÖÐÔÚ 5.001 Ö®ºó£¬Ö´ÐÐ C<perl -V>
-ÃüÁî£¬ÌØ±ðÒª×¢Òâ¡°cc¡±ºÍ¡°ccflags¡±ÐÅÏ¢¡£
+æ€Žæ ·çŸ¥é“åº”è¯¥åŠ ä¸Šä»€ä¹ˆå‘¢ï¼Ÿå‡å®šä½ çš„ Perl ä¸­åœ¨ 5.001 ä¹‹åŽï¼Œæ‰§è¡Œ C<perl -V>
+å‘½ä»¤ï¼Œç‰¹åˆ«è¦æ³¨æ„â€œccâ€å’Œâ€œccflagsâ€ä¿¡æ¯ã€‚
 
-Äã±ØÐëÑ¡ÔñºÏÊÊµÄ±àÒëÆ÷£¨I<cc>¡¢I<gcc> µÈµÈ£©¡£ÔÚÄãµÄ»úÆ÷ÉÏ£ºC<perl
--MConfig -e 'print $Config{cc}'> ½«¸æËßÄãÒªÊ¹ÓÃÊ²Ã´¡£
+ä½ å¿…é¡»é€‰æ‹©åˆé€‚çš„ç¼–è¯‘å™¨ï¼ˆI<cc>ã€I<gcc> ç­‰ç­‰ï¼‰ã€‚åœ¨ä½ çš„æœºå™¨ä¸Šï¼šC<perl
+-MConfig -e 'print $Config{cc}'> å°†å‘Šè¯‰ä½ è¦ä½¿ç”¨ä»€ä¹ˆã€‚
 
-Äã»¹ÒªÎªÄãµÄ»úÆ÷Ñ¡ÔñºÏÊÊµÄ¿âÄ¿Â¼£¨I</usr/local/lib/...>£©¡£Èç¹ûÄãµÄ±à
-ÒëÆ÷±§Ô¹Ä³¸öº¯ÊýÃ»ÓÐ¶¨Òå£¬»òÕßËüÕÒ²»µ½ I<-lperl>£¬ÕâÊ±ÄãÐèÒª¸ü¸ÄÔÚ
-C<-L> Ö®ºóµÄÂ·¾¶¡£Èç¹ûËü±§Ô¹ÕÒ²»µ½ I<EXTERN.h> ºÍ I<perl.h>£¬ÄãÐèÒª¸ü
-¸ÄÔÚ C<-I> Ö®ºóµÄÂ·¾¶¡£
+ä½ è¿˜è¦ä¸ºä½ çš„æœºå™¨é€‰æ‹©åˆé€‚çš„åº“ç›®å½•ï¼ˆI</usr/local/lib/...>ï¼‰ã€‚å¦‚æžœä½ çš„ç¼–
+è¯‘å™¨æŠ±æ€¨æŸä¸ªå‡½æ•°æ²¡æœ‰å®šä¹‰ï¼Œæˆ–è€…å®ƒæ‰¾ä¸åˆ° I<-lperl>ï¼Œè¿™æ—¶ä½ éœ€è¦æ›´æ”¹åœ¨
+C<-L> ä¹‹åŽçš„è·¯å¾„ã€‚å¦‚æžœå®ƒæŠ±æ€¨æ‰¾ä¸åˆ° I<EXTERN.h> å’Œ I<perl.h>ï¼Œä½ éœ€è¦æ›´
+æ”¹åœ¨ C<-I> ä¹‹åŽçš„è·¯å¾„ã€‚
 
-Äã¿ÉÄÜ»¹Òª¼ÓÉÏÒ»Ð©¶îÍâµÄ¿â¡£¼ÓÊ²Ã´ÄØ£¿¿ÉÄÜÊÇÓÃÏÂÃæÓï¾äÊä³öµÄÄÇÐ©£º
+ä½ å¯èƒ½è¿˜è¦åŠ ä¸Šä¸€äº›é¢å¤–çš„åº“ã€‚åŠ ä»€ä¹ˆå‘¢ï¼Ÿå¯èƒ½æ˜¯ç”¨ä¸‹é¢è¯­å¥è¾“å‡ºçš„é‚£äº›ï¼š
 
    perl -MConfig -e 'print $Config{libs}'
 
-Èç¹ûÄãµÄ perl ¿âÅäÖÃÊÇÊÊµ±µÄ£¬ÒÑ¾­°²×°ÁË B<ExtUtils::Embed> Ä£¿é£¬Ëü»á
-ÎªÄã¾ö¶¨ËùÓÐµÄÕâÐ©ÐÅÏ¢£º
+å¦‚æžœä½ çš„ perl åº“é…ç½®æ˜¯é€‚å½“çš„ï¼Œå·²ç»å®‰è£…äº† B<ExtUtils::Embed> æ¨¡å—ï¼Œå®ƒä¼š
+ä¸ºä½ å†³å®šæ‰€æœ‰çš„è¿™äº›ä¿¡æ¯ï¼š
 
    % cc -o interp interp.c `perl -MExtUtils::Embed -e ccopts -e ldopts`
 
-Èç¹û B<ExtUtils::Embed> Ä£¿é²»ÊÇÄãµÄ Perl ·¢ÐÐ°æµÄÒ»²¿·Ö£¬Äã¿ÉÒÔ´Ó
+å¦‚æžœ B<ExtUtils::Embed> æ¨¡å—ä¸æ˜¯ä½ çš„ Perl å‘è¡Œç‰ˆçš„ä¸€éƒ¨åˆ†ï¼Œä½ å¯ä»¥ä»Ž
 http://www.perl.com/perl/CPAN/modules/by-module/ExtUtils/
-»ñµÃ¡££¨Èç¹û±¾ÎÄµµÊÇÀ´×ÔÄãµÄ Perl ·¢ÐÐ°æ£¬ÄÇÄãÓÃµÄÊÇ 5.004 »òÕß¸üºÃ£¬
-Äã¾ÍÒÑ¾­ÓÐÕâ¸öÄ£¿éÁË¡££©
+èŽ·å¾—ã€‚ï¼ˆå¦‚æžœæœ¬æ–‡æ¡£æ˜¯æ¥è‡ªä½ çš„ Perl å‘è¡Œç‰ˆï¼Œé‚£ä½ ç”¨çš„æ˜¯ 5.004 æˆ–è€…æ›´å¥½ï¼Œ
+ä½ å°±å·²ç»æœ‰è¿™ä¸ªæ¨¡å—äº†ã€‚ï¼‰
 
-CPAN ÉÏ B<ExtUtils::Embed> Ì××°Ò²°üº¬±¾ÎÄµµÀý×ÓµÄËùÓÐÔ´´úÂë£¬²âÊÔ£¬¶î
-ÍâµÄÀý×ÓÒÔ¼°ÆäËü¿ÉÄÜÓÐÓÃµÄÐÅÏ¢¡£
+CPAN ä¸Š B<ExtUtils::Embed> å¥—è£…ä¹ŸåŒ…å«æœ¬æ–‡æ¡£ä¾‹å­çš„æ‰€æœ‰æºä»£ç ï¼Œæµ‹è¯•ï¼Œé¢
+å¤–çš„ä¾‹å­ä»¥åŠå…¶å®ƒå¯èƒ½æœ‰ç”¨çš„ä¿¡æ¯ã€‚
 
-=head2 ÔÚ C ³ÌÐòÖÐ¼ÓÈë Perl ½âÊÍÆ÷
+=head2 åœ¨ C ç¨‹åºä¸­åŠ å…¥ Perl è§£é‡Šå™¨
 
-ÔÚÄ³ÖÖÒâÒåÉÏËµ£¬perl£¨ÕâÀïÖ¸ C ³ÌÐò£©ÊÇÒ»¸öÄÚÇ¶ Perl£¨ÕâÀïÖ¸ÓïÑÔ£©µÄÒ»
-¸öºÜºÃµÄÀý×Ó¡£ËùÒÔÎÒ½«ÓÃ°üº¬ÔÚ·¢ÐÐ°æÔ´ÎÄ¼þÖÐµÄ I<miniperlmain.c> À´ÑÝ
-Ê¾¡£ÕâÊÇÒ»¸ö×¾ÁÓµÄ¡¢²»¿ÉÒÆÖ²µÄ I<miniperlmain.c> °æ±¾£¬µ«ÊÇ°üº¬ÁËÄÚÇ¶
-µÄ±¾ÖÊ£º
+åœ¨æŸç§æ„ä¹‰ä¸Šè¯´ï¼Œperlï¼ˆè¿™é‡ŒæŒ‡ C ç¨‹åºï¼‰æ˜¯ä¸€ä¸ªå†…åµŒ Perlï¼ˆè¿™é‡ŒæŒ‡è¯­è¨€ï¼‰çš„ä¸€
+ä¸ªå¾ˆå¥½çš„ä¾‹å­ã€‚æ‰€ä»¥æˆ‘å°†ç”¨åŒ…å«åœ¨å‘è¡Œç‰ˆæºæ–‡ä»¶ä¸­çš„ I<miniperlmain.c> æ¥æ¼”
+ç¤ºã€‚è¿™æ˜¯ä¸€ä¸ªæ‹™åŠ£çš„ã€ä¸å¯ç§»æ¤çš„ I<miniperlmain.c> ç‰ˆæœ¬ï¼Œä½†æ˜¯åŒ…å«äº†å†…åµŒ
+çš„æœ¬è´¨ï¼š
 
     #include <EXTERN.h>               /* from the Perl distribution     */
     #include <perl.h>                 /* from the Perl distribution     */
@@ -182,17 +182,17 @@ CPAN ÉÏ B<ExtUtils::Embed> Ì××°Ò²°üº¬±¾ÎÄµµÀý×ÓµÄËùÓÐÔ´´úÂë£¬²âÊÔ£¬¶î
 	PERL_SYS_TERM();
     }
 
-×¢Òâ£¬ÎÒÃÇÃ»ÓÐÓÃµ½ C<env> Ö¸Õë¡£Í¨³£Ö»ÊÇ×÷Îª C<perl_parse> µÄ×îºóÒ»¸ö
-²ÎÊýÌá¹©¸øËü¡£ÕâÀï C<env> ÓÃ C<NULL> ´úÌæÁË£¬±íÊ¾Ê¹ÓÃµ±Ç°µÄ»·¾³¡£
-PERL_SYS_INIT3() ºÍ  PERL_SYS_TERM() ºêÎª Perl ½âÊÍÆ÷µÄÔËÐÐÌá¹©ÁË±ØÒª
-µÄ¡¢ÏµÍ³ÌØ¶¨µÄ C ÔËÐÐ»·¾³¡£ÓÉÓÚ  PERL_SYS_INIT3() ¿ÉÄÜÐÞ¸Ä C<env>£¬Ëù
-ÓÐ×îºÃÌá¹© perl_parse() Ò»¸ö C<env> ²ÎÊý¡£
+æ³¨æ„ï¼Œæˆ‘ä»¬æ²¡æœ‰ç”¨åˆ° C<env> æŒ‡é’ˆã€‚é€šå¸¸åªæ˜¯ä½œä¸º C<perl_parse> çš„æœ€åŽä¸€ä¸ª
+å‚æ•°æä¾›ç»™å®ƒã€‚è¿™é‡Œ C<env> ç”¨ C<NULL> ä»£æ›¿äº†ï¼Œè¡¨ç¤ºä½¿ç”¨å½“å‰çš„çŽ¯å¢ƒã€‚
+PERL_SYS_INIT3() å’Œ  PERL_SYS_TERM() å®ä¸º Perl è§£é‡Šå™¨çš„è¿è¡Œæä¾›äº†å¿…è¦
+çš„ã€ç³»ç»Ÿç‰¹å®šçš„ C è¿è¡ŒçŽ¯å¢ƒã€‚ç”±äºŽ  PERL_SYS_INIT3() å¯èƒ½ä¿®æ”¹ C<env>ï¼Œæ‰€
+æœ‰æœ€å¥½æä¾› perl_parse() ä¸€ä¸ª C<env> å‚æ•°ã€‚
 
-ÏÖÔÚ±àÒë³É¿ÉÖ´ÐÐ³ÌÐò£¨ÎÒ³ÆÖ®Îª I<interp.c>£©£º
+çŽ°åœ¨ç¼–è¯‘æˆå¯æ‰§è¡Œç¨‹åºï¼ˆæˆ‘ç§°ä¹‹ä¸º I<interp.c>ï¼‰ï¼š
 
     % cc -o interp interp.c `perl -MExtUtils::Embed -e ccopts -e ldopts`
 
-ÔÚ³É¹¦±àÒëºó£¬Äã¾Í¿ÉÒÔÓÃ I<interp> ¾ÍÏñ perl ±¾ÉíÒ»Ñù£º
+åœ¨æˆåŠŸç¼–è¯‘åŽï¼Œä½ å°±å¯ä»¥ç”¨ I<interp> å°±åƒ perl æœ¬èº«ä¸€æ ·ï¼š
 
     % interp
     print "Pretty Good Perl \n";
@@ -201,21 +201,21 @@ PERL_SYS_INIT3() ºÍ  PERL_SYS_TERM() ºêÎª Perl ½âÊÍÆ÷µÄÔËÐÐÌá¹©ÁË±ØÒª
     Pretty Good Perl
     10890 - 9801 is 1089
 
-»òÕß
+æˆ–è€…
 
     % interp -e 'printf("%x", 3735928559)'
     deadbeef
 
-¿ÉÒÔÔÚÄãµÄ C ³ÌÐòÖÐ¶ÁÈëºÍÖ´ÐÐ Perl Óï¾ä£¬Ö»ÐèÒªÔÚµ÷ÓÃ I<perl_run> Ç°·Å
-ÖÃÎÄ¼þÃûÔÚ I<argv[1]> ÖÐ¡£
+å¯ä»¥åœ¨ä½ çš„ C ç¨‹åºä¸­è¯»å…¥å’Œæ‰§è¡Œ Perl è¯­å¥ï¼Œåªéœ€è¦åœ¨è°ƒç”¨ I<perl_run> å‰æ”¾
+ç½®æ–‡ä»¶ååœ¨ I<argv[1]> ä¸­ã€‚
 
-=head2 ÔÚ C ³ÌÐòÖÐµ÷ÓÃ Perl º¯Êý
+=head2 åœ¨ C ç¨‹åºä¸­è°ƒç”¨ Perl å‡½æ•°
 
-Òªµ÷ÓÃµ¥¸ö Perl º¯Êý£¬Äã¿ÉÒÔÊ¹ÓÃÈÎºÎÒ»¸öÔÚ L<perlcall> ÖÐ½éÉÜµÄ
-B<call_*> º¯Êý¡£
-ÔÚÕâ¸öÀý×ÓÖÐ£¬ÎÒÃÇÊ¹ÓÃ C<all_argv>¡£
+è¦è°ƒç”¨å•ä¸ª Perl å‡½æ•°ï¼Œä½ å¯ä»¥ä½¿ç”¨ä»»ä½•ä¸€ä¸ªåœ¨ L<perlcall> ä¸­ä»‹ç»çš„
+B<call_*> å‡½æ•°ã€‚
+åœ¨è¿™ä¸ªä¾‹å­ä¸­ï¼Œæˆ‘ä»¬ä½¿ç”¨ C<all_argv>ã€‚
 
-ÏÂÃæÏÔÊ¾Ò»¸öÎÒ³ÆÎª I<showtime.c> µÄ³ÌÐò£º
+ä¸‹é¢æ˜¾ç¤ºä¸€ä¸ªæˆ‘ç§°ä¸º I<showtime.c> çš„ç¨‹åºï¼š
 
     #include <EXTERN.h>
     #include <perl.h>
@@ -241,11 +241,11 @@ B<call_*> º¯Êý¡£
 	PERL_SYS_TERM();
     }
 
-ÕâÀï I<showtime> ÊÇÒ»¸öÃ»ÓÐ²ÎÊýµÄ Perl º¯Êý£¨¾ÍÊÇ I<G_NOARGS>£©£¬¶øÇÒ
-ºöÂÔÒ»·µ»ØÖµ£¨¾ÍÊÇ I<G_DISCARD>£©¡£ÔÚ L<perlcall> ÖÐÓÐÌÖÂÛÕâÐ©ÒÔ¼°ÆäËü
-±êÇ©¡£
+è¿™é‡Œ I<showtime> æ˜¯ä¸€ä¸ªæ²¡æœ‰å‚æ•°çš„ Perl å‡½æ•°ï¼ˆå°±æ˜¯ I<G_NOARGS>ï¼‰ï¼Œè€Œä¸”
+å¿½ç•¥ä¸€è¿”å›žå€¼ï¼ˆå°±æ˜¯ I<G_DISCARD>ï¼‰ã€‚åœ¨ L<perlcall> ä¸­æœ‰è®¨è®ºè¿™äº›ä»¥åŠå…¶å®ƒ
+æ ‡ç­¾ã€‚
 
-ÎÒÔÚÒ»¸ö³ÆÎª I<showtime.pl> ÎÄ¼þÖÐ¶¨ÒåÕâ¸ö I<showtime> º¯Êý£º
+æˆ‘åœ¨ä¸€ä¸ªç§°ä¸º I<showtime.pl> æ–‡ä»¶ä¸­å®šä¹‰è¿™ä¸ª I<showtime> å‡½æ•°ï¼š
 
     print "I shan't be printed.";
 
@@ -253,37 +253,37 @@ B<call_*> º¯Êý¡£
         print time;
     }
 
-ºÜ¼òµ¥¡£ÏÖÔÚ±àÒë²¢ÔËÐÐ£º
+å¾ˆç®€å•ã€‚çŽ°åœ¨ç¼–è¯‘å¹¶è¿è¡Œï¼š
 
     % cc -o showtime showtime.c `perl -MExtUtils::Embed -e ccopts -e ldopts`
 
     % showtime showtime.pl
     818284590
 
-²úÉú´Ó 1970 Äê 1 ÔÂ 1 ÈÕ£¨Unix ¼ÍÔªµÄ¿ªÊ¼£©µ½ÏÖÔÚµÄÃëÊý£¬ÕâÊÇÎÒÐ´Õâ¾ä
-»°µÄÊ±¼ä¡£
+äº§ç”Ÿä»Ž 1970 å¹´ 1 æœˆ 1 æ—¥ï¼ˆUnix çºªå…ƒçš„å¼€å§‹ï¼‰åˆ°çŽ°åœ¨çš„ç§’æ•°ï¼Œè¿™æ˜¯æˆ‘å†™è¿™å¥
+è¯çš„æ—¶é—´ã€‚
 
-ÔÚÕâ¸öÌØÊâÀý×ÓÖÐ£¬ÎÒÃÇ²»±Øµ÷ÓÃ I<perl_run>£¬ÒòÎªÎÒÃÇÉèÖÃÁË
-PL_exit_flag PERL_EXIT_DESTRUCT_END£¬Õâ½«ÔÚ perl_destruct ÖÐÖ´ÐÐ END
-¿é¡£
+åœ¨è¿™ä¸ªç‰¹æ®Šä¾‹å­ä¸­ï¼Œæˆ‘ä»¬ä¸å¿…è°ƒç”¨ I<perl_run>ï¼Œå› ä¸ºæˆ‘ä»¬è®¾ç½®äº†
+PL_exit_flag PERL_EXIT_DESTRUCT_ENDï¼Œè¿™å°†åœ¨ perl_destruct ä¸­æ‰§è¡Œ END
+å—ã€‚
 
-Èç¹ûÄãÏëÒª´«µÝ²ÎÊý¸ø Perl º¯Êý£¬Äã¿ÉÒÔÔÚÒÔ C<NULL> ½áÎ²µÄ C<args> ÁÐ±í
-ÖÐ¼ÓÈë×Ö·û´®´«µÝ¸ø I<call_argv>¡£¶ÔÓÚÆäËüÊý¾ÝÀàÐÍ£¬»òÕßÒª¼ì²é·µ»ØÖµÀà
-ÐÍ£¬ÄãÐèÒª²Ù×÷ Perl ²ÎÊýÕ»¡£ÔÚ L<Fiddling with the Perl stack from
-your C program> ÖÐÑÝÊ¾ÁËÕâ¸ö¹ý³Ì¡£
+å¦‚æžœä½ æƒ³è¦ä¼ é€’å‚æ•°ç»™ Perl å‡½æ•°ï¼Œä½ å¯ä»¥åœ¨ä»¥ C<NULL> ç»“å°¾çš„ C<args> åˆ—è¡¨
+ä¸­åŠ å…¥å­—ç¬¦ä¸²ä¼ é€’ç»™ I<call_argv>ã€‚å¯¹äºŽå…¶å®ƒæ•°æ®ç±»åž‹ï¼Œæˆ–è€…è¦æ£€æŸ¥è¿”å›žå€¼ç±»
+åž‹ï¼Œä½ éœ€è¦æ“ä½œ Perl å‚æ•°æ ˆã€‚åœ¨ L<Fiddling with the Perl stack from
+your C program> ä¸­æ¼”ç¤ºäº†è¿™ä¸ªè¿‡ç¨‹ã€‚
 
-=head2 ÔÚ C ³ÌÐòÖÐ¶Ô Perl Óï¾äÇóÖµ
+=head2 åœ¨ C ç¨‹åºä¸­å¯¹ Perl è¯­å¥æ±‚å€¼
 
-Perl Ìá¹©Á½¸ö API º¯ÊýÀ´¶ÔÒ»Ð¡¶Î Perl ´úÂë½øÐÐÇóÖµ¡£Õâ¾ÍÊÇ
-L<perlapi/eval_sv> ºÍ L<perlapi/eval_pv>¡£
+Perl æä¾›ä¸¤ä¸ª API å‡½æ•°æ¥å¯¹ä¸€å°æ®µ Perl ä»£ç è¿›è¡Œæ±‚å€¼ã€‚è¿™å°±æ˜¯
+L<perlapi/eval_sv> å’Œ L<perlapi/eval_pv>ã€‚
 
-ÔÚ C ³ÌÐòÖÐÖ»ÓÐÕâÁ½¸öº¯Êý£¬Äã¿ÉÒÔÖ´ÐÐÒ»¶Î Perl ´úÂë¡£ÄãµÄ´úÂë¿ÉÒÔÈÎÒâ
-³¤£¬¿ÉÒÔ°üº¬¶à¸öÓï¾ä£¬Äã¿ÉÒÔÓÃ L<perlfunc/use>¡¢L<perlfunc/require>¡¢
-ºÍ L<perlfunc/do> À´ÒýÈëÒ»¸ö Perl ÎÄ¼þ¡£
+åœ¨ C ç¨‹åºä¸­åªæœ‰è¿™ä¸¤ä¸ªå‡½æ•°ï¼Œä½ å¯ä»¥æ‰§è¡Œä¸€æ®µ Perl ä»£ç ã€‚ä½ çš„ä»£ç å¯ä»¥ä»»æ„
+é•¿ï¼Œå¯ä»¥åŒ…å«å¤šä¸ªè¯­å¥ï¼Œä½ å¯ä»¥ç”¨ L<perlfunc/use>ã€L<perlfunc/require>ã€
+å’Œ L<perlfunc/do> æ¥å¼•å…¥ä¸€ä¸ª Perl æ–‡ä»¶ã€‚
 
-I<eval_pv> ¿ÉÒÔ¶Ôµ¥¸öµÄ Perl ×Ö·û´®ÇóÖµ£¬È»ºó¿ÉÒÔÌáÈ¡³ö±äÁ¿×ª»»Îª C Àà
-ÐÍ¡£ÏÂÃæÕâ¸ö³ÌÐò I<string.c> Ö´ÐÐÈý¸ö Perl ×Ö·û´®£¬µÚÒ»¸öÌáÈ¡³öÒ»¸ö
-I<int> ±äÁ¿£¬µÚ¶þ¸öÌáÈ¡ C<float> ±äÁ¿£¬µÚÈý¸öÌáÈ¡ C<char *> ±äÁ¿¡£
+I<eval_pv> å¯ä»¥å¯¹å•ä¸ªçš„ Perl å­—ç¬¦ä¸²æ±‚å€¼ï¼Œç„¶åŽå¯ä»¥æå–å‡ºå˜é‡è½¬æ¢ä¸º C ç±»
+åž‹ã€‚ä¸‹é¢è¿™ä¸ªç¨‹åº I<string.c> æ‰§è¡Œä¸‰ä¸ª Perl å­—ç¬¦ä¸²ï¼Œç¬¬ä¸€ä¸ªæå–å‡ºä¸€ä¸ª
+I<int> å˜é‡ï¼Œç¬¬äºŒä¸ªæå– C<float> å˜é‡ï¼Œç¬¬ä¸‰ä¸ªæå– C<char *> å˜é‡ã€‚
 
    #include <EXTERN.h>
    #include <perl.h>
@@ -320,19 +320,19 @@ I<int> ±äÁ¿£¬µÚ¶þ¸öÌáÈ¡ C<float> ±äÁ¿£¬µÚÈý¸öÌáÈ¡ C<char *> ±äÁ¿¡£
        PERL_SYS_TERM();
    }
 
-ËùÓÐÔÚÃû×ÖÖÐº¬ÓÐ I<sv> µÄÆæ¹Öº¯Êý¶¼ÊÇÎªÁËÐ­Öú½« Perl ±êÁ¿×ª»»Îª C ÀàÐÍ¡£
-ÕâÔÚ L<perlguts> ºÍ L<perlapi> ÖÐÓÐÃèÊö¡£
+æ‰€æœ‰åœ¨åå­—ä¸­å«æœ‰ I<sv> çš„å¥‡æ€ªå‡½æ•°éƒ½æ˜¯ä¸ºäº†ååŠ©å°† Perl æ ‡é‡è½¬æ¢ä¸º C ç±»åž‹ã€‚
+è¿™åœ¨ L<perlguts> å’Œ L<perlapi> ä¸­æœ‰æè¿°ã€‚
 
-Èç¹ûÄã±àÒë²¢ÔËÐÐ I<string.c>£¬Äã¿ÉÒÔÓÃ I<SvIV()> ´´½¨Ò»¸ö
-C<int>£¬I<SvNV()> ´´½¨Ò»¸ö C<float>£¬I<SvPV()> ´´½¨Ò»¸ö×Ö·û´®£¬ÕâÑù¿É
-ÒÔ¿´µ½½á¹û¡£
+å¦‚æžœä½ ç¼–è¯‘å¹¶è¿è¡Œ I<string.c>ï¼Œä½ å¯ä»¥ç”¨ I<SvIV()> åˆ›å»ºä¸€ä¸ª
+C<int>ï¼ŒI<SvNV()> åˆ›å»ºä¸€ä¸ª C<float>ï¼ŒI<SvPV()> åˆ›å»ºä¸€ä¸ªå­—ç¬¦ä¸²ï¼Œè¿™æ ·å¯
+ä»¥çœ‹åˆ°ç»“æžœã€‚
 
    a = 9
    a = 9.859600
    a = Just Another Perl Hacker
 
-ÔÚÉÏÃæµÄÀý×ÓÖÐ£¬ÎÒÃÇ´´½¨ÁËÒ»¸öÈ«¾Ö±äÁ¿À´ÁÙÊ±±£´æÇóÖµºó¼ÆËãµÄ½á¹û¡£Ò²¿É
-ÒÔ£¬²¢ÔÚ´ó¶àÊýÇé¿öÏÂ×îºÃÓÃ I<eval_pv()> µÄ·µ»ØÖµ¡£ÀýÈç£º
+åœ¨ä¸Šé¢çš„ä¾‹å­ä¸­ï¼Œæˆ‘ä»¬åˆ›å»ºäº†ä¸€ä¸ªå…¨å±€å˜é‡æ¥ä¸´æ—¶ä¿å­˜æ±‚å€¼åŽè®¡ç®—çš„ç»“æžœã€‚ä¹Ÿå¯
+ä»¥ï¼Œå¹¶åœ¨å¤§å¤šæ•°æƒ…å†µä¸‹æœ€å¥½ç”¨ I<eval_pv()> çš„è¿”å›žå€¼ã€‚ä¾‹å¦‚ï¼š
 
    ...
    STRLEN n_a;
@@ -340,32 +340,32 @@ C<int>£¬I<SvNV()> ´´½¨Ò»¸ö C<float>£¬I<SvPV()> ´´½¨Ò»¸ö×Ö·û´®£¬ÕâÑù¿É
    printf("%s\n", SvPV(val,n_a));
    ...
 
-ÕâÑù²»ÓÃ´´½¨Ò»¸öÈ«¾Ö±äÁ¿£¬¿ÉÒÔ±ÜÃâÎÛÈ¾Ãû×Ö¿Õ¼ä£¬Ò²Í¬ÑùÊ¹´úÂë¼ò»¯¡£
+è¿™æ ·ä¸ç”¨åˆ›å»ºä¸€ä¸ªå…¨å±€å˜é‡ï¼Œå¯ä»¥é¿å…æ±¡æŸ“åå­—ç©ºé—´ï¼Œä¹ŸåŒæ ·ä½¿ä»£ç ç®€åŒ–ã€‚
 
-=head2 ÔÚ C ³ÌÐòÖÐ½øÐÐ Perl Ä£Ê½Æ¥ÅäºÍÌæ»»
+=head2 åœ¨ C ç¨‹åºä¸­è¿›è¡Œ Perl æ¨¡å¼åŒ¹é…å’Œæ›¿æ¢
 
-I<eval_sv()> º¯Êý¿ÉÒÔ¶Ô Perl ´úÂë×Ö·û´®ÇóÖµ£¬ËùÒÔÎÒÃÇ¿ÉÒÔ¶¨ÒåÒ»Ð©º¯Êý
-×¨ÃÅ½øÐÐÆ¥ÅäºÍÌæ»»£ºI<match()>£¬I<substitute()> ºÍ I<matches()>¡£
+I<eval_sv()> å‡½æ•°å¯ä»¥å¯¹ Perl ä»£ç å­—ç¬¦ä¸²æ±‚å€¼ï¼Œæ‰€ä»¥æˆ‘ä»¬å¯ä»¥å®šä¹‰ä¸€äº›å‡½æ•°
+ä¸“é—¨è¿›è¡ŒåŒ¹é…å’Œæ›¿æ¢ï¼šI<match()>ï¼ŒI<substitute()> å’Œ I<matches()>ã€‚
 
    I32 match(SV *string, char *pattern);
 
-¼Ù¶¨ÓÐÒ»¸ö×Ö·û´®ºÍÒ»¸öÄ£Ê½£¨ÀýÈç C<m/clasp/> »òÕß C</\b\w*\b/>£¬ÔÚÄãµÄ
-C ³ÌÐòÖÐ¿ÉÄÜÊÇÕâÑùµÄ "/\\b\\w*\\b/"£©¡£Èç¹û×Ö·û´®Æ¥ÅäÒ»¸öÄ£Ê½Ôò·µ»Ø
-1£¬·ñÔò·µ»Ø 0¡£
+å‡å®šæœ‰ä¸€ä¸ªå­—ç¬¦ä¸²å’Œä¸€ä¸ªæ¨¡å¼ï¼ˆä¾‹å¦‚ C<m/clasp/> æˆ–è€… C</\b\w*\b/>ï¼Œåœ¨ä½ çš„
+C ç¨‹åºä¸­å¯èƒ½æ˜¯è¿™æ ·çš„ "/\\b\\w*\\b/"ï¼‰ã€‚å¦‚æžœå­—ç¬¦ä¸²åŒ¹é…ä¸€ä¸ªæ¨¡å¼åˆ™è¿”å›ž
+1ï¼Œå¦åˆ™è¿”å›ž 0ã€‚
 
    int substitute(SV **string, char *pattern);
 
-¼Ù¶¨ÓÐÒ»¸öÖ¸Ïò C<SV> µÄÖ¸ÕëºÍ C<=~> ²Ù×÷·û£¨ÀýÈç C<s/bob/robert/g> »ò
-Õß C<tr[A-Z][a-z]>£©£¬substitute() ¸ù¾ÝÕâ¸ö²Ù×÷·ûÐÞ¸Ä C<SV>£¬·µ»ØÌæ»»
-²Ù×÷µÄ´ÎÊý¡£
+å‡å®šæœ‰ä¸€ä¸ªæŒ‡å‘ C<SV> çš„æŒ‡é’ˆå’Œ C<=~> æ“ä½œç¬¦ï¼ˆä¾‹å¦‚ C<s/bob/robert/g> æˆ–
+è€… C<tr[A-Z][a-z]>ï¼‰ï¼Œsubstitute() æ ¹æ®è¿™ä¸ªæ“ä½œç¬¦ä¿®æ”¹ C<SV>ï¼Œè¿”å›žæ›¿æ¢
+æ“ä½œçš„æ¬¡æ•°ã€‚
 
    int matches(SV *string, char *pattern, AV **matches);
 
-¼Ù¶¨ÓÐÒ»¸ö C<SV>£¬Ò»¸öÄ£Ê½ºÍÒ»¸öÖ¸ÏòÒ»¸ö¿Õ C<AV> µÄÖ¸Õë£¬match() ÔÚÒ»
-¸öÁÐ±íÉÏÏÂÎÄÖÐ¶Ô C<$string =~ $pattern> ÇóÖµ£¬ÔÚ I<matches> ÖÐÌî³äÊý
-×é£¬·µ»ØÆ¥ÅäµÄÊýÄ¿¡£
+å‡å®šæœ‰ä¸€ä¸ª C<SV>ï¼Œä¸€ä¸ªæ¨¡å¼å’Œä¸€ä¸ªæŒ‡å‘ä¸€ä¸ªç©º C<AV> çš„æŒ‡é’ˆï¼Œmatch() åœ¨ä¸€
+ä¸ªåˆ—è¡¨ä¸Šä¸‹æ–‡ä¸­å¯¹ C<$string =~ $pattern> æ±‚å€¼ï¼Œåœ¨ I<matches> ä¸­å¡«å……æ•°
+ç»„ï¼Œè¿”å›žåŒ¹é…çš„æ•°ç›®ã€‚
 
-ÕâÊÇÒ»¸öÊ¹ÓÃÁËÈý¸öº¯ÊýµÄÑùÀý£¬I<match.c>£¨¹ý³¤µÄÐÐÕÛµþÁË£©£º
+è¿™æ˜¯ä¸€ä¸ªä½¿ç”¨äº†ä¸‰ä¸ªå‡½æ•°çš„æ ·ä¾‹ï¼ŒI<match.c>ï¼ˆè¿‡é•¿çš„è¡ŒæŠ˜å äº†ï¼‰ï¼š
 
  #include <EXTERN.h>
  #include <perl.h>
@@ -529,7 +529,7 @@ C ³ÌÐòÖÐ¿ÉÄÜÊÇÕâÑùµÄ "/\\b\\w*\\b/"£©¡£Èç¹û×Ö·û´®Æ¥ÅäÒ»¸öÄ£Ê½Ôò·µ»Ø
      PERL_SYS_TERM();
  }
 
-Ëü²úÉúÕâÑùµÄÊä³ö£¨¹ý³¤µÄÐÐÔÙ´ÎÕÛµþÁË£©£º
+å®ƒäº§ç”Ÿè¿™æ ·çš„è¾“å‡ºï¼ˆè¿‡é•¿çš„è¡Œå†æ¬¡æŠ˜å äº†ï¼‰ï¼š
 
    match: Text contains the word 'quarter'.
 
@@ -548,36 +548,36 @@ C ³ÌÐòÖÐ¿ÉÄÜÊÇÕâÑùµÄ "/\\b\\w*\\b/"£©¡£Èç¹û×Ö·û´®Æ¥ÅäÒ»¸öÄ£Ê½Ôò·µ»Ø
 
    substitute: s/Perl/C...No substitution made.
 
-=head2 ÔÚ C ³ÌÐòÖÐÌî³ä Perl ²ÎÊýÕ»
+=head2 åœ¨ C ç¨‹åºä¸­å¡«å…… Perl å‚æ•°æ ˆ
 
-´ó¶àÊý¼ÆËã»ú½Ì¿ÆÊé¶ÔÓÚÕ»µÄ½âÊÍ¶¼ÊÇÖØ¸´¹ØÓÚ·ÅÖÃ¿§·ÈÅÌµÄ±ÈÓ÷£¨most
+å¤§å¤šæ•°è®¡ç®—æœºæ•™ç§‘ä¹¦å¯¹äºŽæ ˆçš„è§£é‡Šéƒ½æ˜¯é‡å¤å…³äºŽæ”¾ç½®å’–å•¡ç›˜çš„æ¯”å–»ï¼ˆmost
 computer science textbooks mumble something about spring-loaded
-columns of cafeteria plates£©£º×îºóÄã·Åµ½Õ»ÖÐµÄ¶«Î÷¾ÍÊÇÄãµÚÒ»¸öÈ¡³öµÄ¡£
-ÕâÊÇÎÒÃÇµÄÒª×öµÄ£ºC ³ÌÐò·ÅÖÃÒ»Ð©²ÎÊýµ½¡°Perl Õ»¡±ÖÐ£¬µ±Ä§Êõ·¢ÉúÊ±±ÕÉÏËüµÄ
-ÑÛ¾¦£¬È»ºó´ÓÕ»ÉÏÈ¡³ö½á¹û¡ª¡ªPerl º¯ÊýµÄ·µ»ØÖµ£¨That'll do for our
+columns of cafeteria platesï¼‰ï¼šæœ€åŽä½ æ”¾åˆ°æ ˆä¸­çš„ä¸œè¥¿å°±æ˜¯ä½ ç¬¬ä¸€ä¸ªå–å‡ºçš„ã€‚
+è¿™æ˜¯æˆ‘ä»¬çš„è¦åšçš„ï¼šC ç¨‹åºæ”¾ç½®ä¸€äº›å‚æ•°åˆ°â€œPerl æ ˆâ€ä¸­ï¼Œå½“é­”æœ¯å‘ç”Ÿæ—¶é—­ä¸Šå®ƒçš„
+çœ¼ç›ï¼Œç„¶åŽä»Žæ ˆä¸Šå–å‡ºç»“æžœâ€”â€”Perl å‡½æ•°çš„è¿”å›žå€¼ï¼ˆThat'll do for our
 purposes: your C program will push some arguments onto "the Perl
 stack", shut its eyes while some magic happens, and then pop the
-results--the return value of your Perl subroutine--off the stack.£©
+results--the return value of your Perl subroutine--off the stack.ï¼‰
 
-Ê×ÏÈ£¬ÄãÒªÖªµÀÔõÑùÔÚ C ÀàÐÍºÍ Perl ÀàÐÍÖ®¼ä×ª»»£¬Ê¹ÓÃ newSViv()¡¢
-sv_setnv¡¢newAV() ÒÔ¼°ÆäËüËüÃÇµÄÅóÓÑ¡£ËüÃÇÔÚ L<perlguts> ºÍ L<perlapi>
-ÖÐÓÐËµÃ÷¡£
+é¦–å…ˆï¼Œä½ è¦çŸ¥é“æ€Žæ ·åœ¨ C ç±»åž‹å’Œ Perl ç±»åž‹ä¹‹é—´è½¬æ¢ï¼Œä½¿ç”¨ newSViv()ã€
+sv_setnvã€newAV() ä»¥åŠå…¶å®ƒå®ƒä»¬çš„æœ‹å‹ã€‚å®ƒä»¬åœ¨ L<perlguts> å’Œ L<perlapi>
+ä¸­æœ‰è¯´æ˜Žã€‚
 
-È»ºóÄãÒªÖªµÀÈçºÎ²Ù×Ý Perl ²ÎÊýÕ»¡£ÔÚ L<perlcall> ÖÐÓÐËµÃ÷¡£
+ç„¶åŽä½ è¦çŸ¥é“å¦‚ä½•æ“çºµ Perl å‚æ•°æ ˆã€‚åœ¨ L<perlcall> ä¸­æœ‰è¯´æ˜Žã€‚
 
-Ò»µ©ÄãÃ÷°×ÕâÐ©£¬ÔÚ C ÖÐÇ¶Èë Perl ÊÇºÜ¼òµ¥µÄ¡£
+ä¸€æ—¦ä½ æ˜Žç™½è¿™äº›ï¼Œåœ¨ C ä¸­åµŒå…¥ Perl æ˜¯å¾ˆç®€å•çš„ã€‚
 
-ÒòÎª C Ã»ÓÐÄÚ½¨µÄº¯Êý½øÐÐÕûÊýµÄÖ¸ÊýÔËËã£¬ÈÃÎÒÃÇÓÃ Perl µÄ ** ÔËËã·ûÊµ
-ÏÖËü£¨Õâ±ÈËüÌýÉÏÈ¥Ã»ÓÃµÃ¶à£¬ÒòÎª Perl ÓÃ C I<pow()> º¯ÊýÊµÏÖ **£©¡£Ê×
-ÏÈÔÚ I<power.pl> ÖÐ´´½¨Ò»¸ö¼ò¶ÌµÄÖ¸Êýº¯Êý£º
+å› ä¸º C æ²¡æœ‰å†…å»ºçš„å‡½æ•°è¿›è¡Œæ•´æ•°çš„æŒ‡æ•°è¿ç®—ï¼Œè®©æˆ‘ä»¬ç”¨ Perl çš„ ** è¿ç®—ç¬¦å®ž
+çŽ°å®ƒï¼ˆè¿™æ¯”å®ƒå¬ä¸ŠåŽ»æ²¡ç”¨å¾—å¤šï¼Œå› ä¸º Perl ç”¨ C I<pow()> å‡½æ•°å®žçŽ° **ï¼‰ã€‚é¦–
+å…ˆåœ¨ I<power.pl> ä¸­åˆ›å»ºä¸€ä¸ªç®€çŸ­çš„æŒ‡æ•°å‡½æ•°ï¼š
 
     sub expo {
         my ($a, $b) = @_;
         return $a ** $b;
     }
 
-ÏÖÔÚÎÒ´´½¨Ò»¸ö C ³ÌÐò I<power.c>£¬Í¨¹ý I<PerlPower()> £¨°üº¬ËùÓÐ±ØÐëµÄ
-perlguts£©½«Á½¸ö²ÎÊý·Åµ½I<expo()> ²¢È¡³ö·µ»ØÖµ¡£ÉîÎüÒ»¿ÚÆø£º
+çŽ°åœ¨æˆ‘åˆ›å»ºä¸€ä¸ª C ç¨‹åº I<power.c>ï¼Œé€šè¿‡ I<PerlPower()> ï¼ˆåŒ…å«æ‰€æœ‰å¿…é¡»çš„
+perlgutsï¼‰å°†ä¸¤ä¸ªå‚æ•°æ”¾åˆ°I<expo()> å¹¶å–å‡ºè¿”å›žå€¼ã€‚æ·±å¸ä¸€å£æ°”ï¼š
 
     #include <EXTERN.h>
     #include <perl.h>
@@ -623,41 +623,41 @@ perlguts£©½«Á½¸ö²ÎÊý·Åµ½I<expo()> ²¢È¡³ö·µ»ØÖµ¡£ÉîÎüÒ»¿ÚÆø£º
     }
 
 
-±àÒë²¢ÔËÐÐ£º
+ç¼–è¯‘å¹¶è¿è¡Œï¼š
 
     % cc -o power power.c `perl -MExtUtils::Embed -e ccopts -e ldopts`
 
     % power
     3 to the 4th power is 81.
 
-=head2 ±£³ÖÒ»¸ö³Ö¾ÃµÄ½âÊÍÆ÷
+=head2 ä¿æŒä¸€ä¸ªæŒä¹…çš„è§£é‡Šå™¨
 
-µ±¿ª·¢Ò»¸ö½»»¥¶øÇÒ£¨»òÕß£©¿ÉÄÜÊÇ³Ö¾ÃÔËÐÐµÄÓ¦ÓÃ³ÌÐò£¬²»Òª¶à´Î·ÖÅä¹¹½¨ÐÂ
-µÄ½âÊÍÆ÷£¬±£³ÖÒ»¸ö³Ö¾ÃµÄ½âÊÍÆ÷ÊÇÒ»¸öºÃÖ÷Òâ¡£×îÖ÷ÒªµÄÔ­ÒòÊÇËÙ¶È£ºÒòÎª
-Perl Ö»Òªµ¼Èëµ½ÄÚ´æÖÐÒ»´Î¡£
+å½“å¼€å‘ä¸€ä¸ªäº¤äº’è€Œä¸”ï¼ˆæˆ–è€…ï¼‰å¯èƒ½æ˜¯æŒä¹…è¿è¡Œçš„åº”ç”¨ç¨‹åºï¼Œä¸è¦å¤šæ¬¡åˆ†é…æž„å»ºæ–°
+çš„è§£é‡Šå™¨ï¼Œä¿æŒä¸€ä¸ªæŒä¹…çš„è§£é‡Šå™¨æ˜¯ä¸€ä¸ªå¥½ä¸»æ„ã€‚æœ€ä¸»è¦çš„åŽŸå› æ˜¯é€Ÿåº¦ï¼šå› ä¸º
+Perl åªè¦å¯¼å…¥åˆ°å†…å­˜ä¸­ä¸€æ¬¡ã€‚
 
-¾¡¹ÜÕâÑù£¬µ±Ê¹ÓÃÒ»¸ö³Ö¾ÃµÄ½âÊÍÆ÷Ê±ÒªÌØ±ðÐ¡ÐÄÃû×Ö¿Õ¼äºÍ±äÁ¿×÷ÓÃÓò¡£ÔÚÇ°
-ÃæµÄÀý×ÓÖÐ£¬ÎÒÃÇÔÚÄ¬ÈÏµÄ°ü C<main> ÖÐÊ¹ÓÃÈ«¾Ö±äÁ¿¡£ÎÒÃÇºÜÇå³þµØÖªµÀ´ú
-ÂëÊÇÔõÑùÔËÐÐµÄ£¬²¢ÇÒ¼Ù¶¨ÎÒÃÇÄÜ¹»±ÜÃâ±äÁ¿³åÍ»ºÍ·ûºÅ±íµÄÔö³¤¡£
+å°½ç®¡è¿™æ ·ï¼Œå½“ä½¿ç”¨ä¸€ä¸ªæŒä¹…çš„è§£é‡Šå™¨æ—¶è¦ç‰¹åˆ«å°å¿ƒåå­—ç©ºé—´å’Œå˜é‡ä½œç”¨åŸŸã€‚åœ¨å‰
+é¢çš„ä¾‹å­ä¸­ï¼Œæˆ‘ä»¬åœ¨é»˜è®¤çš„åŒ… C<main> ä¸­ä½¿ç”¨å…¨å±€å˜é‡ã€‚æˆ‘ä»¬å¾ˆæ¸…æ¥šåœ°çŸ¥é“ä»£
+ç æ˜¯æ€Žæ ·è¿è¡Œçš„ï¼Œå¹¶ä¸”å‡å®šæˆ‘ä»¬èƒ½å¤Ÿé¿å…å˜é‡å†²çªå’Œç¬¦å·è¡¨çš„å¢žé•¿ã€‚
 
-¼Ù¶¨ÄãµÄÓ¦ÓÃ³ÌÐòÊÇÒ»¸ö·þÎñÆ÷£¬ËüÅ¼¶ûÔËÐÐÒ»Ð©ÎÄ¼þÖÐµÄ Perl ´úÂë¡£ÄãµÄ·þ
-ÎñÆ÷ÊÇ²»ÖªµÀÒªÔËÐÐÊ²Ã´´úÂëµÄ¡£ÕâºÜÎ£ÏÕ¡£
+å‡å®šä½ çš„åº”ç”¨ç¨‹åºæ˜¯ä¸€ä¸ªæœåŠ¡å™¨ï¼Œå®ƒå¶å°”è¿è¡Œä¸€äº›æ–‡ä»¶ä¸­çš„ Perl ä»£ç ã€‚ä½ çš„æœ
+åŠ¡å™¨æ˜¯ä¸çŸ¥é“è¦è¿è¡Œä»€ä¹ˆä»£ç çš„ã€‚è¿™å¾ˆå±é™©ã€‚
 
-Èç¹ûÎÄ¼þÓÃ C<perl_parse()> ÒýÈëµÄ£¬±àÒë³ÉÒ»¸öÐÂ´´½¨µÄ½âÊÍÆ÷£¬È»ºó½Ó×Å
-ÓÃ C<perl_destruct()> ×÷Ò»´ÎÇåÀí£¬ÕâÑù¾Í¿ÉÒÔÆÁ±ÎÁË´ó¶àÊýµÄÃû×Ö¿Õ¼äµÄÎÊ
-Ìâ¡£
+å¦‚æžœæ–‡ä»¶ç”¨ C<perl_parse()> å¼•å…¥çš„ï¼Œç¼–è¯‘æˆä¸€ä¸ªæ–°åˆ›å»ºçš„è§£é‡Šå™¨ï¼Œç„¶åŽæŽ¥ç€
+ç”¨ C<perl_destruct()> ä½œä¸€æ¬¡æ¸…ç†ï¼Œè¿™æ ·å°±å¯ä»¥å±è”½äº†å¤§å¤šæ•°çš„åå­—ç©ºé—´çš„é—®
+é¢˜ã€‚
 
-Ò»¸ö±ÜÃâÃû×Ö¿Õ¼ä³åÍ»µÄ·½·¨ÊÇ½«ÎÄ¼þÃû×ª»»³ÉÒ»¸öÎ¨Ò»µÄ°üÃû£¬È»ºóÓÃ
-L<perlfunc/eval> ½«Õâ¶Î´úÂë±àÒëµ½Õâ¸ö°üÖÐ¡£ÔÚÏÂÃæµÄÀý×ÓÖÐ£¬Ã¿¸öÎÄ¼þÖ»
-±àÒëÒ»´Î¡£»òÕßÕâ¸öÓ¦ÓÃ³ÌÐòÔÚÒ»¸öÎÄ¼þÖÐµÄ·ûºÅ±í²»ÔÙÐèÒªÊ±¿ÉÄÜ»áÇå³ýÕâ¸ö
-·ûºÅ±í¡£Ê¹ÓÃ L<perlapi/call_argv>£¬ÎÒÃÇµ÷ÓÃÔÚ C<persistent.pl> ÎÄ¼þÖÐ
-µÄ C<Embed::Persistent::eval_file>£¬´«µÝÒ»¸öÎÄ¼þÃûÒÔ¼°Ò»¸öÇå³ý»òÕß»º³å
-µÄ±êÇ©×÷Îª²ÎÊý¡£
+ä¸€ä¸ªé¿å…åå­—ç©ºé—´å†²çªçš„æ–¹æ³•æ˜¯å°†æ–‡ä»¶åè½¬æ¢æˆä¸€ä¸ªå”¯ä¸€çš„åŒ…åï¼Œç„¶åŽç”¨
+L<perlfunc/eval> å°†è¿™æ®µä»£ç ç¼–è¯‘åˆ°è¿™ä¸ªåŒ…ä¸­ã€‚åœ¨ä¸‹é¢çš„ä¾‹å­ä¸­ï¼Œæ¯ä¸ªæ–‡ä»¶åª
+ç¼–è¯‘ä¸€æ¬¡ã€‚æˆ–è€…è¿™ä¸ªåº”ç”¨ç¨‹åºåœ¨ä¸€ä¸ªæ–‡ä»¶ä¸­çš„ç¬¦å·è¡¨ä¸å†éœ€è¦æ—¶å¯èƒ½ä¼šæ¸…é™¤è¿™ä¸ª
+ç¬¦å·è¡¨ã€‚ä½¿ç”¨ L<perlapi/call_argv>ï¼Œæˆ‘ä»¬è°ƒç”¨åœ¨ C<persistent.pl> æ–‡ä»¶ä¸­
+çš„ C<Embed::Persistent::eval_file>ï¼Œä¼ é€’ä¸€ä¸ªæ–‡ä»¶åä»¥åŠä¸€ä¸ªæ¸…é™¤æˆ–è€…ç¼“å†²
+çš„æ ‡ç­¾ä½œä¸ºå‚æ•°ã€‚
 
-×¢Òâµ½¶ÔÓÚÃ¿¸öÊ¹ÓÃµÄÎÄ¼þ£¬Õâ¸ö½ø³Ì¶¼Òª²»¶ÏÔö³¤¡£ÁíÍâ£¬¿ÉÄÜÓÐ
-C<AUTOLOAD> º¯Êý»òÕßÆäËüÌõ¼þµ¼ÖÂ Perl ·ûºÅ±íµÄÔö³¤¡£Äã¿ÉÄÜÏë¼ÓÈëÒ»Ð©Âß
-¼­ÅÐ¶ÏÀ´¸ú×Ù½ø³ÌµÄ´óÐ¡£¬»òÕßÔÚÒ»¶¨´ÎÊýµÄÇëÇóÖ®ºóÖØÐÂÆô¶¯Ò»´Î£¬ÕâÑùÀ´±£Ö¤ÄÚ
-´æµÄÏûºÄÊÇ±£Ö¤×îÐ¡µÄ¡£Äã¿ÉÄÜ»¹»áÔÚ¿ÉÄÜµÄÊ±ºòÓÃ L<perlfunc/my> ÏÞ¶¨±äÁ¿µÄ·¶Î§¡£
+æ³¨æ„åˆ°å¯¹äºŽæ¯ä¸ªä½¿ç”¨çš„æ–‡ä»¶ï¼Œè¿™ä¸ªè¿›ç¨‹éƒ½è¦ä¸æ–­å¢žé•¿ã€‚å¦å¤–ï¼Œå¯èƒ½æœ‰
+C<AUTOLOAD> å‡½æ•°æˆ–è€…å…¶å®ƒæ¡ä»¶å¯¼è‡´ Perl ç¬¦å·è¡¨çš„å¢žé•¿ã€‚ä½ å¯èƒ½æƒ³åŠ å…¥ä¸€äº›é€»
+è¾‘åˆ¤æ–­æ¥è·Ÿè¸ªè¿›ç¨‹çš„å¤§å°ï¼Œæˆ–è€…åœ¨ä¸€å®šæ¬¡æ•°çš„è¯·æ±‚ä¹‹åŽé‡æ–°å¯åŠ¨ä¸€æ¬¡ï¼Œè¿™æ ·æ¥ä¿è¯å†…
+å­˜çš„æ¶ˆè€—æ˜¯ä¿è¯æœ€å°çš„ã€‚ä½ å¯èƒ½è¿˜ä¼šåœ¨å¯èƒ½çš„æ—¶å€™ç”¨ L<perlfunc/my> é™å®šå˜é‡çš„èŒƒå›´ã€‚
 
  package Embed::Persistent;
  #persistent.pl
@@ -802,23 +802,23 @@ Now run:
  foo says: hello
  Enter file name: ^C
 
-=head2 Ö´ÐÐ END ¿é
+=head2 æ‰§è¡Œ END å—
 
-´«Í³µÄ END ¿éÔÚ perl_run µÄ½áÊøÊ±Ö´ÐÐÁË¡£¶ÔÓÚ²»µ÷ÓÃ perl_run µÄÓ¦ÓÃ³Ì
-ÐòÕâ»áÓÐÒ»Ð©ÎÊÌâ¡£´Ó perl 5.7.2 ¿ªÊ¼£¬Äã¿ÉÒÔÖ¸¶¨ C<PL_exit_flags |=
-PERL_EXIT_DESTRUCT_END> À´»ñµÃÐÂÌØÐÔ¡£ÕâÒ²¿ÉÒÔÔÚ perl_parse Ê§°ÜÖ®ºóµ÷
-ÓÃ END ¿é£¬C<perl_destruct> ½«·µ»ØÍË³öÖµ¡£
+ä¼ ç»Ÿçš„ END å—åœ¨ perl_run çš„ç»“æŸæ—¶æ‰§è¡Œäº†ã€‚å¯¹äºŽä¸è°ƒç”¨ perl_run çš„åº”ç”¨ç¨‹
+åºè¿™ä¼šæœ‰ä¸€äº›é—®é¢˜ã€‚ä»Ž perl 5.7.2 å¼€å§‹ï¼Œä½ å¯ä»¥æŒ‡å®š C<PL_exit_flags |=
+PERL_EXIT_DESTRUCT_END> æ¥èŽ·å¾—æ–°ç‰¹æ€§ã€‚è¿™ä¹Ÿå¯ä»¥åœ¨ perl_parse å¤±è´¥ä¹‹åŽè°ƒ
+ç”¨ END å—ï¼ŒC<perl_destruct> å°†è¿”å›žé€€å‡ºå€¼ã€‚
 
-=head2 ±£³Ö¶à¸ö½âÊÍÆ÷µÄÊµÀý
+=head2 ä¿æŒå¤šä¸ªè§£é‡Šå™¨çš„å®žä¾‹
 
-Ò»Ð©º±¼ûµÄÓ¦ÓÃ³ÌÐòÔÚÒ»´Î¶Ô»°ÖÐÐèÒª´´½¨¶à¸ö½âÊÍÆ÷¡£¿ÉÄÜÒªÅ¼È»ÊÍ·Å½âÊÍÆ÷
-¶ÔÓ¦µÄ×ÊÔ´¡£
+ä¸€äº›ç½•è§çš„åº”ç”¨ç¨‹åºåœ¨ä¸€æ¬¡å¯¹è¯ä¸­éœ€è¦åˆ›å»ºå¤šä¸ªè§£é‡Šå™¨ã€‚å¯èƒ½è¦å¶ç„¶é‡Šæ”¾è§£é‡Šå™¨
+å¯¹åº”çš„èµ„æºã€‚
 
-Õâ¸ö³ÌÐòÒªÈ·±£ÒªÔÚÏÂÒ»¸ö½âÊÍÆ÷¾Í×öÕâÐ©ÊÂ¡£Ä¬ÈÏÇé¿öÏÂ£¬µ± perl ²»ÓÃÈÎºÎ
-Ñ¡Ïî¹¹½¨Ê±£¬È«¾Ö±äÁ¿ C<PL_perl_destruct_level> ÉèÖÃÎª 0¡£ÒòÎªÔÚÒ»¸ö³Ì
-ÐòÉú´æÆÚÖÐÖ»´´½¨Ò»¸ö½âÊÍÆ÷ÊÇ²»ÐèÒª½øÐÐ¶îÍâµÄÇåÀí¡£
+è¿™ä¸ªç¨‹åºè¦ç¡®ä¿è¦åœ¨ä¸‹ä¸€ä¸ªè§£é‡Šå™¨å°±åšè¿™äº›äº‹ã€‚é»˜è®¤æƒ…å†µä¸‹ï¼Œå½“ perl ä¸ç”¨ä»»ä½•
+é€‰é¡¹æž„å»ºæ—¶ï¼Œå…¨å±€å˜é‡ C<PL_perl_destruct_level> è®¾ç½®ä¸º 0ã€‚å› ä¸ºåœ¨ä¸€ä¸ªç¨‹
+åºç”Ÿå­˜æœŸä¸­åªåˆ›å»ºä¸€ä¸ªè§£é‡Šå™¨æ˜¯ä¸éœ€è¦è¿›è¡Œé¢å¤–çš„æ¸…ç†ã€‚
 
-½« C<PL_perl_destruct_level> ÉèÖÃÎª C<1> ¿ÉÒÔÊ¹ËùÓÐµÄ¶¼Çå³ýÁË£º
+å°† C<PL_perl_destruct_level> è®¾ç½®ä¸º C<1> å¯ä»¥ä½¿æ‰€æœ‰çš„éƒ½æ¸…é™¤äº†ï¼š
 
  while(1) {
      ...
@@ -834,25 +834,25 @@ PERL_EXIT_DESTRUCT_END> À´»ñµÃÐÂÌØÐÔ¡£ÕâÒ²¿ÉÒÔÔÚ perl_parse Ê§°ÜÖ®ºóµ÷
      /* let's go do it again! */
  }
 
-µ± I<perl_destruct()> µ÷ÓÃÊ±£¬Õâ¸ö½âÊÍÆ÷µÄÓï·¨½âÎöÊ÷ºÍ·ûºÅ±í¾Í±»Çå³ý£¬
-È«¾Ö±äÁ¿Ò²±»ÖØÐÂÉèÖÃ¡£ÒòÎª perl_construct »á½«
-C<PL_perl_destruct_level> ÖØÐÂÉèÖÃÎª C<0>£¬ËùÒÔÒªÔÙÒ»´ÎÉèÖÃ
-C<PL_perl_destruct_level>¡£
+å½“ I<perl_destruct()> è°ƒç”¨æ—¶ï¼Œè¿™ä¸ªè§£é‡Šå™¨çš„è¯­æ³•è§£æžæ ‘å’Œç¬¦å·è¡¨å°±è¢«æ¸…é™¤ï¼Œ
+å…¨å±€å˜é‡ä¹Ÿè¢«é‡æ–°è®¾ç½®ã€‚å› ä¸º perl_construct ä¼šå°†
+C<PL_perl_destruct_level> é‡æ–°è®¾ç½®ä¸º C<0>ï¼Œæ‰€ä»¥è¦å†ä¸€æ¬¡è®¾ç½®
+C<PL_perl_destruct_level>ã€‚
 
-ÏÖÔÚ¼Ù¶¨ÎÒÃÇÍ¬Ê±ÓÐ¶à¸ö½âÊÍÆ÷ÔËÐÐ¡£ÕâÊÇ¿ÉÒÔ×öµ½µÄ£¬µ«ÊÇÖ»ÓÐÔÚÄã´´½¨
-perl Ê±Ê¹ÓÃÅäÖÃÑ¡Ïî C<-Dusemultiplicity> »òÕß C<-Dusethreads
--Duseithreads>¡£È±Ê¡Çé¿öÏÂ£¬´ò¿ªÕâÐ©ÅäÖÃÑ¡ÏîÖÐµÄÒ»¸ö¾Í°ÑÕâ¸ö
-per-interpreter È«¾Ö±äÁ¿ C<PL_perl_destruct_level> ÉèÖÃÎª 1¡£ËùÒÔÇåÀí
-ÊÇ×Ô¶¯µÄ£¬²¢ÇÒ½âÊÍÆ÷±äÁ¿±äÕýÈ·µÄ³õÊ¼»¯¡£¼´Ê¹Äã²»ÓÃÍ¬Ê±ÔËÐÐ¶à¸ö½âÊÍÆ÷£¬
-¶øÊÇÒªÏñÇ°ÃæµÄÀý×ÓÄÇÑùË³ÐòÔËÐÐ£¬µ«»¹ÊÇ½¨ÒéÄãÓÃ C<-Dusemultiplicity>
-Ñ¡ÏîÀ´±àÒë perl¡£·ñÔòÒ»Ð©½âÊÍÆ÷µÄ±äÁ¿ÔÚÁ¬ÐøÔËÐÐ¹ý³ÌÖÐ²»»áÕýÈ·µÄ³õÊ¼»¯£¬Äã
-µÄÔËÐÐ³ÌÐò¿ÉÄÜ»á±ÀÀ£¡£
+çŽ°åœ¨å‡å®šæˆ‘ä»¬åŒæ—¶æœ‰å¤šä¸ªè§£é‡Šå™¨è¿è¡Œã€‚è¿™æ˜¯å¯ä»¥åšåˆ°çš„ï¼Œä½†æ˜¯åªæœ‰åœ¨ä½ åˆ›å»º
+perl æ—¶ä½¿ç”¨é…ç½®é€‰é¡¹ C<-Dusemultiplicity> æˆ–è€… C<-Dusethreads
+-Duseithreads>ã€‚ç¼ºçœæƒ…å†µä¸‹ï¼Œæ‰“å¼€è¿™äº›é…ç½®é€‰é¡¹ä¸­çš„ä¸€ä¸ªå°±æŠŠè¿™ä¸ª
+per-interpreter å…¨å±€å˜é‡ C<PL_perl_destruct_level> è®¾ç½®ä¸º 1ã€‚æ‰€ä»¥æ¸…ç†
+æ˜¯è‡ªåŠ¨çš„ï¼Œå¹¶ä¸”è§£é‡Šå™¨å˜é‡å˜æ­£ç¡®çš„åˆå§‹åŒ–ã€‚å³ä½¿ä½ ä¸ç”¨åŒæ—¶è¿è¡Œå¤šä¸ªè§£é‡Šå™¨ï¼Œ
+è€Œæ˜¯è¦åƒå‰é¢çš„ä¾‹å­é‚£æ ·é¡ºåºè¿è¡Œï¼Œä½†è¿˜æ˜¯å»ºè®®ä½ ç”¨ C<-Dusemultiplicity>
+é€‰é¡¹æ¥ç¼–è¯‘ perlã€‚å¦åˆ™ä¸€äº›è§£é‡Šå™¨çš„å˜é‡åœ¨è¿žç»­è¿è¡Œè¿‡ç¨‹ä¸­ä¸ä¼šæ­£ç¡®çš„åˆå§‹åŒ–ï¼Œä½ 
+çš„è¿è¡Œç¨‹åºå¯èƒ½ä¼šå´©æºƒã€‚
 
-Èç¹ûÄã´òËãÔÚ²»Í¬Ïß³ÌÖÐ²¢·¢ÔËÐÐ¶à¸ö½âÊÍÆ÷Ê±£¬Ê¹ÓÃ C<-Dusethreads
--Duseithreads> ¶ø²»ÊÇC<-Dusemultiplicity> ¿ÉÄÜ¸üºÏÊÊ¡£ÒòÎªÕâ¿ÉÒÔ¶Ô½âÊÍ
-Æ÷Ö§³ÖÁ´½Óµ½ÏµÍ³µÄÏß³Ì¿â¡£
+å¦‚æžœä½ æ‰“ç®—åœ¨ä¸åŒçº¿ç¨‹ä¸­å¹¶å‘è¿è¡Œå¤šä¸ªè§£é‡Šå™¨æ—¶ï¼Œä½¿ç”¨ C<-Dusethreads
+-Duseithreads> è€Œä¸æ˜¯C<-Dusemultiplicity> å¯èƒ½æ›´åˆé€‚ã€‚å› ä¸ºè¿™å¯ä»¥å¯¹è§£é‡Š
+å™¨æ”¯æŒé“¾æŽ¥åˆ°ç³»ç»Ÿçš„çº¿ç¨‹åº“ã€‚
 
-ÈÃÎÒÃÇÀ´ÊÔÒ»ÏÂ£º
+è®©æˆ‘ä»¬æ¥è¯•ä¸€ä¸‹ï¼š
 
 
  #include <EXTERN.h> #include <perl.h>
@@ -899,29 +899,29 @@ per-interpreter È«¾Ö±äÁ¿ C<PL_perl_destruct_level> ÉèÖÃÎª 1¡£ËùÒÔÇåÀí
      PERL_SYS_TERM();
  }
 
-×¢Òâ PERL_SET_CONTEXT() µÄµ÷ÓÃ¡£Õâ¶ÔÓÚÈ«¾Ö×´Ì¬µÄ³õÊ¼»¯ÖÐ±ØÐëµÄ£¨ These
+æ³¨æ„ PERL_SET_CONTEXT() çš„è°ƒç”¨ã€‚è¿™å¯¹äºŽå…¨å±€çŠ¶æ€çš„åˆå§‹åŒ–ä¸­å¿…é¡»çš„ï¼ˆ These
 are necessary to initialize the global state that tracks which
 interpreter is the "current" one on the particular process or thread
-that may be running it.£©Èç¹ûÄãÓÐ¶à¸ö½âÊÍÆ÷²¢ÇÒÍ¬Ê±¶ÔÕâÐ©½âÊÍÆ÷½»²æµ÷
-ÓÃ perl API£¬¾ÍÓ¦¸Ã×ÜÊÇÊ¹ÓÃËü¡£
+that may be running it.ï¼‰å¦‚æžœä½ æœ‰å¤šä¸ªè§£é‡Šå™¨å¹¶ä¸”åŒæ—¶å¯¹è¿™äº›è§£é‡Šå™¨äº¤å‰è°ƒ
+ç”¨ perl APIï¼Œå°±åº”è¯¥æ€»æ˜¯ä½¿ç”¨å®ƒã€‚
 
-µ± C<interp> ÔÚÒ»¸ö²»ÊÇ´´½¨ËüµÄÏß³Ì£¨Ê¹ÓÃ perl_alloc() »òÕß¸üÉî°Â
-µÄ perl_clone()£©Ê¹ÓÃÊ±£¬Ò²Ó¦¸Ãµ÷ÓÃ PERL_SET_CONTEXT(interp)¡£
+å½“ C<interp> åœ¨ä¸€ä¸ªä¸æ˜¯åˆ›å»ºå®ƒçš„çº¿ç¨‹ï¼ˆä½¿ç”¨ perl_alloc() æˆ–è€…æ›´æ·±å¥¥
+çš„ perl_clone()ï¼‰ä½¿ç”¨æ—¶ï¼Œä¹Ÿåº”è¯¥è°ƒç”¨ PERL_SET_CONTEXT(interp)ã€‚
 
-ÏñÍ¨³£ÄÇÑù±àÒë£º
+åƒé€šå¸¸é‚£æ ·ç¼–è¯‘ï¼š
 
  % cc -o multiplicity multiplicity.c `perl -MExtUtils::Embed -e ccopts -e ldopts`
 
-¸Ï¿ìÔËÐÐ°É£º
+èµ¶å¿«è¿è¡Œå§ï¼š
 
  % multiplicity
  Hi, I'm one_perl
  Hi, I'm two_perl
 
-=head2 ÔÚÄãµÄ C ³ÌÐòÖÐÊ¹ÓÃ Perl Ä£¿é£¬ÕâÐ©Ä£¿é±¾ÉíÒ²Ê¹ÓÃ C ¿â
+=head2 åœ¨ä½ çš„ C ç¨‹åºä¸­ä½¿ç”¨ Perl æ¨¡å—ï¼Œè¿™äº›æ¨¡å—æœ¬èº«ä¹Ÿä½¿ç”¨ C åº“
 
-Èç¹ûÄãÔÚÊ¹ÓÃÉÏÃæµÄÀý×ÓÖÐÊÔÍ¼Ç¶ÈëÒ»¸ö½Å±¾£¬Õâ¸ö½Å±¾µ÷ÓÃÒ»¸öÊ¹ÓÃ C »òÕß
-C++ ¿âµÄ Perl Ä£¿é£¨ÀýÈç I<Socket>£©£¬¿ÉÄÜ»á·¢Éú£º
+å¦‚æžœä½ åœ¨ä½¿ç”¨ä¸Šé¢çš„ä¾‹å­ä¸­è¯•å›¾åµŒå…¥ä¸€ä¸ªè„šæœ¬ï¼Œè¿™ä¸ªè„šæœ¬è°ƒç”¨ä¸€ä¸ªä½¿ç”¨ C æˆ–è€…
+C++ åº“çš„ Perl æ¨¡å—ï¼ˆä¾‹å¦‚ I<Socket>ï¼‰ï¼Œå¯èƒ½ä¼šå‘ç”Ÿï¼š
 
 
  Can't load module Socket, dynamic loading not available in this perl.
@@ -929,15 +929,15 @@ C++ ¿âµÄ Perl Ä£¿é£¨ÀýÈç I<Socket>£©£¬¿ÉÄÜ»á·¢Éú£º
   dynamic loading or has the Socket module statically linked into it.)
 
 
-³öÊ²Ã´´íÁË£¿
+å‡ºä»€ä¹ˆé”™äº†ï¼Ÿ
 
-ÄãµÄ½âÊÍÆ÷²»ÖªµÀÔõÑùÓëÕâÐ©À©Õ¹½»Á÷¡£Ò»¸öÐ¡Ð¡µÄÕ³ºÏ´úÂë½«»áÆðµ½×÷ÓÃ¡£Ö±
-µ½ÏÖÔÚÄã»¹ÊÇÓÃ NULL ×÷ÎªµÚ¶þ¸ö²ÎÊýµ÷ÓÃ I<perl_parse()>¡£
+ä½ çš„è§£é‡Šå™¨ä¸çŸ¥é“æ€Žæ ·ä¸Žè¿™äº›æ‰©å±•äº¤æµã€‚ä¸€ä¸ªå°å°çš„ç²˜åˆä»£ç å°†ä¼šèµ·åˆ°ä½œç”¨ã€‚ç›´
+åˆ°çŽ°åœ¨ä½ è¿˜æ˜¯ç”¨ NULL ä½œä¸ºç¬¬äºŒä¸ªå‚æ•°è°ƒç”¨ I<perl_parse()>ã€‚
 
  perl_parse(my_perl, NULL, argc, my_argv, NULL);
 
-ÕâÊÇÊ¹ÓÃÕ³ºÏ´úÂëµÄµØ·½£¬ËüÔÚ Perl ºÍÁ´½ÓµÄ C/C++ º¯Êý´´½¨ÆðÊ¼µÄÁ¬½Ó¡£
-ÈÃÎÒÃÇ¿´¿´ÔÚ I<perlmain.c> ÖÐµÄÒ»¶Î¿´¿´ Perl ÊÇÔõÑù×öµÄ£º
+è¿™æ˜¯ä½¿ç”¨ç²˜åˆä»£ç çš„åœ°æ–¹ï¼Œå®ƒåœ¨ Perl å’Œé“¾æŽ¥çš„ C/C++ å‡½æ•°åˆ›å»ºèµ·å§‹çš„è¿žæŽ¥ã€‚
+è®©æˆ‘ä»¬çœ‹çœ‹åœ¨ I<perlmain.c> ä¸­çš„ä¸€æ®µçœ‹çœ‹ Perl æ˜¯æ€Žæ ·åšçš„ï¼š
 
  static void xs_init (pTHX);
 
@@ -955,9 +955,9 @@ C++ ¿âµÄ Perl Ä£¿é£¨ÀýÈç I<Socket>£©£¬¿ÉÄÜ»á·¢Éú£º
  }
 
 
-¶ÔÓÚÃ¿¸öÒªÁ´½Óµ½ÄãµÄ Perl ¿ÉÖ´ÐÐ³ÌÐòµÄÀ©Õ¹£¨ÓÉÄãµçÄÔµÄ³õÊ¼»¯ÅäÖÃ¾ö¶¨»ò
-Õßµ±¼ÓÈëÒ»¸öÐÂµÄÀ©Õ¹£©£¬´´½¨Ò»¸ö Perl º¯ÊýÕûºÏÀ©Õ¹ÖÐµÄº¯Êý¡£Í¨³£Õâ¸öº¯
-Êý½Ð I<Module::boostrap()>£¬µ±ÄãÊ¹ÓÃ I<use Module> ¾Íµ÷ÓÃÁËÕâ¸öº¯Êý¡£
+å¯¹äºŽæ¯ä¸ªè¦é“¾æŽ¥åˆ°ä½ çš„ Perl å¯æ‰§è¡Œç¨‹åºçš„æ‰©å±•ï¼ˆç”±ä½ ç”µè„‘çš„åˆå§‹åŒ–é…ç½®å†³å®šæˆ–
+è€…å½“åŠ å…¥ä¸€ä¸ªæ–°çš„æ‰©å±•ï¼‰ï¼Œåˆ›å»ºä¸€ä¸ª Perl å‡½æ•°æ•´åˆæ‰©å±•ä¸­çš„å‡½æ•°ã€‚é€šå¸¸è¿™ä¸ªå‡½
+æ•°å« I<Module::boostrap()>ï¼Œå½“ä½ ä½¿ç”¨ I<use Module> å°±è°ƒç”¨äº†è¿™ä¸ªå‡½æ•°ã€‚
 In turn, this hooks into an XSUB, I<boot_Module>, which creates a Perl
 counterpart for each of the extension's XSUBs. Don't worry about this
 part; leave that to the I<xsubpp> and extension authors. If your
@@ -967,11 +967,11 @@ working DynaLoader then there is rarely any need to link in any other
 extensions statically.
 
 
-Ò»µ©ÄãÓÐÕâ¶Î´úÂë£¬°ÑËü¼Óµ½ I<perl_parse()> µÄµÚ¶þ¸ö²ÎÊýÖÐ£º
+ä¸€æ—¦ä½ æœ‰è¿™æ®µä»£ç ï¼ŒæŠŠå®ƒåŠ åˆ° I<perl_parse()> çš„ç¬¬äºŒä¸ªå‚æ•°ä¸­ï¼š
 
  perl_parse(my_perl, xs_init, argc, my_argv, NULL);
 
-È»ºó±àÒë£º
+ç„¶åŽç¼–è¯‘ï¼š
 
  % cc -o interp interp.c `perl -MExtUtils::Embed -e ccopts -e ldopts`
 
@@ -981,61 +981,61 @@ extensions statically.
 
    print "Now I can use extensions!\n"'
 
-B<ExtUtils::Embed> Ò²ÄÜ×Ô¶¯Ð´ I<xs_init> Õ³ºÏ´úÂë£º
+B<ExtUtils::Embed> ä¹Ÿèƒ½è‡ªåŠ¨å†™ I<xs_init> ç²˜åˆä»£ç ï¼š
 
  % perl -MExtUtils::Embed -e xsinit -- -o perlxsi.c
  % cc -c perlxsi.c `perl -MExtUtils::Embed -e ccopts`
  % cc -c interp.c  `perl -MExtUtils::Embed -e ccopts`
  % cc -o interp perlxsi.o interp.o `perl -MExtUtils::Embed -e ldopts`
 
-ÏêÏ¸ÄÚÈÝ²Î¿¼ L<perlxs>¡¢L<perlguts> ºÍ L<perlapi>¡£
+è¯¦ç»†å†…å®¹å‚è€ƒ L<perlxs>ã€L<perlguts> å’Œ L<perlapi>ã€‚
 
-=head1 ÔÚ Win32 Ç¶Èë Perl
+=head1 åœ¨ Win32 åµŒå…¥ Perl
 
-Ò»°ã£¬ÕâÀïÏÔÊ¾µÄËùÓÐ´úÂëÔÚ Windows ÏÂ²»ÓÃÈÎºÎÐÞ¸Ä¾ÍÄÜ¹¤×÷¡£
+ä¸€èˆ¬ï¼Œè¿™é‡Œæ˜¾ç¤ºçš„æ‰€æœ‰ä»£ç åœ¨ Windows ä¸‹ä¸ç”¨ä»»ä½•ä¿®æ”¹å°±èƒ½å·¥ä½œã€‚
  
-¾¡¹ÜÕâÑù£¬ÕâÀïÓÐÒ»Ð©ÃüÁîÐÐÀý×ÓµÄ¾¯¸æ¡£¶ÔÓÚ³õÑ§Õß£¬ÔÚ Win32 ±¾ÉíµÄÃüÁî
-ÐÐÖÐÊÇ²»ÄÜÊ¹ÓÃ·´ÒýºÅµÄ¡£ÔÚ CPAN µÄ ExtUtils::Embed ÖÐÓÐÒ»¸ö³ÆÎª
-B<genmake> ½Å±¾¡£Õâ¿ÉÒÔ´Óµ¥¸öµÄ C Ô´ÎÄ¼þÖÐ´´½¨Ò»¸ö¼òµ¥µÄ makefile¡£¿É
-ÒÔÕâÑùÊ¹ÓÃ£º
+å°½ç®¡è¿™æ ·ï¼Œè¿™é‡Œæœ‰ä¸€äº›å‘½ä»¤è¡Œä¾‹å­çš„è­¦å‘Šã€‚å¯¹äºŽåˆå­¦è€…ï¼Œåœ¨ Win32 æœ¬èº«çš„å‘½ä»¤
+è¡Œä¸­æ˜¯ä¸èƒ½ä½¿ç”¨åå¼•å·çš„ã€‚åœ¨ CPAN çš„ ExtUtils::Embed ä¸­æœ‰ä¸€ä¸ªç§°ä¸º
+B<genmake> è„šæœ¬ã€‚è¿™å¯ä»¥ä»Žå•ä¸ªçš„ C æºæ–‡ä»¶ä¸­åˆ›å»ºä¸€ä¸ªç®€å•çš„ makefileã€‚å¯
+ä»¥è¿™æ ·ä½¿ç”¨ï¼š
 
  C:\ExtUtils-Embed\eg> perl genmake interp.c
  C:\ExtUtils-Embed\eg> nmake
  C:\ExtUtils-Embed\eg> interp -e "print qq{I'm embedded in Win32!\n}"
 
-Äã¿ÉÄÜÏëÔÚ Microsoft Developer Studio ÖÐÊ¹ÓÃ¸üÎÈ½¡µÄ»·¾³£¨ You may
+ä½ å¯èƒ½æƒ³åœ¨ Microsoft Developer Studio ä¸­ä½¿ç”¨æ›´ç¨³å¥çš„çŽ¯å¢ƒï¼ˆ You may
 wish to use a more robust environment such as the Microsoft Developer
-Studio.£©¡£ÔÚÕâÖÖÇé¿öÏÂÖÐ£¬ÓÃÕâ¸öÀ´²úÉú perlxsi.c£º
+Studio.ï¼‰ã€‚åœ¨è¿™ç§æƒ…å†µä¸‹ä¸­ï¼Œç”¨è¿™ä¸ªæ¥äº§ç”Ÿ perlxsi.cï¼š
 
  perl -MExtUtils::Embed -e xsinit
 
-´´½¨Ò»¸öÐÂµÄ¹¤³Ì£¬È»ºó Insert -> Files µ½¹¤³ÌÖÐ£ºperlxsi.c£¬perl.lib£¬
-ºÍÄã×Ô¼ºµÄÔ´ÎÄ¼þ£¬ÀýÈç interp.c¡£Ò»°ãÄã¿ÉÒÔÔÚ B<C:\perl\lib\CORE> ÖÐÕÒ
-µ½ perl.lib¡£Èç¹ûÃ»ÓÐµÄ»°£¬Äã¿ÉÒÔÓÃ C<perl -V:archlib> ÖÐÕÒµ½ B<CORE>
-Ä¿Â¼¡£studio »¹ÒªÖªµÀÔÚÄÄÀïÕÒµ½ Perl µÄ include ÎÄ¼þ¡£Õâ¸öÂ·¾¶¿ÉÒÔÍ¨¹ý
-Tools -> Options -> Directories ²Ëµ¥À´¼ÓÈë¡£×îºó£¬Ñ¡Ôñ Build -> Build
-interp.exe£¬ÕâÑù¾ÍºÃÁË¡£
+åˆ›å»ºä¸€ä¸ªæ–°çš„å·¥ç¨‹ï¼Œç„¶åŽ Insert -> Files åˆ°å·¥ç¨‹ä¸­ï¼šperlxsi.cï¼Œperl.libï¼Œ
+å’Œä½ è‡ªå·±çš„æºæ–‡ä»¶ï¼Œä¾‹å¦‚ interp.cã€‚ä¸€èˆ¬ä½ å¯ä»¥åœ¨ B<C:\perl\lib\CORE> ä¸­æ‰¾
+åˆ° perl.libã€‚å¦‚æžœæ²¡æœ‰çš„è¯ï¼Œä½ å¯ä»¥ç”¨ C<perl -V:archlib> ä¸­æ‰¾åˆ° B<CORE>
+ç›®å½•ã€‚studio è¿˜è¦çŸ¥é“åœ¨å“ªé‡Œæ‰¾åˆ° Perl çš„ include æ–‡ä»¶ã€‚è¿™ä¸ªè·¯å¾„å¯ä»¥é€šè¿‡
+Tools -> Options -> Directories èœå•æ¥åŠ å…¥ã€‚æœ€åŽï¼Œé€‰æ‹© Build -> Build
+interp.exeï¼Œè¿™æ ·å°±å¥½äº†ã€‚
 
-=head1 Òþ²Ø Perl_
+=head1 éšè— Perl_
 
-ÔÚ±àÒë±êÇ©ÖÐ¼ÓÈë -DPERL_NO_SHORT_NAMES£¬Äã¾Í¿ÉÒÔÒþ²Ø Perl ¹«¹²½Ó¿ÚµÄ¼ò¶Ì
-ÐÎÊ½¡£ÕâÒâÎ¶×ÅÄã²»ÄÜÕâÑùÐ´£º
+åœ¨ç¼–è¯‘æ ‡ç­¾ä¸­åŠ å…¥ -DPERL_NO_SHORT_NAMESï¼Œä½ å°±å¯ä»¥éšè— Perl å…¬å…±æŽ¥å£çš„ç®€çŸ­
+å½¢å¼ã€‚è¿™æ„å‘³ç€ä½ ä¸èƒ½è¿™æ ·å†™ï¼š
 
     warn("%d bottles of beer on the wall", bottlecount);
 
-Äã±ØÐëÐ´Ã÷È·ÍêÈ«µÄÐÎÊ½£º
+ä½ å¿…é¡»å†™æ˜Žç¡®å®Œå…¨çš„å½¢å¼ï¼š
 
     Perl_warn(aTHX_ "%d bottles of beer on the wall", bottlecount);
 
-£¨²Î¿¼ L<perlguts/Background and PERL_IMPLICIT_CONTEXT for the explanation
-of the C<aTHX_>.>£©Òþ²Ø¼ò¶ÌµÄÐÎÊ½¶ÔÓÚ±ÜÃâºÍÆäËüÈí¼þ°üµÄ³åÍ»£¨C Ô¤´¦Àí
-»òÕßÆäËü£©¡££¨Perl ÓÃ¼ò¶ÌÃû×Ö¶¨ÒåÁË 2400 API£¬ËùÒÔºÜÓÐ¿ÉÄÜ·¢Éú³åÍ»¡££©
+ï¼ˆå‚è€ƒ L<perlguts/Background and PERL_IMPLICIT_CONTEXT for the explanation
+of the C<aTHX_>.>ï¼‰éšè—ç®€çŸ­çš„å½¢å¼å¯¹äºŽé¿å…å’Œå…¶å®ƒè½¯ä»¶åŒ…çš„å†²çªï¼ˆC é¢„å¤„ç†
+æˆ–è€…å…¶å®ƒï¼‰ã€‚ï¼ˆPerl ç”¨ç®€çŸ­åå­—å®šä¹‰äº† 2400 APIï¼Œæ‰€ä»¥å¾ˆæœ‰å¯èƒ½å‘ç”Ÿå†²çªã€‚ï¼‰
 
 =head1 MORAL
 
-ÓÐÊ±¿ÉÒÔÔÚ C ÖÐÐ´³ö I<ÔËÐÐ¸ü¿ìµÄ´úÂë£¨write faster code£©>£¬µ«ÊÇÄã×ÜÊÇ¿ÉÒÔÔÚ
-Perl ÖÐI<¸ü¿ìµØÐ´³ö´úÂë£¨write code faster£©>¡£ÒòÎªÄã¿ÉÒÔÏà»¥Ê¹ÓÃ¶Ô·½£¬Ö»
-ÒªÄãÐèÒª¿ÉÒÔ½áºÏÆðÀ´¡£
+æœ‰æ—¶å¯ä»¥åœ¨ C ä¸­å†™å‡º I<è¿è¡Œæ›´å¿«çš„ä»£ç ï¼ˆwrite faster codeï¼‰>ï¼Œä½†æ˜¯ä½ æ€»æ˜¯å¯ä»¥åœ¨
+Perl ä¸­I<æ›´å¿«åœ°å†™å‡ºä»£ç ï¼ˆwrite code fasterï¼‰>ã€‚å› ä¸ºä½ å¯ä»¥ç›¸äº’ä½¿ç”¨å¯¹æ–¹ï¼Œåª
+è¦ä½ éœ€è¦å¯ä»¥ç»“åˆèµ·æ¥ã€‚
 
 =head1 AUTHOR
 
