--- a/lib/POD2/CN/perllol.pod
+++ b/lib/POD2/CN/perllol.pod
@@ -1,19 +1,21 @@
+=encoding utf8
+
 =head1 NAME
 
-perllol - ²Ù×÷Êý×éµÄÊý×é£¨¶þÎ¬Êý×é£©
+perllol - æ“ä½œæ•°ç»„çš„æ•°ç»„ï¼ˆäºŒç»´æ•°ç»„ï¼‰
 
-=head1 ËµÃ÷
+=head1 è¯´æ˜Ž
 
-=head2 ÉùÃ÷ºÍ·ÃÎÊÊý×éµÄÊý×é
+=head2 å£°æ˜Žå’Œè®¿é—®æ•°ç»„çš„æ•°ç»„
 
-´´½¨Ò»¸öÊý×éµÄÊý×é£¨ÓÐÊ±Ò²¿ÉÒÔ½Ð¡°ÁÐ±íµÄÁÐ±í¡±£¬²»¹ý²»Ì«×¼È·£©ÕæÊÇÔÙ¼ò
-µ¥Ò²²»¹ýÁË¡£ËüÏàµ±ÈÝÒ×Àí½â£¬²¢ÇÒ±¾ÎÄÖÐ³öÏÖµÄÃ¿¸öÀý×Ó¶¼ÓÐ¿ÉÄÜÔÚÊµ¼ÊÓ¦ÓÃ
-ÖÐ³öÏÖ¡£
+åˆ›å»ºä¸€ä¸ªæ•°ç»„çš„æ•°ç»„ï¼ˆæœ‰æ—¶ä¹Ÿå¯ä»¥å«â€œåˆ—è¡¨çš„åˆ—è¡¨â€ï¼Œä¸è¿‡ä¸å¤ªå‡†ç¡®ï¼‰çœŸæ˜¯å†ç®€
+å•ä¹Ÿä¸è¿‡äº†ã€‚å®ƒç›¸å½“å®¹æ˜“ç†è§£ï¼Œå¹¶ä¸”æœ¬æ–‡ä¸­å‡ºçŽ°çš„æ¯ä¸ªä¾‹å­éƒ½æœ‰å¯èƒ½åœ¨å®žé™…åº”ç”¨
+ä¸­å‡ºçŽ°ã€‚
 
-Êý×éµÄÊý×é¾ÍÊÇÒ»¸öÆÕÍ¨µÄÊý×é(@AoA)£¬²»¹ý¿ÉÒÔ½ÓÊÜÁ½¸öÏÂ±ê(C<$AoA[3][2]>)¡£
-ÏÂÃæÏÈ¶¨ÒåÒ»¸öÕâÑùµÄÊý×é£º
+æ•°ç»„çš„æ•°ç»„å°±æ˜¯ä¸€ä¸ªæ™®é€šçš„æ•°ç»„(@AoA)ï¼Œä¸è¿‡å¯ä»¥æŽ¥å—ä¸¤ä¸ªä¸‹æ ‡(C<$AoA[3][2]>)ã€‚
+ä¸‹é¢å…ˆå®šä¹‰ä¸€ä¸ªè¿™æ ·çš„æ•°ç»„ï¼š
 
-    # Ò»¸ö°üº¬ÓÐ¡°Ö¸ÏòÊý×éµÄÒýÓÃ¡±µÄÊý×é
+    # ä¸€ä¸ªåŒ…å«æœ‰â€œæŒ‡å‘æ•°ç»„çš„å¼•ç”¨â€çš„æ•°ç»„
     @AoA = (
         [ "fred", "barney" ],
         [ "george", "jane", "elroy" ],
@@ -23,11 +25,11 @@ perllol - ²Ù×÷Êý×éµÄÊý×é£¨¶þÎ¬Êý×é£©
     print $AoA[2][2];
   bart
 
-Äã¿ÉÄÜÒÑ¾­×¢Òâµ½£¬ÍâÃæµÄÀ¨ºÅÊÇÔ²À¨ºÅ£¬ÕâÊÇÒòÎªÎÒÃÇÏëÒª¸øÊý×é¸³Öµ£¬ËùÒÔ
-ÐèÒªÔ²À¨ºÅ¡£Èç¹ûÄãI<²»>Ï£ÍûÕâÀïÊÇ @AoA£¬¶øÊÇÒ»¸öÖ¸ÏòËüµÄÒýÓÃ£¬ÄÇÃ´¾ÍµÃ
-ÕâÑù£º
+ä½ å¯èƒ½å·²ç»æ³¨æ„åˆ°ï¼Œå¤–é¢çš„æ‹¬å·æ˜¯åœ†æ‹¬å·ï¼Œè¿™æ˜¯å› ä¸ºæˆ‘ä»¬æƒ³è¦ç»™æ•°ç»„èµ‹å€¼ï¼Œæ‰€ä»¥
+éœ€è¦åœ†æ‹¬å·ã€‚å¦‚æžœä½ I<ä¸>å¸Œæœ›è¿™é‡Œæ˜¯ @AoAï¼Œè€Œæ˜¯ä¸€ä¸ªæŒ‡å‘å®ƒçš„å¼•ç”¨ï¼Œé‚£ä¹ˆå°±å¾—
+è¿™æ ·ï¼š
 
-    # Ò»¸öÖ¸Ïò¡°°üº¬ÓÐÊý×éÒýÓÃµÄÊý×é¡±µÄÒýÓÃ
+    # ä¸€ä¸ªæŒ‡å‘â€œåŒ…å«æœ‰æ•°ç»„å¼•ç”¨çš„æ•°ç»„â€çš„å¼•ç”¨
     $ref_to_AoA = [
         [ "fred", "barney", "pebbles", "bambam", "dino", ],
         [ "homer", "bart", "marge", "maggie", ],
@@ -36,60 +38,60 @@ perllol - ²Ù×÷Êý×éµÄÊý×é£¨¶þÎ¬Êý×é£©
 
     print $ref_to_AoA->[2][2];
 
-×¢ÒâÍâÃæµÄÀ¨ºÅÏÖÔÚ±ä³ÉÁË·½À¨ºÅ£¬²¢ÇÒÎÒÃÇµÄ·ÃÎÊÓï·¨Ò²ÓÐËù¸Ä±ä¡£ÕâÊ±ÒòÎª
-ºÍ C ²»Í¬£¬ÔÚ Perl ÖÐÄã²»ÄÜ×ÔÓÉµØ½»»»Êý×éºÍÒýÓÃ£¨ÔÚ C ÖÐ£¬Êý×éºÍÖ¸ÕëÔÚ
-ºÜ¶àµØ·½¿ÉÒÔ»¥Ïà´úÌæÊ¹ÓÃ£©¡£$ref_to_AoA ÊÇÒ»¸öÊý×éÒýÓÃ£¬¶ø @AoA ÊÇÒ»¸ö
-Êý×é¡£Í¬ÑùµØ£¬C<$AoA[2]> Ò²²»ÊÇÒ»¸öÊý×é£¬¶øÊÇÒ»¸öÊý×éÒýÓÃ¡£ËùÒÔÏÂÃæÕâ
-Á½ÐÐ£º
+æ³¨æ„å¤–é¢çš„æ‹¬å·çŽ°åœ¨å˜æˆäº†æ–¹æ‹¬å·ï¼Œå¹¶ä¸”æˆ‘ä»¬çš„è®¿é—®è¯­æ³•ä¹Ÿæœ‰æ‰€æ”¹å˜ã€‚è¿™æ—¶å› ä¸º
+å’Œ C ä¸åŒï¼Œåœ¨ Perl ä¸­ä½ ä¸èƒ½è‡ªç”±åœ°äº¤æ¢æ•°ç»„å’Œå¼•ç”¨ï¼ˆåœ¨ C ä¸­ï¼Œæ•°ç»„å’ŒæŒ‡é’ˆåœ¨
+å¾ˆå¤šåœ°æ–¹å¯ä»¥äº’ç›¸ä»£æ›¿ä½¿ç”¨ï¼‰ã€‚$ref_to_AoA æ˜¯ä¸€ä¸ªæ•°ç»„å¼•ç”¨ï¼Œè€Œ @AoA æ˜¯ä¸€ä¸ª
+æ•°ç»„ã€‚åŒæ ·åœ°ï¼ŒC<$AoA[2]> ä¹Ÿä¸æ˜¯ä¸€ä¸ªæ•°ç»„ï¼Œè€Œæ˜¯ä¸€ä¸ªæ•°ç»„å¼•ç”¨ã€‚æ‰€ä»¥ä¸‹é¢è¿™
+ä¸¤è¡Œï¼š
 
     $AoA[2][2]
     $ref_to_AoA->[2][2]
 
-Ò²¿ÉÒÔÓÃÕâÁ½ÐÐÀ´´úÌæ£º
+ä¹Ÿå¯ä»¥ç”¨è¿™ä¸¤è¡Œæ¥ä»£æ›¿ï¼š
 
     $AoA[2]->[2]
     $ref_to_AoA->[2]->[2]
 
-ÕâÊÇÒòÎªÕâÀïÓÐÁ½¸öÏàÁÚµÄÀ¨ºÅ£¨²»¹ÜÊÇ·½À¨ºÅ»¹ÊÇ»¨À¨ºÅ£©£¬ËùÒÔÄã¿ÉÒÔËæÒâ
-µØÊ¡ÂÔ¼ýÍ··ûºÅ¡£µ«ÊÇÈç¹û $ref_to_AoA ºóÃæµÄÄÇ¸ö¼ýÍ·²»ÄÜÊ¡ÂÔ£¬ÒòÎªÊ¡ÂÔ
-ÁË¾ÍÃ»·¨ÖªµÀ $ref_to_AoA µ½µ×ÊÇÒýÓÃ»¹ÊÇÊý×éÁË ^_^¡£
+è¿™æ˜¯å› ä¸ºè¿™é‡Œæœ‰ä¸¤ä¸ªç›¸é‚»çš„æ‹¬å·ï¼ˆä¸ç®¡æ˜¯æ–¹æ‹¬å·è¿˜æ˜¯èŠ±æ‹¬å·ï¼‰ï¼Œæ‰€ä»¥ä½ å¯ä»¥éšæ„
+åœ°çœç•¥ç®­å¤´ç¬¦å·ã€‚ä½†æ˜¯å¦‚æžœ $ref_to_AoA åŽé¢çš„é‚£ä¸ªç®­å¤´ä¸èƒ½çœç•¥ï¼Œå› ä¸ºçœç•¥
+äº†å°±æ²¡æ³•çŸ¥é“ $ref_to_AoA åˆ°åº•æ˜¯å¼•ç”¨è¿˜æ˜¯æ•°ç»„äº† ^_^ã€‚
 
-=head2 ÐÞ¸Ä¶þÎ¬Êý×é
+=head2 ä¿®æ”¹äºŒç»´æ•°ç»„
 
-Ç°ÃæµÄÀý×ÓÀïÎÒÃÇ´´½¨ÁË°üº¬ÓÐ¹Ì¶¨Êý¾ÝµÄ¶þÎ¬Êý×é£¬µ«ÊÇÈçºÎÍùÆäÖÐÌí¼ÓÐÂÔª
-ËØÄØ£¿ÔÙ»òÕßÈçºÎ´ÓÁã¿ªÊ¼´´½¨Ò»¸ö¶þÎ¬Êý×éÄØ£¿
+å‰é¢çš„ä¾‹å­é‡Œæˆ‘ä»¬åˆ›å»ºäº†åŒ…å«æœ‰å›ºå®šæ•°æ®çš„äºŒç»´æ•°ç»„ï¼Œä½†æ˜¯å¦‚ä½•å¾€å…¶ä¸­æ·»åŠ æ–°å…ƒ
+ç´ å‘¢ï¼Ÿå†æˆ–è€…å¦‚ä½•ä»Žé›¶å¼€å§‹åˆ›å»ºä¸€ä¸ªäºŒç»´æ•°ç»„å‘¢ï¼Ÿ
 
-Ê×ÏÈ£¬ÈÃÎÒÃÇÊÔ×Å´ÓÒ»¸öÎÄ¼þÖÐ¶ÁÈ¡¶þÎ¬Êý×é¡£Ê×ÏÈÎÒÃÇÑÝÊ¾ÈçºÎÒ»´ÎÐÔÌí¼ÓÒ»
-ÐÐ¡£Ê×ÏÈÎÒÃÇ¼ÙÉèÓÐÕâÑùÒ»¸öÎÄ±¾ÎÄ¼þ£ºÃ¿Ò»ÐÐ´ú±íÁË¶þÎ¬Êý×éµÄÐÐ£¬¶øÃ¿Ò»¸ö
-µ¥´Ê´ú±íÁË¶þÎ¬Êý×éµÄÒ»¸öÔªËØ¡£ÏÂÃæµÄ´úÂë¿ÉÒÔ°ÑËüÃÇ´¢´æµ½ @AoA£º
+é¦–å…ˆï¼Œè®©æˆ‘ä»¬è¯•ç€ä»Žä¸€ä¸ªæ–‡ä»¶ä¸­è¯»å–äºŒç»´æ•°ç»„ã€‚é¦–å…ˆæˆ‘ä»¬æ¼”ç¤ºå¦‚ä½•ä¸€æ¬¡æ€§æ·»åŠ ä¸€
+è¡Œã€‚é¦–å…ˆæˆ‘ä»¬å‡è®¾æœ‰è¿™æ ·ä¸€ä¸ªæ–‡æœ¬æ–‡ä»¶ï¼šæ¯ä¸€è¡Œä»£è¡¨äº†äºŒç»´æ•°ç»„çš„è¡Œï¼Œè€Œæ¯ä¸€ä¸ª
+å•è¯ä»£è¡¨äº†äºŒç»´æ•°ç»„çš„ä¸€ä¸ªå…ƒç´ ã€‚ä¸‹é¢çš„ä»£ç å¯ä»¥æŠŠå®ƒä»¬å‚¨å­˜åˆ° @AoAï¼š
 
     while (<>) {
         @tmp = split;
         push @AoA, [ @tmp ];
     }
 
-ÄãÒ²¿ÉÒÔÓÃÒ»¸öº¯ÊýÀ´Ò»´Î¶ÁÈ¡Ò»ÐÐ£º
+ä½ ä¹Ÿå¯ä»¥ç”¨ä¸€ä¸ªå‡½æ•°æ¥ä¸€æ¬¡è¯»å–ä¸€è¡Œï¼š
 
     for $i ( 1 .. 10 ) {
         $AoA[$i] = [ somefunc($i) ];
     }
 
-»òÕßÒ²¿ÉÒÔÓÃÒ»¸öÁÙÊ±±äÁ¿À´ÖÐ×ªÒ»ÏÂ£¬ÕâÑù¿´ÆðÀ´¸üÇå³þÐ©£º
+æˆ–è€…ä¹Ÿå¯ä»¥ç”¨ä¸€ä¸ªä¸´æ—¶å˜é‡æ¥ä¸­è½¬ä¸€ä¸‹ï¼Œè¿™æ ·çœ‹èµ·æ¥æ›´æ¸…æ¥šäº›ï¼š
 
     for $i ( 1 .. 10 ) {
         @tmp = somefunc($i);
         $AoA[$i] = [ @tmp ];
     }
 
-×¢Òâ·½À¨ºÅ C<[]> ÔÚÕâÀï·Ç³£ÖØÒª¡£·½À¨ºÅÊµ¼ÊÉÏÊÇÊý×éÒýÓÃµÄ¹¹ÔìÆ÷¡£Èç¹û²»
-ÓÃ·½À¨ºÅ¶øÖ±½ÓÐ´£¬ÄÇ¾Í·¸ÁËºÜÑÏÖØµÄ´íÎó£º
+æ³¨æ„æ–¹æ‹¬å· C<[]> åœ¨è¿™é‡Œéžå¸¸é‡è¦ã€‚æ–¹æ‹¬å·å®žé™…ä¸Šæ˜¯æ•°ç»„å¼•ç”¨çš„æž„é€ å™¨ã€‚å¦‚æžœä¸
+ç”¨æ–¹æ‹¬å·è€Œç›´æŽ¥å†™ï¼Œé‚£å°±çŠ¯äº†å¾ˆä¸¥é‡çš„é”™è¯¯ï¼š
 
     $AoA[$i] = @tmp;
 
-Äã¿´£¬°ÑÒ»¸öÊý×é¸³Öµ¸øÁËÒ»¸ö±êÁ¿£¬ÄÇÃ´Æä½á¹ûÖ»ÊÇ¼ÆËãÁË @tmp Êý×éµÄÔªËØ¸ö
-Êý£¬ÎÒÏëÕâ¿Ï¶¨²»ÊÇÄãÏ£ÍûµÄ¡£
+ä½ çœ‹ï¼ŒæŠŠä¸€ä¸ªæ•°ç»„èµ‹å€¼ç»™äº†ä¸€ä¸ªæ ‡é‡ï¼Œé‚£ä¹ˆå…¶ç»“æžœåªæ˜¯è®¡ç®—äº† @tmp æ•°ç»„çš„å…ƒç´ ä¸ª
+æ•°ï¼Œæˆ‘æƒ³è¿™è‚¯å®šä¸æ˜¯ä½ å¸Œæœ›çš„ã€‚
 
-Èç¹ûÄã´ò¿ªÁË C<use strict>£¬ÄÇÃ´Äã¾ÍµÃÏÈ¶¨ÒåÒ»Ð©±äÁ¿È»ºó²ÅÄÜ±ÜÃâ¾¯¸æ£º
+å¦‚æžœä½ æ‰“å¼€äº† C<use strict>ï¼Œé‚£ä¹ˆä½ å°±å¾—å…ˆå®šä¹‰ä¸€äº›å˜é‡ç„¶åŽæ‰èƒ½é¿å…è­¦å‘Šï¼š
 
     use strict;
     my(@AoA, @tmp);
@@ -98,13 +100,13 @@ perllol - ²Ù×÷Êý×éµÄÊý×é£¨¶þÎ¬Êý×é£©
         push @AoA, [ @tmp ];
     }
 
-µ±È»£¬ÄãÒ²¿ÉÒÔ²»ÒªÁÙÊ±±äÁ¿£º
+å½“ç„¶ï¼Œä½ ä¹Ÿå¯ä»¥ä¸è¦ä¸´æ—¶å˜é‡ï¼š
 
     while (<>) {
         push @AoA, [ split ];
     }
 
-Èç¹ûÄãÖªµÀÏëÒª·ÅÔÚÊ²Ã´µØ·½µÄ»°£¬ÄãÒ²¿ÉÒÔ²»Òª push()£¬¶øÊÇÖ±½Ó½øÐÐ¸³Öµ£º
+å¦‚æžœä½ çŸ¥é“æƒ³è¦æ”¾åœ¨ä»€ä¹ˆåœ°æ–¹çš„è¯ï¼Œä½ ä¹Ÿå¯ä»¥ä¸è¦ push()ï¼Œè€Œæ˜¯ç›´æŽ¥è¿›è¡Œèµ‹å€¼ï¼š
 
     my (@AoA, $i, $line);
     for $i ( 0 .. 10 ) {
@@ -112,30 +114,30 @@ perllol - ²Ù×÷Êý×éµÄÊý×é£¨¶þÎ¬Êý×é£©
         $AoA[$i] = [ split ' ', $line ];
     }
 
-ÉõÖÁÊÇÕâÑù£º
+ç”šè‡³æ˜¯è¿™æ ·ï¼š
 
     my (@AoA, $i);
     for $i ( 0 .. 10 ) {
 	$AoA[$i] = [ split ' ', <> ];
     }
 
-Äã¿ÉÄÜÉúÅÂ <> ÔÚÁÐ±íÉÏÏÂÎÄ»á³ö²î´í£¬ËùÒÔÏëÒªÃ÷È·µØÉùÃ÷ÒªÔÚ±êÁ¿ÉÏÏÂÎÄÖÐ
-¶Ô <> ÇóÖµ£¬ÕâÑù¿É¶ÁÐÔ»á¸üºÃÒ»Ð©£º
-£¨ÒëÕß×¢£ºÁÐ±íÉÏÏÂÎÄÖÐ£¬<> ·µ»ØËùÓÐµÄÐÐ£¬±êÁ¿ÉÏÏÂÎÄÖÐ <> Ö»·µ»ØÒ»ÐÐ¡££©
+ä½ å¯èƒ½ç”Ÿæ€• <> åœ¨åˆ—è¡¨ä¸Šä¸‹æ–‡ä¼šå‡ºå·®é”™ï¼Œæ‰€ä»¥æƒ³è¦æ˜Žç¡®åœ°å£°æ˜Žè¦åœ¨æ ‡é‡ä¸Šä¸‹æ–‡ä¸­
+å¯¹ <> æ±‚å€¼ï¼Œè¿™æ ·å¯è¯»æ€§ä¼šæ›´å¥½ä¸€äº›ï¼š
+ï¼ˆè¯‘è€…æ³¨ï¼šåˆ—è¡¨ä¸Šä¸‹æ–‡ä¸­ï¼Œ<> è¿”å›žæ‰€æœ‰çš„è¡Œï¼Œæ ‡é‡ä¸Šä¸‹æ–‡ä¸­ <> åªè¿”å›žä¸€è¡Œã€‚ï¼‰
 
     my (@AoA, $i);
     for $i ( 0 .. 10 ) {
         $AoA[$i] = [ split ' ', scalar(<>) ];
     }
 
-Èç¹ûÄãÏëÓÃ $ref_to_AoA ÕâÑùµÄÒ»¸öÒýÓÃÀ´´úÌæÊý×é£¬ÄÇÄã¾ÍµÃÕâÃ´Ð´£º
+å¦‚æžœä½ æƒ³ç”¨ $ref_to_AoA è¿™æ ·çš„ä¸€ä¸ªå¼•ç”¨æ¥ä»£æ›¿æ•°ç»„ï¼Œé‚£ä½ å°±å¾—è¿™ä¹ˆå†™ï¼š
 
     while (<>) {
         push @$ref_to_AoA, [ split ];
     }
 
-ÏÖÔÚÄãÒÑ¾­ÖªµÀÈçºÎÌí¼ÓÐÂÐÐÁË¡£ÄÇÃ´ÈçºÎÌí¼ÓÐÂÁÐÄØ£¿Èç¹ûÄãÕýÔÚ×öÊýÑ§ÖÐµÄ
-¾ØÕóÔËËã£¬ÄÇÃ´ÒªÍê³ÉÀàËÆµÄÈÎÎñ£º
+çŽ°åœ¨ä½ å·²ç»çŸ¥é“å¦‚ä½•æ·»åŠ æ–°è¡Œäº†ã€‚é‚£ä¹ˆå¦‚ä½•æ·»åŠ æ–°åˆ—å‘¢ï¼Ÿå¦‚æžœä½ æ­£åœ¨åšæ•°å­¦ä¸­çš„
+çŸ©é˜µè¿ç®—ï¼Œé‚£ä¹ˆè¦å®Œæˆç±»ä¼¼çš„ä»»åŠ¡ï¼š
 
     for $x (1 .. 10) {
         for $y (1 .. 10) {
@@ -147,47 +149,47 @@ perllol - ²Ù×÷Êý×éµÄÊý×é£¨¶þÎ¬Êý×é£©
         $AoA[$x][20] += func2($x);
     }
 
-ÏëÒª·ÃÎÊµÄÄ³¸öÔªËØÊÇ²»ÊÇ´æÔÚÊÇÎÞ¹Ø½ôÒªµÄ£ºÒòÎªÈç¹û²»´æÔÚÄÇÃ´ Perl »á¸ø
-Äã×Ô¶¯´´½¨£¡ÐÂ´´½¨µÄÔªËØµÄÖµÊÇ C<undef>¡£
+æƒ³è¦è®¿é—®çš„æŸä¸ªå…ƒç´ æ˜¯ä¸æ˜¯å­˜åœ¨æ˜¯æ— å…³ç´§è¦çš„ï¼šå› ä¸ºå¦‚æžœä¸å­˜åœ¨é‚£ä¹ˆ Perl ä¼šç»™
+ä½ è‡ªåŠ¨åˆ›å»ºï¼æ–°åˆ›å»ºçš„å…ƒç´ çš„å€¼æ˜¯ C<undef>ã€‚
 
-Èç¹ûÄãÏëÌí¼Óµ½Ò»ÐÐµÄÄ©Î²£¬Äã¿ÉÒÔÕâÃ´×ö£º
+å¦‚æžœä½ æƒ³æ·»åŠ åˆ°ä¸€è¡Œçš„æœ«å°¾ï¼Œä½ å¯ä»¥è¿™ä¹ˆåšï¼š
 
-    # Ìí¼ÓÐÂÁÐµ½ÒÑ´æÔÚµÄÐÐ
+    # æ·»åŠ æ–°åˆ—åˆ°å·²å­˜åœ¨çš„è¡Œ
     push @{ $AoA[0] }, "wilma", "betty";
 
-×¢ÒâÎÒI<Ã»ÓÐ>ÕâÃ´Ð´£º
+æ³¨æ„æˆ‘I<æ²¡æœ‰>è¿™ä¹ˆå†™ï¼š
 
-    push $AoA[0], "wilma", "betty";  # ´íÎó£¡
+    push $AoA[0], "wilma", "betty";  # é”™è¯¯ï¼
 
-ÊÂÊµÉÏ£¬ÉÏÃæÕâ¾ä¸ù±¾¾ÍÃ»·¨Í¨¹ý±àÒë£¡ÎªÊ²Ã´£¿ÒòÎª push() µÄµÚÒ»¸ö²ÎÊý±Ø
-ÐëÊÇÒ»¸öÕæÊµµÄÊý×é£¬²»ÄÜÊÇÒýÓÃ¡£
+äº‹å®žä¸Šï¼Œä¸Šé¢è¿™å¥æ ¹æœ¬å°±æ²¡æ³•é€šè¿‡ç¼–è¯‘ï¼ä¸ºä»€ä¹ˆï¼Ÿå› ä¸º push() çš„ç¬¬ä¸€ä¸ªå‚æ•°å¿…
+é¡»æ˜¯ä¸€ä¸ªçœŸå®žçš„æ•°ç»„ï¼Œä¸èƒ½æ˜¯å¼•ç”¨ã€‚
 
-=head2 ·ÃÎÊºÍ´òÓ¡
+=head2 è®¿é—®å’Œæ‰“å°
 
-ÏÖÔÚÊÇ´òÓ¡¶þÎ¬Êý×éµÄÊ±ºòÁË¡£ÄÇÃ´ÔõÃ´´òÓ¡£¿ºÜ¼òµ¥£¬Èç¹ûÄãÖ»Ïë´òÓ¡Ò»¸öÔª
-ËØ£¬ÄÇÃ´¾ÍÕâÃ´À´Ò»ÏÂ£º
+çŽ°åœ¨æ˜¯æ‰“å°äºŒç»´æ•°ç»„çš„æ—¶å€™äº†ã€‚é‚£ä¹ˆæ€Žä¹ˆæ‰“å°ï¼Ÿå¾ˆç®€å•ï¼Œå¦‚æžœä½ åªæƒ³æ‰“å°ä¸€ä¸ªå…ƒ
+ç´ ï¼Œé‚£ä¹ˆå°±è¿™ä¹ˆæ¥ä¸€ä¸‹ï¼š
 
     print $AoA[0][0];
 
-Èç¹ûÄãÏë´òÓ¡Õû¸öÊý×é£¬ÄÇÄã¿É²»ÄÜÕâÑù£º
+å¦‚æžœä½ æƒ³æ‰“å°æ•´ä¸ªæ•°ç»„ï¼Œé‚£ä½ å¯ä¸èƒ½è¿™æ ·ï¼š
 
-    print @AoA;		# ´íÎó£¡
+    print @AoA;		# é”™è¯¯ï¼
 
-ÒòÎªÄãÕâÃ´×öÖ»ÄÜµÃµ½Ò»ÁÐÒýÓÃ£¬Perl ´ÓÀ´¶¼²»»á×Ô¶¯µØÎªÄã½âÒýÓÃ¡£×÷ÎªÌæ
-´ú£¬Äã±ØÐëµÃÅª¸öÑ­»·»òÕßÊÇË«ÖØÑ­»·¡£ÓÃ shell ·ç¸ñµÄ for() Óï¾ä¾Í¿ÉÒÔ
-´òÓ¡Õû¸ö¶þÎ¬Êý×é£º
+å› ä¸ºä½ è¿™ä¹ˆåšåªèƒ½å¾—åˆ°ä¸€åˆ—å¼•ç”¨ï¼ŒPerl ä»Žæ¥éƒ½ä¸ä¼šè‡ªåŠ¨åœ°ä¸ºä½ è§£å¼•ç”¨ã€‚ä½œä¸ºæ›¿
+ä»£ï¼Œä½ å¿…é¡»å¾—å¼„ä¸ªå¾ªçŽ¯æˆ–è€…æ˜¯åŒé‡å¾ªçŽ¯ã€‚ç”¨ shell é£Žæ ¼çš„ for() è¯­å¥å°±å¯ä»¥
+æ‰“å°æ•´ä¸ªäºŒç»´æ•°ç»„ï¼š
 
     for $aref ( @AoA ) {
         print "\t [ @$aref ],\n";
     }
 
-Èç¹ûÄãÒªÓÃÏÂ±êÀ´±éÀúµÄ»°£¬ÄãµÃÕâÃ´×ö£º
+å¦‚æžœä½ è¦ç”¨ä¸‹æ ‡æ¥éåŽ†çš„è¯ï¼Œä½ å¾—è¿™ä¹ˆåšï¼š
 
     for $i ( 0 .. $#AoA ) {
         print "\t elt $i is [ @{$AoA[$i]} ],\n";
     }
 
-»òÕßÕâÑùÓÃË«ÖØÑ­»·£¨×¢ÒâÄÚÑ­»·£©£º
+æˆ–è€…è¿™æ ·ç”¨åŒé‡å¾ªçŽ¯ï¼ˆæ³¨æ„å†…å¾ªçŽ¯ï¼‰ï¼š
 
     for $i ( 0 .. $#AoA ) {
         for $j ( 0 .. $#{$AoA[$i]} ) {
@@ -195,8 +197,8 @@ perllol - ²Ù×÷Êý×éµÄÊý×é£¨¶þÎ¬Êý×é£©
         }
     }
 
-ÈçÍ¬Äã¿´µ½µÄÒ»Ñù£¬ËüÓÐµã¶ù¸´ÔÓ¡£Õâ¾ÍÊÇÎªÊ²Ã´ÓÐÊ±ºòÓÃÁÙÊ±±äÁ¿ÄÜ¹»¿´ÆðÀ´
-¸ü¼òµ¥Ò»Ð©µÄÔ­Òò£º
+å¦‚åŒä½ çœ‹åˆ°çš„ä¸€æ ·ï¼Œå®ƒæœ‰ç‚¹å„¿å¤æ‚ã€‚è¿™å°±æ˜¯ä¸ºä»€ä¹ˆæœ‰æ—¶å€™ç”¨ä¸´æ—¶å˜é‡èƒ½å¤Ÿçœ‹èµ·æ¥
+æ›´ç®€å•ä¸€äº›çš„åŽŸå› ï¼š
 
     for $i ( 0 .. $#AoA ) {
         $aref = $AoA[$i];
@@ -205,7 +207,7 @@ perllol - ²Ù×÷Êý×éµÄÊý×é£¨¶þÎ¬Êý×é£©
         }
     }
 
-Å¶£¬ºÃÏñ»¹ÓÐµã¸´ÔÓ£¬ÄÇÃ´ÊÔÊÔÕâÑù£º
+å“¦ï¼Œå¥½åƒè¿˜æœ‰ç‚¹å¤æ‚ï¼Œé‚£ä¹ˆè¯•è¯•è¿™æ ·ï¼š
 
     for $i ( 0 .. $#AoA ) {
         $aref = $AoA[$i];
@@ -215,13 +217,13 @@ perllol - ²Ù×÷Êý×éµÄÊý×é£¨¶þÎ¬Êý×é£©
         }
     }
 
-=head2 ÇÐÆ¬
+=head2 åˆ‡ç‰‡
 
-ÇÐÆ¬ÊÇÖ¸Êý×éµÄÒ»²¿·Ö¡£Èç¹ûÄãÏëÒªµÃµ½¶àÎ¬Êý×éµÄÒ»¸öÇÐÆ¬£¬ÄÇÄãµÃ½øÐÐÒ»Ð©
-ÏÂ±êÔËËã¡£Í¨¹ý¼ýÍ·¿ÉÒÔ·½±ãµØÎªµ¥¸öÔªËØ½âÒýÓÃ£¬µ«ÊÇ·ÃÎÊÇÐÆ¬¾ÍÃ»ÓÐÕâÃ´ºÃ
-µÄÊÂÁË¡£µ±È»£¬ÎÒÃÇ¿ÉÒÔÍ¨¹ýÑ­»·À´È¡ÇÐÆ¬¡£
+åˆ‡ç‰‡æ˜¯æŒ‡æ•°ç»„çš„ä¸€éƒ¨åˆ†ã€‚å¦‚æžœä½ æƒ³è¦å¾—åˆ°å¤šç»´æ•°ç»„çš„ä¸€ä¸ªåˆ‡ç‰‡ï¼Œé‚£ä½ å¾—è¿›è¡Œä¸€äº›
+ä¸‹æ ‡è¿ç®—ã€‚é€šè¿‡ç®­å¤´å¯ä»¥æ–¹ä¾¿åœ°ä¸ºå•ä¸ªå…ƒç´ è§£å¼•ç”¨ï¼Œä½†æ˜¯è®¿é—®åˆ‡ç‰‡å°±æ²¡æœ‰è¿™ä¹ˆå¥½
+çš„äº‹äº†ã€‚å½“ç„¶ï¼Œæˆ‘ä»¬å¯ä»¥é€šè¿‡å¾ªçŽ¯æ¥å–åˆ‡ç‰‡ã€‚
 
-ÎÒÃÇÏÈÑÝÊ¾ÈçºÎÓÃÑ­»·À´»ñÈ¡ÇÐÆ¬¡£ÎÒÃÇ¼ÙÉè @AoA ±äÁ¿µÄÖµºÍÇ°ÃæÒ»Ñù¡£
+æˆ‘ä»¬å…ˆæ¼”ç¤ºå¦‚ä½•ç”¨å¾ªçŽ¯æ¥èŽ·å–åˆ‡ç‰‡ã€‚æˆ‘ä»¬å‡è®¾ @AoA å˜é‡çš„å€¼å’Œå‰é¢ä¸€æ ·ã€‚
 
     @part = ();
     $x = 4;
@@ -229,14 +231,14 @@ perllol - ²Ù×÷Êý×éµÄÊý×é£¨¶þÎ¬Êý×é£©
         push @part, $AoA[$x][$y];
     }
 
-Õâ¸öÑ­»·ÆäÊµ¿ÉÒÔÓÃÒ»¸öÇÐÆ¬²Ù×÷À´´úÌæ£º
+è¿™ä¸ªå¾ªçŽ¯å…¶å®žå¯ä»¥ç”¨ä¸€ä¸ªåˆ‡ç‰‡æ“ä½œæ¥ä»£æ›¿ï¼š
 
     @part = @{ $AoA[4] } [ 7..12 ];
 
-²»¹ýÕâ¸ö¿´ÉÏÈ¥ËÆºõÂÔÎ¢ÓÐÐ©¸´ÔÓ¡£
+ä¸è¿‡è¿™ä¸ªçœ‹ä¸ŠåŽ»ä¼¼ä¹Žç•¥å¾®æœ‰äº›å¤æ‚ã€‚
 
-ÏÂÃæÔÙ½ÌÄãÈçºÎ²ÅÄÜµÃµ½Ò»¸ö I<¶þÎ¬ÇÐÆ¬>, ±ÈÈç $x ´Ó 4 µ½ 8£¬$y ´Ó 7 µ½
-12£¬Ó¦¸ÃÔõÃ´Ð´£¿
+ä¸‹é¢å†æ•™ä½ å¦‚ä½•æ‰èƒ½å¾—åˆ°ä¸€ä¸ª I<äºŒç»´åˆ‡ç‰‡>, æ¯”å¦‚ $x ä»Ž 4 åˆ° 8ï¼Œ$y ä»Ž 7 åˆ°
+12ï¼Œåº”è¯¥æ€Žä¹ˆå†™ï¼Ÿ
 
     @newAoA = ();
     for ($startx = $x = 4; $x <= 8; $x++) {
@@ -245,23 +247,23 @@ perllol - ²Ù×÷Êý×éµÄÊý×é£¨¶þÎ¬Êý×é£©
         }
     }
 
-Ò²¿ÉÒÔÊ¡ÂÔµôÖÐ¼äµÄÄÇ²ãÑ­»·£º
+ä¹Ÿå¯ä»¥çœç•¥æŽ‰ä¸­é—´çš„é‚£å±‚å¾ªçŽ¯ï¼š
 
     for ($x = 4; $x <= 8; $x++) {
         push @newAoA, [ @{ $AoA[$x] } [ 7..12 ] ];
     }
 
-ÆäÊµÓÃ map º¯Êý¿ÉÒÔ¸ü¼Ó¼òÁ·£º
+å…¶å®žç”¨ map å‡½æ•°å¯ä»¥æ›´åŠ ç®€ç»ƒï¼š
 
     @newAoA = map { [ @{ $AoA[$_] } [ 7..12 ] ] } 4 .. 8;
 
-ËäÈ»ÄãµÄ¾­ÀíÒ²Ðí»á±§Ô¹ÕâÖÖÄÑÒÔÀí½âµÄ´úÂë¿ÉÄÜ»á´øÀ´°²È«Òþ»¼£¬
-È»¶øÕâÖÖ¹Ûµã»¹ÊÇÆÄÓÐÕùÒéµÄ£¨ÐËÐí»¹¿ÉÒÔ¸ü¼Ó°²È«Ò²Ëµ²»¶¨ ^_^£©¡£
-»»ÁËÊÇÎÒ£¬ÎÒ»á°ÑËüÃÇ·Å½øÒ»¸öº¯ÊýÖÐÊµÏÖ£º
+è™½ç„¶ä½ çš„ç»ç†ä¹Ÿè®¸ä¼šæŠ±æ€¨è¿™ç§éš¾ä»¥ç†è§£çš„ä»£ç å¯èƒ½ä¼šå¸¦æ¥å®‰å…¨éšæ‚£ï¼Œ
+ç„¶è€Œè¿™ç§è§‚ç‚¹è¿˜æ˜¯é¢‡æœ‰äº‰è®®çš„ï¼ˆå…´è®¸è¿˜å¯ä»¥æ›´åŠ å®‰å…¨ä¹Ÿè¯´ä¸å®š ^_^ï¼‰ã€‚
+æ¢äº†æ˜¯æˆ‘ï¼Œæˆ‘ä¼šæŠŠå®ƒä»¬æ”¾è¿›ä¸€ä¸ªå‡½æ•°ä¸­å®žçŽ°ï¼š
 
     @newAoA = splice_2D( \@AoA, 4 => 8, 7 => 12 );
     sub splice_2D {
-        my $lrr = shift; 	# Ö¸Ïò¶þÎ¬Êý×éµÄÒýÓÃ
+        my $lrr = shift; 	# æŒ‡å‘äºŒç»´æ•°ç»„çš„å¼•ç”¨
         my ($x_lo, $x_hi,
             $y_lo, $y_hi) = @_;
 
@@ -271,31 +273,31 @@ perllol - ²Ù×÷Êý×éµÄÊý×é£¨¶þÎ¬Êý×é£©
     }
 
 
-=head1 ²Î¼û
+=head1 å‚è§
 
 perldata(1), perlref(1), perldsc(1)
 
-=head1 ×÷Õß
+=head1 ä½œè€…
 
 Tom Christiansen <F<tchrist@perl.com>>
 
 Last update: Thu Jun  4 16:16:23 MDT 1998
 
-=head1 ·­ÒëÕß¼°·­ÒëÉùÃ÷
+=head1 ç¿»è¯‘è€…åŠç¿»è¯‘å£°æ˜Ž
 
-±¾ÎÄÓÉ flw ("flw@cpan.org") ·­Òë£¬·­Òë³É¹ûÊ×´Î³öÏÖÔÚ *ÖÐ¹ú Perl Ð­»á*
-http://www.perlchina.org) µÄÐ­×÷¿ª·¢Æ½Ì¨ÉÏ¡£
+æœ¬æ–‡ç”± flw ("flw@cpan.org") ç¿»è¯‘ï¼Œç¿»è¯‘æˆæžœé¦–æ¬¡å‡ºçŽ°åœ¨ *ä¸­å›½ Perl åä¼š*
+http://www.perlchina.org) çš„åä½œå¼€å‘å¹³å°ä¸Šã€‚
 
-PerlChina.org ±¾×Å¡°ÔÚ¹úÄÚÍÆ¹ã Perl¡± µÄÄ¿µÄ£¬×éÖ¯ÈËÔ±·­Òë±¾ÎÄ¡£¶ÁÕß¿É
-ÒÔÔÚ×ñÊØÔ­×÷ÕßÐí¿ÉÐ­Òé¡¢×ðÖØÔ­×÷Õß¼°Òë×÷ÕßÀÍ¶¯³É¹ûµÄÇ°ÌáÏÂ£¬ÈÎÒâ·¢²¼»ò
-ÐÞ¸Ä±¾ÎÄ¡£
+PerlChina.org æœ¬ç€â€œåœ¨å›½å†…æŽ¨å¹¿ Perlâ€ çš„ç›®çš„ï¼Œç»„ç»‡äººå‘˜ç¿»è¯‘æœ¬æ–‡ã€‚è¯»è€…å¯
+ä»¥åœ¨éµå®ˆåŽŸä½œè€…è®¸å¯åè®®ã€å°Šé‡åŽŸä½œè€…åŠè¯‘ä½œè€…åŠ³åŠ¨æˆæžœçš„å‰æä¸‹ï¼Œä»»æ„å‘å¸ƒæˆ–
+ä¿®æ”¹æœ¬æ–‡ã€‚
 
-±¾ÎÄ×÷ÕßÓÃÒ»ÖÖÇáËÉµØ¿ÚÎÇ¼òÒª½éÉÜÁËÒ»ÏÂ¶þÎ¬Êý×éµÄÓÃ·¨£¬µ«ÊÇÕýÒòÈç´Ë£¬ÎÄ
-ÖÐÓÐÐ©ÄÚÈÝÖ±Òë¹ýÀ´·´¶øºÜÞÖ¿Ú¡¢ºÜÄÑ¶®£¨±Ï¾¹ÖÐÎ÷·½ÎÄ»¯²»Í¬Âï£©£¬Òò´ËÒëÕß
-ÔÚ·­ÒëÊ±£¬¶ÔÔ­ÎÄÓÐ½Ï¶àµÄÐÞ¸Ä¡£Ï²»¶ÔÄ¶ÁÓ¢ÎÄÔ­°æÊ¤¹ýÏ²»¶·­Òë°æµÄÅóÓÑÃÇ£¬
-¿ÉÒÔÖ±½Ó¿´Ô­°æ ^_^£¬Í¬Ê±Ò²Ï£ÍûÄÜ¹»Àí½âÒëÕßµÄÒ»Æª¿àÐÄ£¬¶ø²»ÒªÔÚ±³ºóÂîÎÒ
-·­ÒëµÃ²»¶Ô¾ÍÊÇÁË¡£
+æœ¬æ–‡ä½œè€…ç”¨ä¸€ç§è½»æ¾åœ°å£å»ç®€è¦ä»‹ç»äº†ä¸€ä¸‹äºŒç»´æ•°ç»„çš„ç”¨æ³•ï¼Œä½†æ˜¯æ­£å› å¦‚æ­¤ï¼Œæ–‡
+ä¸­æœ‰äº›å†…å®¹ç›´è¯‘è¿‡æ¥åè€Œå¾ˆæ‹—å£ã€å¾ˆéš¾æ‡‚ï¼ˆæ¯•ç«Ÿä¸­è¥¿æ–¹æ–‡åŒ–ä¸åŒå˜›ï¼‰ï¼Œå› æ­¤è¯‘è€…
+åœ¨ç¿»è¯‘æ—¶ï¼Œå¯¹åŽŸæ–‡æœ‰è¾ƒå¤šçš„ä¿®æ”¹ã€‚å–œæ¬¢é˜…è¯»è‹±æ–‡åŽŸç‰ˆèƒœè¿‡å–œæ¬¢ç¿»è¯‘ç‰ˆçš„æœ‹å‹ä»¬ï¼Œ
+å¯ä»¥ç›´æŽ¥çœ‹åŽŸç‰ˆ ^_^ï¼ŒåŒæ—¶ä¹Ÿå¸Œæœ›èƒ½å¤Ÿç†è§£è¯‘è€…çš„ä¸€ç¯‡è‹¦å¿ƒï¼Œè€Œä¸è¦åœ¨èƒŒåŽéª‚æˆ‘
+ç¿»è¯‘å¾—ä¸å¯¹å°±æ˜¯äº†ã€‚
 
-Ï£Íû±¾ÎÄÄÜ¶ÔÓ¢ÎÄ²»ºÃµÄÅóÓÑÃÇÓÐËù°ïÖú¡£
+å¸Œæœ›æœ¬æ–‡èƒ½å¯¹è‹±æ–‡ä¸å¥½çš„æœ‹å‹ä»¬æœ‰æ‰€å¸®åŠ©ã€‚
 
-Èç¹ûÄã¶Ô±¾ÎÄÓÐÈÎºÎÒâ¼û£¬»¶Ó­À´ÐÅÖ¸½Ì¡£±¾ÈË·Ç³£»¶Ó­Óë¸÷Î»½»Á÷¡£
+å¦‚æžœä½ å¯¹æœ¬æ–‡æœ‰ä»»ä½•æ„è§ï¼Œæ¬¢è¿Žæ¥ä¿¡æŒ‡æ•™ã€‚æœ¬äººéžå¸¸æ¬¢è¿Žä¸Žå„ä½äº¤æµã€‚
